--- a/portal/src/main/resources/i18n/messages_az.properties
+++ b/portal/src/main/resources/i18n/messages_az.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
+_language_select.italian=İtalyan dili
+_metadata.dc.contributor=İanəçi
+_metadata.dc.coverage=Sərhəd
+_metadata.dc.creator=Müəllif
+_metadata.dc.date=Tarix
+_metadata.dc.description=Təsvir
+_metadata.dc.language=Dil
+_metadata.dc.rights=Hüquqlar
+_metadata.dc.subject=Mövzu
+_metadata.dc.title=Sərlövhə
+_metadata.dc.type=Növ
+_metadata.dcterms.alternative=İkinci sərlövhə
+_metadata.dcterms.conforms.to=Uyğun gəlir
+_metadata.dcterms.has.format=Formatı var
+_metadata.dcterms.has.part=Təşkil olunub
+_metadata.dcterms.is.format.of=Formatıdır
+_metadata.dcterms.is.referenced.by=Əsaslanıb
+_metadata.dcterms.is.replaced.by=Yerləşdirilib
+_metadata.dcterms.ispart.of=Hissəsidir
+_metadata.dcterms.provenance=Provenance
+_metadata.dcterms.references=Əsaslanmışlar
+_metadata.dcterms.replaces=Əvəz edir
+_metadata.dcterms.requires=Tələb edir
+_metadata.dcterms.spatial=Məkan sərhədi
+_metadata.dcterms.temporal=Müvəqqəti sərhəd
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.last.name=Last name
 _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
@@ -148,7 +174,9 @@ _unused.add=Add
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
+_unused.bosnia.and.herzegovina=Bosnia and Herzegovina
 _unused.browse.through.time=Browse through time
+_unused.other=Digər
 _unused.privacy=Privacy
 _unused.remember.me=Remember me on this computer
 _unused.remove=Remove
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Share your ideas
 _unused.show.all=Show all
 _unused.sign.in=Sign in
 _unused.site.map=Sitemap
+_unused.slovenia=Sloveniya
 _unused.sound=Sound
 _unused.tag.added=Tag added
 _unused.tag.addition.failed=Tag addition failed
@@ -170,107 +199,78 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Avstriya
-azerbaijan_t=Azerbaijan
-belgium_t=Belçika
-bosniaAndHerzegovina_t=Bosnia and Herzegovina
-bulgaria_t=Bolqarıstan
-croatia_t=Xorvatiya
-croatian_t=Xorvat dili
-cyprus_t=Kipr
-czech_t=Çex Respublikası
-czechlanguage_t=Çex dili
-danish_t=Danimarka dili
-dc_contributor_t=İanəçi
-dc_coverage_t=Sərhəd
-dc_creator_t=Müəllif
-dc_date_t=Tarix
-dc_description_t=Təsvir
 dc_format_t=Format
 dc_identifier_t=İdentifikator
-dc_language_t=Dil
 dc_publisher_t=Naşir
 dc_relation_t=Əlaqə
-dc_rights_t=Hüquqlar
 dc_source_t=Mənbə
-dc_subject_t=Mövzu
-dc_title_t=Sərlövhə
-dc_type_t=Növ
-dcterms_alternative_t=İkinci sərlövhə
-dcterms_conformsTo_t=Uyğun gəlir
-dcterms_hasFormat_t=Formatı var
-dcterms_hasPart_t=Təşkil olunub
-dcterms_isFormatOf_t=Formatıdır
-dcterms_isPartOf_t=Hissəsidir
-dcterms_isReferencedBy_t=Əsaslanıb
-dcterms_isReplacedBy_t=Yerləşdirilib
-dcterms_provenance_t=Provenance
-dcterms_references_t=Əsaslanmışlar
-dcterms_replaces_t=Əvəz edir
-dcterms_requires_t=Tələb edir
-dcterms_spatial_t=Məkan sərhədi
-dcterms_temporal_t=Müvəqqəti sərhəd
-denmark_t=Danimarka
-dutch_t=Niderland dili
-english_t=İngilis(ing)
-estonia_t=Estoniya
-estonian_t=Eston dili
-finland_t=Finlandiya
-finnish_t=Fin dili
-france_t=Fransa
-french_t=Fransız dili
-georgia_t=Georgia
-german_t=Alman dili
-germany_t=Almaniya
-greece_t=Yunanıstan
-greek_t=Yunan dili
-hungarian_t=Macar dili
-hungary_t=Macarıstan
-iceland_t=İslandiya
-icelandic_t=İsland dili
-ireland_t=İrlandiya
-italian_t=İtalyan dili
-italyFlorence_t=İtaliya-Florensiya
-italyRome_t=İtaliya-Roma
 languageDropDownList_t=Dil
-lastName_t=Last name
-latvia_t=Latviya
-latvian_t=Latiş dili
-liechtenstein_t=Lixtenşteyn
-lithuania_t=Litva
-lithuanian_t=Litva dili
-luxembourg_t=Lüksemburq
-luxemburgish_t=Lüksemburq dili
-malta_t=Malta
-maltese_t=Malta dili
-moldova_t=Moldova
-netherlands_t=Niderland
-norway_t=Norveç
-norwegian_t=Norveç dili
-other_t=Digər
-poland_t=Polşa
-polish_t=Polyak dili
-portugal_t=Portuqaliya
-portuguese_t=Portuqal dili
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Avstriya
+locale.azerbaijan=Azerbaijan
+locale.belgium=Belçika
+locale.bulgaria=Bolqarıstan
+locale.croatia=Xorvatiya
+locale.croatian=Xorvat dili
+locale.cyprus=Kipr
+locale.czech=Çex Respublikası
+locale.czechlanguage=Çex dili
+locale.danish=Danimarka dili
+locale.denmark=Danimarka
+locale.dutch=Niderland dili
+locale.english=İngilis(ing)
+locale.estonia=Estoniya
+locale.estonian=Eston dili
+locale.finland=Finlandiya
+locale.finnish=Fin dili
+locale.france=Fransa
+locale.french=Fransız dili
+locale.georgia=Georgia
+locale.german=Alman dili
+locale.germany=Almaniya
+locale.greece=Yunanıstan
+locale.greek=Yunan dili
+locale.hungarian=Macar dili
+locale.hungary=Macarıstan
+locale.iceland=İslandiya
+locale.icelandic=İsland dili
+locale.ireland=İrlandiya
+locale.italy.florence=İtaliya-Florensiya
+locale.italy.rome=İtaliya-Roma
+locale.latvia=Latviya
+locale.latvian=Latiş dili
+locale.liechtenstein=Lixtenşteyn
+locale.lithuania=Litva
+locale.lithuanian=Litva dili
+locale.luxembourg=Lüksemburq
+locale.luxemburgish=Lüksemburq dili
+locale.malta=Malta
+locale.maltese=Malta dili
+locale.moldova=Moldova
+locale.netherlands=Niderland
+locale.norway=Norveç
+locale.norwegian=Norveç dili
+locale.poland=Polşa
+locale.polish=Polyak dili
+locale.portugal=Portuqaliya
+locale.portuguese=Portuqal dili
+locale.romania=Rumıniya
+locale.romanian=Rumın dili
+locale.russia.moscow=Rusiya - Moskva
+locale.russia.st.petersburg=Russia - Saint Petersburg
+locale.russian=Rus dili
+locale.serbia=Serbiya
+locale.serbian=Serb dili
+locale.slovak=Slovak dili
+locale.slovakia=Slovakiya
+locale.slovenian=Slavyan dili
+locale.spain=İspaniya
+locale.spanish=İspan dili
+locale.sweden=İsveç
+locale.swedish=İsveç dili
+locale.switzerland=İsveçrə
+locale.turkey=Turkey
+locale.uk=Birləşmiş Krallıq
+locale.ukraine=Ukraine
 registrationSucceed_t=Siz uğurla qeydiyyatdan keçdiniz
-romania_t=Rumıniya
-romanian_t=Rumın dili
-russiaMoscow_t=Rusiya - Moskva
-russiaStPetersburg_t=Russia - Saint Petersburg
-russian_t=Rus dili
-serbia_t=Serbiya
-serbian_t=Serb dili
-slovak_t=Slovak dili
-slovakia_t=Slovakiya
-slovenia_t=Sloveniya
-slovenian_t=Slavyan dili
-spain_t=İspaniya
-spanish_t=İspan dili
-sweden_t=İsveç
-swedish_t=İsveç dili
-switzerland_t=İsveçrə
-turkey_t=Turkey
-uk_t=Birləşmiş Krallıq
-ukraine_t=Ukraine
