--- a/portal/src/main/resources/i18n/messages_bg.properties
+++ b/portal/src/main/resources/i18n/messages_bg.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Търсенето не можа да се запише
 _header.actions=Действия
 _header.relatedcontent=Подобно съдържание
+_language_select.italian=Италиански
+_metadata.dc.contributor=Участник
+_metadata.dc.coverage=Обсег
+_metadata.dc.creator=Автор
+_metadata.dc.date=Дата
+_metadata.dc.description=Описание
+_metadata.dc.language=Език
+_metadata.dc.rights=Права
+_metadata.dc.subject=Тема
+_metadata.dc.title=Заглавие
+_metadata.dc.type=Вид
+_metadata.dcterms.alternative=Алтернативно заглавие
+_metadata.dcterms.conforms.to=Следвам
+_metadata.dcterms.has.format=Има формат
+_metadata.dcterms.has.part=Има част
+_metadata.dcterms.is.format.of=Е формат от
+_metadata.dcterms.is.referenced.by=Е снабден с препратки от
+_metadata.dcterms.is.replaced.by=Е заместено от
+_metadata.dcterms.ispart.of=Е част от
+_metadata.dcterms.provenance=Произход
+_metadata.dcterms.references=Забележки
+_metadata.dcterms.replaces=Замести
+_metadata.dcterms.requires=Изисква
+_metadata.dcterms.spatial=Пространствен обхват
+_metadata.dcterms.temporal=Преходен обхват
 _mine.date.saved=Датата е запазена
 _mine.delete=Изтрий
+_mine.last.name=Фамилия
 _mine.saved.items=Запазени обекти
 _mine.saved.searches=Запазени търсения
 _mine.saved.tags=Запазени тагове
@@ -148,7 +174,9 @@ _unused.add=Добави
 _unused.aggregator.explain=Агрегаторът събира материали сред множество други организации, дава достъп до тях на своя уебсайт и ги насочва към Europeana.
 _unused.altprint=Отпечатай страницата
 _unused.aplacetoshareideas=място за вдъхновение и идеи. Търси в културните сбирки на Европа, свързвай се с други потребителски пътечки и споделяй своите открития.
+_unused.bosnia.and.herzegovina=Босна и Херцеговина
 _unused.browse.through.time=Търси във времето
+_unused.other=Друг
 _unused.privacy=Защита на личното пространство
 _unused.remember.me=Запомни ме на този компютър
 _unused.remove=Изтрий
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Сподели идеите си
 _unused.show.all=Покажи всички
 _unused.sign.in=Впиши се
 _unused.site.map=Карта на сайта
+_unused.slovenia=Словения
 _unused.sound=Звуков файл
 _unused.tag.added=Тагът е добавен
 _unused.tag.addition.failed=Добавянето на тага пропадна
@@ -170,107 +199,78 @@ _unused.view.as.xml=Виж във вид на XML
 _unused.view.with.labels=Виж с етикетите
 _unused.view.without.labels=Виж без етикетите
 _unused.you.have.search.for=Вие търсехте...
-albania_t=Албания
-armenia_t=Армения
-austria_t=Австрия
-azerbaijan_t=Азербайджан
-belgium_t=Белгия
-bosniaAndHerzegovina_t=Босна и Херцеговина
-bulgaria_t=България
-croatia_t=Хърватска
-croatian_t=Хърватски
-cyprus_t=Кипър
-czech_t=Чехска Република
-czechlanguage_t=Чехски
-danish_t=Датски
-dc_contributor_t=Участник
-dc_coverage_t=Обсег
-dc_creator_t=Автор
-dc_date_t=Дата
-dc_description_t=Описание
 dc_format_t=Формат
 dc_identifier_t=Идентификатор
-dc_language_t=Език
 dc_publisher_t=Издател
 dc_relation_t=Връзка
-dc_rights_t=Права
 dc_source_t=Източник
-dc_subject_t=Тема
-dc_title_t=Заглавие
-dc_type_t=Вид
-dcterms_alternative_t=Алтернативно заглавие
-dcterms_conformsTo_t=Следвам
-dcterms_hasFormat_t=Има формат
-dcterms_hasPart_t=Има част
-dcterms_isFormatOf_t=Е формат от
-dcterms_isPartOf_t=Е част от
-dcterms_isReferencedBy_t=Е снабден с препратки от
-dcterms_isReplacedBy_t=Е заместено от
-dcterms_provenance_t=Произход
-dcterms_references_t=Забележки
-dcterms_replaces_t=Замести
-dcterms_requires_t=Изисква
-dcterms_spatial_t=Пространствен обхват
-dcterms_temporal_t=Преходен обхват
-denmark_t=Дания
-dutch_t=Холандски
-english_t=Английски
-estonia_t=Естония
-estonian_t=Естонски
-finland_t=Финландия
-finnish_t=Финландски
-france_t=Франция
-french_t=Френски
-georgia_t=Грузия
-german_t=Немски
-germany_t=Германия
-greece_t=Гърция
-greek_t=Гръцки
-hungarian_t=Унгарски
-hungary_t=Унгария
-iceland_t=Исландия
-icelandic_t=Исландски
-ireland_t=Ирландия
-italian_t=Италиански
-italyFlorence_t=Италия-Флоренция
-italyRome_t=Италия-Рим
 languageDropDownList_t=Език
-lastName_t=Фамилия
-latvia_t=Латвия
-latvian_t=Латвийски
-liechtenstein_t=Лихтенщайн
-lithuania_t=Литва
-lithuanian_t=Литовски
-luxembourg_t=Люксембург
-luxemburgish_t=Люксембургски
-malta_t=Малта
-maltese_t=Малтийски
-moldova_t=Молдова
-netherlands_t=Холандия
-norway_t=Норвегия
-norwegian_t=Норвежки
-other_t=Друг
-poland_t=Полша
-polish_t=Полски
-portugal_t=Португалия
-portuguese_t=Португалски
+locale.albania=Албания
+locale.armenia=Армения
+locale.austria=Австрия
+locale.azerbaijan=Азербайджан
+locale.belgium=Белгия
+locale.bulgaria=България
+locale.croatia=Хърватска
+locale.croatian=Хърватски
+locale.cyprus=Кипър
+locale.czech=Чехска Република
+locale.czechlanguage=Чехски
+locale.danish=Датски
+locale.denmark=Дания
+locale.dutch=Холандски
+locale.english=Английски
+locale.estonia=Естония
+locale.estonian=Естонски
+locale.finland=Финландия
+locale.finnish=Финландски
+locale.france=Франция
+locale.french=Френски
+locale.georgia=Грузия
+locale.german=Немски
+locale.germany=Германия
+locale.greece=Гърция
+locale.greek=Гръцки
+locale.hungarian=Унгарски
+locale.hungary=Унгария
+locale.iceland=Исландия
+locale.icelandic=Исландски
+locale.ireland=Ирландия
+locale.italy.florence=Италия-Флоренция
+locale.italy.rome=Италия-Рим
+locale.latvia=Латвия
+locale.latvian=Латвийски
+locale.liechtenstein=Лихтенщайн
+locale.lithuania=Литва
+locale.lithuanian=Литовски
+locale.luxembourg=Люксембург
+locale.luxemburgish=Люксембургски
+locale.malta=Малта
+locale.maltese=Малтийски
+locale.moldova=Молдова
+locale.netherlands=Холандия
+locale.norway=Норвегия
+locale.norwegian=Норвежки
+locale.poland=Полша
+locale.polish=Полски
+locale.portugal=Португалия
+locale.portuguese=Португалски
+locale.romania=Румъния
+locale.romanian=Румънски
+locale.russia.moscow=Русия - Москва
+locale.russia.st.petersburg=Русия - Санкт Петербург
+locale.russian=Руски
+locale.serbia=Сърбия
+locale.serbian=Сръбски
+locale.slovak=Словашки
+locale.slovakia=Словакия
+locale.slovenian=Словенски
+locale.spain=Испания
+locale.spanish=Испански
+locale.sweden=Швеция
+locale.swedish=Шведски
+locale.switzerland=Швейцария
+locale.turkey=Турция
+locale.uk=Великобритания
+locale.ukraine=Украйна
 registrationSucceed_t=Регистрирахте се успешно
-romania_t=Румъния
-romanian_t=Румънски
-russiaMoscow_t=Русия - Москва
-russiaStPetersburg_t=Русия - Санкт Петербург
-russian_t=Руски
-serbia_t=Сърбия
-serbian_t=Сръбски
-slovak_t=Словашки
-slovakia_t=Словакия
-slovenia_t=Словения
-slovenian_t=Словенски
-spain_t=Испания
-spanish_t=Испански
-sweden_t=Швеция
-swedish_t=Шведски
-switzerland_t=Швейцария
-turkey_t=Турция
-uk_t=Великобритания
-ukraine_t=Украйна
