--- a/portal/src/main/resources/i18n/messages_ca.properties
+++ b/portal/src/main/resources/i18n/messages_ca.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Guardar la cerca ha fallat
 _header.actions=Accions
 _header.relatedcontent=Contingut relacionat
+_language_select.italian=Italià
+_metadata.dc.contributor=Contribuïdor
+_metadata.dc.coverage=Abast
+_metadata.dc.creator=Autor
+_metadata.dc.date=Data
+_metadata.dc.description=Descripció
+_metadata.dc.language=Llengua
+_metadata.dc.rights=Drets
+_metadata.dc.subject=Matèria
+_metadata.dc.title=Títol
+_metadata.dc.type=Tipus
+_metadata.dcterms.alternative=Títol alternatiu
+_metadata.dcterms.conforms.to=D'acord amb
+_metadata.dcterms.has.format=Té format
+_metadata.dcterms.has.part=Té com a part
+_metadata.dcterms.is.format.of=És un format de
+_metadata.dcterms.is.referenced.by=Referenciat per
+_metadata.dcterms.is.replaced.by=Es substituït per
+_metadata.dcterms.ispart.of=És part de
+_metadata.dcterms.provenance=Procedència
+_metadata.dcterms.references=Referències
+_metadata.dcterms.replaces=Substitueix
+_metadata.dcterms.requires=Requereix
+_metadata.dcterms.spatial=Abast espacial
+_metadata.dcterms.temporal=Abast temporal
 _mine.date.saved=Data guardada
 _mine.delete=Esborrar
+_mine.last.name=Cognom
 _mine.saved.items=Ítems guardats
 _mine.saved.searches=Cerques guardades
 _mine.saved.tags=Etiquetes guardades
@@ -148,7 +174,9 @@ _unused.add=Afegir
 _unused.aggregator.explain=*Un agregador recull material d'un conjunt de contribuents, el mostra en el seu propi lloc web i a la vegada el canalitza cap a Europeana.
 _unused.altprint=Imprimir aquesta pàgina
 _unused.aplacetoshareideas=un lloc per a la inspiració i les idees. Cerqueu entre col·leccions culturals d'Europa, connecteu-vos a camins d'altres usuaris i compartiu els vostres descobriments.
+_unused.bosnia.and.herzegovina=Bòsnia i Hercegovina
 _unused.browse.through.time=Navegueu pel temps
+_unused.other=Altre
 _unused.privacy=Privacitat
 _unused.remember.me=Recordeu-me en aquest ordinador
 _unused.remove=Eliminar
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Compartiu les vostres idees
 _unused.show.all=Mostrar tot
 _unused.sign.in=Inscriure's
 _unused.site.map=Mapa del lloc
+_unused.slovenia=Eslovènia
 _unused.sound=So
 _unused.tag.added=Etiqueta afegida
 _unused.tag.addition.failed=Afegir etiqueta ha fallat
@@ -170,107 +199,78 @@ _unused.view.as.xml=Visualització en XML
 _unused.view.with.labels=Visualització amb etiquetes
 _unused.view.without.labels=Visualització sense etiquetes
 _unused.you.have.search.for=Heu cercat
-albania_t=Albània
-armenia_t=Armènia
-austria_t=Àustria
-azerbaijan_t=Azerbaidjan
-belgium_t=Bèlgica
-bosniaAndHerzegovina_t=Bòsnia i Hercegovina
-bulgaria_t=Bulgària
-croatia_t=Croàcia
-croatian_t=Croat
-cyprus_t=Xipre
-czech_t=República Txeca
-czechlanguage_t=Txec
-danish_t=Danès
-dc_contributor_t=Contribuïdor
-dc_coverage_t=Abast
-dc_creator_t=Autor
-dc_date_t=Data
-dc_description_t=Descripció
 dc_format_t=Format
 dc_identifier_t=Identificador
-dc_language_t=Llengua
 dc_publisher_t=Editor
 dc_relation_t=Relació
-dc_rights_t=Drets
 dc_source_t=Font
-dc_subject_t=Matèria
-dc_title_t=Títol
-dc_type_t=Tipus
-dcterms_alternative_t=Títol alternatiu
-dcterms_conformsTo_t=D'acord amb
-dcterms_hasFormat_t=Té format
-dcterms_hasPart_t=Té com a part
-dcterms_isFormatOf_t=És un format de
-dcterms_isPartOf_t=És part de
-dcterms_isReferencedBy_t=Referenciat per
-dcterms_isReplacedBy_t=Es substituït per
-dcterms_provenance_t=Procedència
-dcterms_references_t=Referències
-dcterms_replaces_t=Substitueix
-dcterms_requires_t=Requereix
-dcterms_spatial_t=Abast espacial
-dcterms_temporal_t=Abast temporal
-denmark_t=Dinamarca
-dutch_t=Neerlandès
-english_t=Anglès
-estonia_t=Estònia
-estonian_t=Estonià
-finland_t=Finlàndia
-finnish_t=Finès
-france_t=França
-french_t=Francès
-georgia_t=Georgia
-german_t=Alemany
-germany_t=Alemanya
-greece_t=Grècia
-greek_t=Grec
-hungarian_t=Hongarès
-hungary_t=Hongria
-iceland_t=Islàndia
-icelandic_t=Islandès
-ireland_t=Irlanda
-italian_t=Italià
-italyFlorence_t=Itàlia-Florència
-italyRome_t=Itàlia-Roma
 languageDropDownList_t=Llengua
-lastName_t=Cognom
-latvia_t=Letònia
-latvian_t=Letó
-liechtenstein_t=Liechtenstein
-lithuania_t=Lituània
-lithuanian_t=Lituà
-luxembourg_t=Luxemburg
-luxemburgish_t=Luxemburguès
-malta_t=Malta
-maltese_t=Maltès
-moldova_t=Moldàvia
-netherlands_t=Països Baixos
-norway_t=Noruega
-norwegian_t=Norueg
-other_t=Altre
-poland_t=Polònia
-polish_t=Polonès
-portugal_t=Portugal
-portuguese_t=Portuguès
+locale.albania=Albània
+locale.armenia=Armènia
+locale.austria=Àustria
+locale.azerbaijan=Azerbaidjan
+locale.belgium=Bèlgica
+locale.bulgaria=Bulgària
+locale.croatia=Croàcia
+locale.croatian=Croat
+locale.cyprus=Xipre
+locale.czech=República Txeca
+locale.czechlanguage=Txec
+locale.danish=Danès
+locale.denmark=Dinamarca
+locale.dutch=Neerlandès
+locale.english=Anglès
+locale.estonia=Estònia
+locale.estonian=Estonià
+locale.finland=Finlàndia
+locale.finnish=Finès
+locale.france=França
+locale.french=Francès
+locale.georgia=Georgia
+locale.german=Alemany
+locale.germany=Alemanya
+locale.greece=Grècia
+locale.greek=Grec
+locale.hungarian=Hongarès
+locale.hungary=Hongria
+locale.iceland=Islàndia
+locale.icelandic=Islandès
+locale.ireland=Irlanda
+locale.italy.florence=Itàlia-Florència
+locale.italy.rome=Itàlia-Roma
+locale.latvia=Letònia
+locale.latvian=Letó
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Lituània
+locale.lithuanian=Lituà
+locale.luxembourg=Luxemburg
+locale.luxemburgish=Luxemburguès
+locale.malta=Malta
+locale.maltese=Maltès
+locale.moldova=Moldàvia
+locale.netherlands=Països Baixos
+locale.norway=Noruega
+locale.norwegian=Norueg
+locale.poland=Polònia
+locale.polish=Polonès
+locale.portugal=Portugal
+locale.portuguese=Portuguès
+locale.romania=Romania
+locale.romanian=Romanès
+locale.russia.moscow=Rússia-Moscú
+locale.russia.st.petersburg=Rússia-Sant Petersburg
+locale.russian=Rus
+locale.serbia=Sèrbia
+locale.serbian=Serbi
+locale.slovak=Eslovac
+locale.slovakia=Eslovàquia
+locale.slovenian=Eslovè
+locale.spain=Espanya
+locale.spanish=Espanyol
+locale.sweden=Suècia
+locale.swedish=Suec
+locale.switzerland=Suïssa
+locale.turkey=Turquia
+locale.uk=Regne Unit
+locale.ukraine=Ucraïna
 registrationSucceed_t=Us heu registrat amb èxit
-romania_t=Romania
-romanian_t=Romanès
-russiaMoscow_t=Rússia-Moscú
-russiaStPetersburg_t=Rússia-Sant Petersburg
-russian_t=Rus
-serbia_t=Sèrbia
-serbian_t=Serbi
-slovak_t=Eslovac
-slovakia_t=Eslovàquia
-slovenia_t=Eslovènia
-slovenian_t=Eslovè
-spain_t=Espanya
-spanish_t=Espanyol
-sweden_t=Suècia
-swedish_t=Suec
-switzerland_t=Suïssa
-turkey_t=Turquia
-uk_t=Regne Unit
-ukraine_t=Ucraïna
