--- a/portal/src/main/resources/i18n/messages_cs.properties
+++ b/portal/src/main/resources/i18n/messages_cs.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Chyba ukládání výsledků vyhledávání
 _header.actions=Výběr akcí
 _header.relatedcontent=Příbuzný obsah
+_language_select.italian=Italština (ita)
+_metadata.dc.contributor=Přispěvatel
+_metadata.dc.coverage=Pokrytí
+_metadata.dc.creator=Autor
+_metadata.dc.date=Datum
+_metadata.dc.description=Popis
+_metadata.dc.language=Jazyk
+_metadata.dc.rights=Práva
+_metadata.dc.subject=Předmět
+_metadata.dc.title=Název
+_metadata.dc.type=Typ
+_metadata.dcterms.alternative=Alternativní název
+_metadata.dcterms.conforms.to=Odpovídá
+_metadata.dcterms.has.format=Je ve formátu
+_metadata.dcterms.has.part=Má část
+_metadata.dcterms.is.format.of=Je formátem
+_metadata.dcterms.is.referenced.by=Je odkazováno
+_metadata.dcterms.is.replaced.by=Je nahrazeno
+_metadata.dcterms.ispart.of=Je částí
+_metadata.dcterms.provenance=Provenience
+_metadata.dcterms.references=Odkazy
+_metadata.dcterms.replaces=Nahrazuje
+_metadata.dcterms.requires=Vyžaduje
+_metadata.dcterms.spatial=Prostorové pokrytí
+_metadata.dcterms.temporal=Časové pokrytí
 _mine.date.saved=Uložené datum
 _mine.delete=Vymaž
+_mine.last.name=Příjmení
 _mine.saved.items=Uložené položky
 _mine.saved.searches=Uložená vyhledávání
 _mine.saved.tags=Uložená pole
@@ -148,7 +174,9 @@ _unused.add=Přidat
 _unused.aggregator.explain=Agregátor shromažďuje materiál řady dalších přispěvatelů, zobrazuje jej na jejich vlastní webové stránce a také jej vkládá do European
 _unused.altprint=Vytiskni tuto stránku
 _unused.aplacetoshareideas=Místo pro inspiraci a náměty. Prohledávaj kulturní sbírky Evropy, sleduj další užvatele a sdílejte svoje objevy
+_unused.bosnia.and.herzegovina=Bosna a Hercegovina
 _unused.browse.through.time=Procházej časem
+_unused.other=Jiné
 _unused.privacy=Ochrana osobních dat
 _unused.remember.me=Zapamatovat pro tento počítač
 _unused.remove=Přesuň
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Sdílejte svoje nápady
 _unused.show.all=Zobraz vše
 _unused.sign.in=Přihlásit se
 _unused.site.map=Mapa stránek
+_unused.slovenia=Slovinsko
 _unused.sound=Zvukový materiál
 _unused.tag.added=Přidaný tag
 _unused.tag.addition.failed=Chyba při přidávání tagu
@@ -170,107 +199,78 @@ _unused.view.as.xml=Zobraz jako XML
 _unused.view.with.labels=Zobraz s popisky
 _unused.view.without.labels=Zobraz bez popisků
 _unused.you.have.search.for=Hledal/a jsi
-albania_t=Albánie
-armenia_t=Arménie
-austria_t=Rakousko
-azerbaijan_t=Azerbajdžán
-belgium_t=Belgie
-bosniaAndHerzegovina_t=Bosna a Hercegovina
-bulgaria_t=Bulharsko
-croatia_t=Chorvatsko
-croatian_t=Chorvatština (hrv)
-cyprus_t=Kypr
-czech_t=Česká republika
-czechlanguage_t=Čeština (cze/cse)
-danish_t=Dánština (dan)
-dc_contributor_t=Přispěvatel
-dc_coverage_t=Pokrytí
-dc_creator_t=Autor
-dc_date_t=Datum
-dc_description_t=Popis
 dc_format_t=Formát
 dc_identifier_t=Identifikátor
-dc_language_t=Jazyk
 dc_publisher_t=Vydavatel
 dc_relation_t=Vztah
-dc_rights_t=Práva
 dc_source_t=Zdroj
-dc_subject_t=Předmět
-dc_title_t=Název
-dc_type_t=Typ
-dcterms_alternative_t=Alternativní název
-dcterms_conformsTo_t=Odpovídá
-dcterms_hasFormat_t=Je ve formátu
-dcterms_hasPart_t=Má část
-dcterms_isFormatOf_t=Je formátem
-dcterms_isPartOf_t=Je částí
-dcterms_isReferencedBy_t=Je odkazováno
-dcterms_isReplacedBy_t=Je nahrazeno
-dcterms_provenance_t=Provenience
-dcterms_references_t=Odkazy
-dcterms_replaces_t=Nahrazuje
-dcterms_requires_t=Vyžaduje
-dcterms_spatial_t=Prostorové pokrytí
-dcterms_temporal_t=Časové pokrytí
-denmark_t=Dánsko
-dutch_t=Nizozemština (dut)
-english_t=Angličtina (eng)
-estonia_t=Estonsko
-estonian_t=Estonština (est)
-finland_t=Finsko
-finnish_t=Finština (fin)
-france_t=Francie
-french_t=Francouzština (fre)
-georgia_t=Gruzie
-german_t=Němčina (deu)
-germany_t=Německo
-greece_t=Řecko
-greek_t=Řečtina (ell/gre)
-hungarian_t=Maďarština (hun)
-hungary_t=Maďarsko
-iceland_t=Island
-icelandic_t=Islandština (ice)
-ireland_t=Irsko
-italian_t=Italština (ita)
-italyFlorence_t=Itálie - Florencie
-italyRome_t=Itálie - Řím
 languageDropDownList_t=Jazyk
-lastName_t=Příjmení
-latvia_t=Lotyšsko
-latvian_t=Lotyština (lav)
-liechtenstein_t=Lichtenštejnsko
-lithuania_t=Litva
-lithuanian_t=Litevština (lit)
-luxembourg_t=Lucembursko
-luxemburgish_t=lucemburština (ltz)
-malta_t=Malta
-maltese_t=maltština (mlt)
-moldova_t=Moldávie
-netherlands_t=Nizozemsko
-norway_t=Norsko
-norwegian_t=norština (nor)
-other_t=Jiné
-poland_t=Polsko
-polish_t=Polština (pol)
-portugal_t=Portugalsko
-portuguese_t=Portugalština (por)
+locale.albania=Albánie
+locale.armenia=Arménie
+locale.austria=Rakousko
+locale.azerbaijan=Azerbajdžán
+locale.belgium=Belgie
+locale.bulgaria=Bulharsko
+locale.croatia=Chorvatsko
+locale.croatian=Chorvatština (hrv)
+locale.cyprus=Kypr
+locale.czech=Česká republika
+locale.czechlanguage=Čeština (cze/cse)
+locale.danish=Dánština (dan)
+locale.denmark=Dánsko
+locale.dutch=Nizozemština (dut)
+locale.english=Angličtina (eng)
+locale.estonia=Estonsko
+locale.estonian=Estonština (est)
+locale.finland=Finsko
+locale.finnish=Finština (fin)
+locale.france=Francie
+locale.french=Francouzština (fre)
+locale.georgia=Gruzie
+locale.german=Němčina (deu)
+locale.germany=Německo
+locale.greece=Řecko
+locale.greek=Řečtina (ell/gre)
+locale.hungarian=Maďarština (hun)
+locale.hungary=Maďarsko
+locale.iceland=Island
+locale.icelandic=Islandština (ice)
+locale.ireland=Irsko
+locale.italy.florence=Itálie - Florencie
+locale.italy.rome=Itálie - Řím
+locale.latvia=Lotyšsko
+locale.latvian=Lotyština (lav)
+locale.liechtenstein=Lichtenštejnsko
+locale.lithuania=Litva
+locale.lithuanian=Litevština (lit)
+locale.luxembourg=Lucembursko
+locale.luxemburgish=lucemburština (ltz)
+locale.malta=Malta
+locale.maltese=maltština (mlt)
+locale.moldova=Moldávie
+locale.netherlands=Nizozemsko
+locale.norway=Norsko
+locale.norwegian=norština (nor)
+locale.poland=Polsko
+locale.polish=Polština (pol)
+locale.portugal=Portugalsko
+locale.portuguese=Portugalština (por)
+locale.romania=Rumunsko
+locale.romanian=Rumunština (rum)
+locale.russia.moscow=Rusko - Moskva
+locale.russia.st.petersburg=Rusko - Petrohrad
+locale.russian=Ruština (rus)
+locale.serbia=Srbsko
+locale.serbian=Srbština (scc)
+locale.slovak=Slovenština (slo)
+locale.slovakia=Slovensko
+locale.slovenian=Slovinština (slv)
+locale.spain=Španělsko
+locale.spanish=Španělština (esp)
+locale.sweden=Švédsko
+locale.swedish=Švédština (sve/swe)
+locale.switzerland=Švýcarsko
+locale.turkey=Turecko
+locale.uk=Velká Británie
+locale.ukraine=Ukrajina
 registrationSucceed_t=Registrace proběhla úspěšně
-romania_t=Rumunsko
-romanian_t=Rumunština (rum)
-russiaMoscow_t=Rusko - Moskva
-russiaStPetersburg_t=Rusko - Petrohrad
-russian_t=Ruština (rus)
-serbia_t=Srbsko
-serbian_t=Srbština (scc)
-slovak_t=Slovenština (slo)
-slovakia_t=Slovensko
-slovenia_t=Slovinsko
-slovenian_t=Slovinština (slv)
-spain_t=Španělsko
-spanish_t=Španělština (esp)
-sweden_t=Švédsko
-swedish_t=Švédština (sve/swe)
-switzerland_t=Švýcarsko
-turkey_t=Turecko
-uk_t=Velká Británie
-ukraine_t=Ukrajina
