--- a/portal/src/main/resources/i18n/messages_da.properties
+++ b/portal/src/main/resources/i18n/messages_da.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Gem søgning mislykkedes
 _header.actions=Handlinger
 _header.relatedcontent=Lignende indhold
+_language_select.italian=Italiensk
+_metadata.dc.contributor=Bidragsyder
+_metadata.dc.coverage=Dækker
+_metadata.dc.creator=Forfatter
+_metadata.dc.date=Dato
+_metadata.dc.description=Beskrivelse
+_metadata.dc.language=Sprog
+_metadata.dc.rights=Ophavsret
+_metadata.dc.subject=Emne
+_metadata.dc.title=Titel
+_metadata.dc.type=Ressourcetype
+_metadata.dcterms.alternative=Alternativ titel
+_metadata.dcterms.conforms.to=Conforms to
+_metadata.dcterms.has.format=Has format
+_metadata.dcterms.has.part=Has part
+_metadata.dcterms.is.format.of=Is format of
+_metadata.dcterms.is.referenced.by=Is referenced by
+_metadata.dcterms.is.replaced.by=Erstattes af
+_metadata.dcterms.ispart.of=Del af
+_metadata.dcterms.provenance=Oprindelse
+_metadata.dcterms.references=References
+_metadata.dcterms.replaces=Replaces
+_metadata.dcterms.requires=Requires
+_metadata.dcterms.spatial=Sted
+_metadata.dcterms.temporal=Tid
 _mine.date.saved=Årstal gemt
 _mine.delete=Slet
+_mine.last.name=Efternavn
 _mine.saved.items=Gemte referencer
 _mine.saved.searches=Gemte søgninger
 _mine.saved.tags=Gemte nøgleord
@@ -148,7 +174,9 @@ _unused.add=Tilføj
 _unused.aggregator.explain=En aggregator samler materiale fra en række andre leverandører, viser det på egen website og kanaliserer det også videre til Europeana
 _unused.altprint=Print denne side
 _unused.aplacetoshareideas=et sted at hente inspiration og idéer. Søg i Europas kultursamlinger, se hvad andre har fundet og del dine egne opdagelser
+_unused.bosnia.and.herzegovina=Bosnien og Herzegovina
 _unused.browse.through.time=Vælg et årstal
+_unused.other=Andre
 _unused.privacy=Beskyttelse af persondata
 _unused.remember.me=Husk mig på denne pc
 _unused.remove=Fjern
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Del dine idéer
 _unused.show.all=Vis alle
 _unused.sign.in=Indskriv dig
 _unused.site.map=Oversigt over sitet
+_unused.slovenia=Slovenien
 _unused.sound=Lyd
 _unused.tag.added=Nøgleord tilføjet
 _unused.tag.addition.failed=Tilføjelse af nøgleord mislykkedes
@@ -170,107 +199,78 @@ _unused.view.as.xml=Vis som XML
 _unused.view.with.labels=Vis med feltnavne
 _unused.view.without.labels=Vis uden feltnavne
 _unused.you.have.search.for=Du søgte efter
-albania_t=Albanien
-armenia_t=Armenien
-austria_t=Østrig
-azerbaijan_t=Azerbaijan
-belgium_t=Belgien
-bosniaAndHerzegovina_t=Bosnien og Herzegovina
-bulgaria_t=Bulgarien
-croatia_t=Kroatien
-croatian_t=Kroatisk
-cyprus_t=Cypern
-czech_t=Den Tjekkiske Republik
-czechlanguage_t=Tjekkisk
-danish_t=Dansk
-dc_contributor_t=Bidragsyder
-dc_coverage_t=Dækker
-dc_creator_t=Forfatter
-dc_date_t=Dato
-dc_description_t=Beskrivelse
 dc_format_t=Format
 dc_identifier_t=Identifikator
-dc_language_t=Sprog
 dc_publisher_t=Udgiver
 dc_relation_t=Relationer
-dc_rights_t=Ophavsret
 dc_source_t=Kilde
-dc_subject_t=Emne
-dc_title_t=Titel
-dc_type_t=Ressourcetype
-dcterms_alternative_t=Alternativ titel
-dcterms_conformsTo_t=Conforms to
-dcterms_hasFormat_t=Has format
-dcterms_hasPart_t=Has part
-dcterms_isFormatOf_t=Is format of
-dcterms_isPartOf_t=Del af
-dcterms_isReferencedBy_t=Is referenced by
-dcterms_isReplacedBy_t=Erstattes af
-dcterms_provenance_t=Oprindelse
-dcterms_references_t=References
-dcterms_replaces_t=Replaces
-dcterms_requires_t=Requires
-dcterms_spatial_t=Sted
-dcterms_temporal_t=Tid
-denmark_t=Danmark
-dutch_t=Hollandsk
-english_t=Engelsk
-estonia_t=Estland
-estonian_t=Estisk
-finland_t=Finland
-finnish_t=Finsk
-france_t=Frankrig
-french_t=Fransk
-georgia_t=Georgien
-german_t=Tysk
-germany_t=Tyskland
-greece_t=Grækenland
-greek_t=Græsk
-hungarian_t=Ungarsk
-hungary_t=Ungarn
-iceland_t=Island
-icelandic_t=Islandsk
-ireland_t=Irland
-italian_t=Italiensk
-italyFlorence_t=Italien-Firenze
-italyRome_t=Italien-Rom
 languageDropDownList_t=Sprog
-lastName_t=Efternavn
-latvia_t=Letland
-latvian_t=Lettisk
-liechtenstein_t=Liechtenstein
-lithuania_t=Litauen
-lithuanian_t=Litauisk
-luxembourg_t=Luxembourg
-luxemburgish_t=Luxembourgsk
-malta_t=Malta
-maltese_t=Maltesisk
-moldova_t=Moldovien
-netherlands_t=Holland
-norway_t=Norge
-norwegian_t=Norsk
-other_t=Andre
-poland_t=Polen
-polish_t=Polsk
-portugal_t=Portugal
-portuguese_t=Portugisisk
+locale.albania=Albanien
+locale.armenia=Armenien
+locale.austria=Østrig
+locale.azerbaijan=Azerbaijan
+locale.belgium=Belgien
+locale.bulgaria=Bulgarien
+locale.croatia=Kroatien
+locale.croatian=Kroatisk
+locale.cyprus=Cypern
+locale.czech=Den Tjekkiske Republik
+locale.czechlanguage=Tjekkisk
+locale.danish=Dansk
+locale.denmark=Danmark
+locale.dutch=Hollandsk
+locale.english=Engelsk
+locale.estonia=Estland
+locale.estonian=Estisk
+locale.finland=Finland
+locale.finnish=Finsk
+locale.france=Frankrig
+locale.french=Fransk
+locale.georgia=Georgien
+locale.german=Tysk
+locale.germany=Tyskland
+locale.greece=Grækenland
+locale.greek=Græsk
+locale.hungarian=Ungarsk
+locale.hungary=Ungarn
+locale.iceland=Island
+locale.icelandic=Islandsk
+locale.ireland=Irland
+locale.italy.florence=Italien-Firenze
+locale.italy.rome=Italien-Rom
+locale.latvia=Letland
+locale.latvian=Lettisk
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Litauen
+locale.lithuanian=Litauisk
+locale.luxembourg=Luxembourg
+locale.luxemburgish=Luxembourgsk
+locale.malta=Malta
+locale.maltese=Maltesisk
+locale.moldova=Moldovien
+locale.netherlands=Holland
+locale.norway=Norge
+locale.norwegian=Norsk
+locale.poland=Polen
+locale.polish=Polsk
+locale.portugal=Portugal
+locale.portuguese=Portugisisk
+locale.romania=Rumænien
+locale.romanian=Rumænsk
+locale.russia.moscow=Rusland - Moskva
+locale.russia.st.petersburg=Rusland - Sankt Petersborg
+locale.russian=Russisk
+locale.serbia=Serbien
+locale.serbian=Serbisk
+locale.slovak=Slovakisk
+locale.slovakia=Den Slovakiske Republik
+locale.slovenian=Slovensk
+locale.spain=Spanien
+locale.spanish=Spansk
+locale.sweden=Sverige
+locale.swedish=Svensk
+locale.switzerland=Schweiz
+locale.turkey=Tyrkiet
+locale.uk=Storbrittanien
+locale.ukraine=Ukraine
 registrationSucceed_t=Du er nu registreret
-romania_t=Rumænien
-romanian_t=Rumænsk
-russiaMoscow_t=Rusland - Moskva
-russiaStPetersburg_t=Rusland - Sankt Petersborg
-russian_t=Russisk
-serbia_t=Serbien
-serbian_t=Serbisk
-slovak_t=Slovakisk
-slovakia_t=Den Slovakiske Republik
-slovenia_t=Slovenien
-slovenian_t=Slovensk
-spain_t=Spanien
-spanish_t=Spansk
-sweden_t=Sverige
-swedish_t=Svensk
-switzerland_t=Schweiz
-turkey_t=Tyrkiet
-uk_t=Storbrittanien
-ukraine_t=Ukraine
