--- a/portal/src/main/resources/i18n/messages_de.properties
+++ b/portal/src/main/resources/i18n/messages_de.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Speichern der Suche fehlgeschlagen
 _header.actions=Aktionen
 _header.relatedcontent=Ähnlicher Inhalt
+_language_select.italian=italienisch
+_metadata.dc.contributor=Weitere beteiligte Person
+_metadata.dc.coverage=Umfang
+_metadata.dc.creator=Autor
+_metadata.dc.date=Datum
+_metadata.dc.description=Beschreibung
+_metadata.dc.language=Sprache
+_metadata.dc.rights=Rechte
+_metadata.dc.subject=Schlagwort
+_metadata.dc.title=Titel
+_metadata.dc.type=Typ
+_metadata.dcterms.alternative=Alternativer Titel
+_metadata.dcterms.conforms.to=entspricht
+_metadata.dcterms.has.format=hat Format
+_metadata.dcterms.has.part=hat Teil
+_metadata.dcterms.is.format.of=ist Format von
+_metadata.dcterms.is.referenced.by=wird referenziert von
+_metadata.dcterms.is.replaced.by=ist ersetzt durch
+_metadata.dcterms.ispart.of=Ist Teil von
+_metadata.dcterms.provenance=Herkunft
+_metadata.dcterms.references=referenziert
+_metadata.dcterms.replaces=ersetzt
+_metadata.dcterms.requires=benötigt
+_metadata.dcterms.spatial=Räumliche Abdeckung
+_metadata.dcterms.temporal=Zeitliche Abdeckung
 _mine.date.saved=Datum gespeichert
 _mine.delete=Löschen
+_mine.last.name=Nachname
 _mine.saved.items=Gespeicherte Objekte
 _mine.saved.searches=Gespeicherte Suchanfragen
 _mine.saved.tags=Gespeicherte Tags
@@ -148,7 +174,9 @@ _unused.add=Hinzufügen
 _unused.aggregator.explain=*Ein Aggregator sammelt Material von einer ganzen Reihe von Organisationen und Institutionen, macht dieses sowohl über ein eigenes Portal als auch über die Europeana zugänglich.
 _unused.altprint=Diese Seite drucken
 _unused.aplacetoshareideas=ein Ort für Inspiration und Ideen. Durchsuchen Sie die kulturellen Sammlungen Europas, verbinden Sie sich mit den Suchwegen anderer und teilen Sie Ihre Entdeckungen.
+_unused.bosnia.and.herzegovina=Bosnien und Herzegowina
 _unused.browse.through.time=Durch die Zeit browsen
+_unused.other=andere
 _unused.privacy=Datenschutz
 _unused.remember.me=Auf diesem Computer merken
 _unused.remove=Entfernen
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Teilen Sie Ihre Ideen
 _unused.show.all=Alles anzeigen
 _unused.sign.in=Anmelden
 _unused.site.map=Sitemap
+_unused.slovenia=Slowenien
 _unused.sound=Ton
 _unused.tag.added=Tag hinzugefügt
 _unused.tag.addition.failed=Tag hinzufügen fehlgeschlagen
@@ -170,107 +199,78 @@ _unused.view.as.xml=In XML ansehen
 _unused.view.with.labels=Mit Labels ansehen
 _unused.view.without.labels=Ohne Labels ansehen
 _unused.you.have.search.for=Sie haben nach...gesucht
-albania_t=Albanien
-armenia_t=Armenien
-austria_t=Österreich
-azerbaijan_t=Aserbaidschan
-belgium_t=Belgien
-bosniaAndHerzegovina_t=Bosnien und Herzegowina
-bulgaria_t=Bulgarien
-croatia_t=Kroatien
-croatian_t=kroatisch
-cyprus_t=Zypern
-czech_t=Tschechische Republik
-czechlanguage_t=tschechisch
-danish_t=dänisch
-dc_contributor_t=Weitere beteiligte Person
-dc_coverage_t=Umfang
-dc_creator_t=Autor
-dc_date_t=Datum
-dc_description_t=Beschreibung
 dc_format_t=Format
 dc_identifier_t=Identifikation
-dc_language_t=Sprache
 dc_publisher_t=Verlag
 dc_relation_t=Beziehung
-dc_rights_t=Rechte
 dc_source_t=Quelle
-dc_subject_t=Schlagwort
-dc_title_t=Titel
-dc_type_t=Typ
-dcterms_alternative_t=Alternativer Titel
-dcterms_conformsTo_t=entspricht
-dcterms_hasFormat_t=hat Format
-dcterms_hasPart_t=hat Teil
-dcterms_isFormatOf_t=ist Format von
-dcterms_isPartOf_t=Ist Teil von
-dcterms_isReferencedBy_t=wird referenziert von
-dcterms_isReplacedBy_t=ist ersetzt durch
-dcterms_provenance_t=Herkunft
-dcterms_references_t=referenziert
-dcterms_replaces_t=ersetzt
-dcterms_requires_t=benötigt
-dcterms_spatial_t=Räumliche Abdeckung
-dcterms_temporal_t=Zeitliche Abdeckung
-denmark_t=Dänemark
-dutch_t=niederländisch
-english_t=englisch
-estonia_t=Estland
-estonian_t=estnisch
-finland_t=Finnland
-finnish_t=finnisch
-france_t=Frankreich
-french_t=französisch
-georgia_t=Georgien
-german_t=deutsch
-germany_t=Deutschland
-greece_t=Griechenland
-greek_t=griechisch
-hungarian_t=ungarisch
-hungary_t=Ungarn
-iceland_t=Island
-icelandic_t=isländisch
-ireland_t=Irland
-italian_t=italienisch
-italyFlorence_t=Italien-Florenz
-italyRome_t=Italien-Rom
 languageDropDownList_t=Sprache
-lastName_t=Nachname
-latvia_t=Lettland
-latvian_t=lettisch
-liechtenstein_t=Liechtenstein
-lithuania_t=Litauen
-lithuanian_t=litauisch
-luxembourg_t=Luxemburg
-luxemburgish_t=luxemburgisch
-malta_t=Malta
-maltese_t=maltesisch
-moldova_t=Moldau
-netherlands_t=Niederlande
-norway_t=Norwegen
-norwegian_t=norwegisch
-other_t=andere
-poland_t=Polen
-polish_t=polnisch
-portugal_t=Portugal
-portuguese_t=portugiesisch
+locale.albania=Albanien
+locale.armenia=Armenien
+locale.austria=Österreich
+locale.azerbaijan=Aserbaidschan
+locale.belgium=Belgien
+locale.bulgaria=Bulgarien
+locale.croatia=Kroatien
+locale.croatian=kroatisch
+locale.cyprus=Zypern
+locale.czech=Tschechische Republik
+locale.czechlanguage=tschechisch
+locale.danish=dänisch
+locale.denmark=Dänemark
+locale.dutch=niederländisch
+locale.english=englisch
+locale.estonia=Estland
+locale.estonian=estnisch
+locale.finland=Finnland
+locale.finnish=finnisch
+locale.france=Frankreich
+locale.french=französisch
+locale.georgia=Georgien
+locale.german=deutsch
+locale.germany=Deutschland
+locale.greece=Griechenland
+locale.greek=griechisch
+locale.hungarian=ungarisch
+locale.hungary=Ungarn
+locale.iceland=Island
+locale.icelandic=isländisch
+locale.ireland=Irland
+locale.italy.florence=Italien-Florenz
+locale.italy.rome=Italien-Rom
+locale.latvia=Lettland
+locale.latvian=lettisch
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Litauen
+locale.lithuanian=litauisch
+locale.luxembourg=Luxemburg
+locale.luxemburgish=luxemburgisch
+locale.malta=Malta
+locale.maltese=maltesisch
+locale.moldova=Moldau
+locale.netherlands=Niederlande
+locale.norway=Norwegen
+locale.norwegian=norwegisch
+locale.poland=Polen
+locale.polish=polnisch
+locale.portugal=Portugal
+locale.portuguese=portugiesisch
+locale.romania=Rumänien
+locale.romanian=rumänisch
+locale.russia.moscow=Russland - Moskau
+locale.russia.st.petersburg=Russland - St. Petersburg
+locale.russian=russisch
+locale.serbia=Serbien
+locale.serbian=serbisch
+locale.slovak=slowakisch
+locale.slovakia=Slowakei
+locale.slovenian=slowenisch
+locale.spain=Spanien
+locale.spanish=spanisch
+locale.sweden=Schweden
+locale.swedish=schwedisch
+locale.switzerland=Schweiz
+locale.turkey=Türkei
+locale.uk=Großbritannien
+locale.ukraine=Ukraine
 registrationSucceed_t=Sie haben sich erfolgreich registriert.
-romania_t=Rumänien
-romanian_t=rumänisch
-russiaMoscow_t=Russland - Moskau
-russiaStPetersburg_t=Russland - St. Petersburg
-russian_t=russisch
-serbia_t=Serbien
-serbian_t=serbisch
-slovak_t=slowakisch
-slovakia_t=Slowakei
-slovenia_t=Slowenien
-slovenian_t=slowenisch
-spain_t=Spanien
-spanish_t=spanisch
-sweden_t=Schweden
-swedish_t=schwedisch
-switzerland_t=Schweiz
-turkey_t=Türkei
-uk_t=Großbritannien
-ukraine_t=Ukraine
