--- a/portal/src/main/resources/i18n/messages_el.properties
+++ b/portal/src/main/resources/i18n/messages_el.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Αποτυχία αποθήκευσης της έρευνας
 _header.actions=Δράσεις
 _header.relatedcontent=Σχετικό περιεχόμενο
+_language_select.italian=Ιταλικά (ita)
+_metadata.dc.contributor=Συνεργαζόμενος φορέας
+_metadata.dc.coverage=Κάλυψη
+_metadata.dc.creator=Συγγραφέας
+_metadata.dc.date=Ημερομηνία
+_metadata.dc.description=Περιγραφή
+_metadata.dc.language=Γλώσσα
+_metadata.dc.rights=Δικαιώματα πνευματικής ιδιοκτησίας
+_metadata.dc.subject=Θέμα
+_metadata.dc.title=Τίτλος
+_metadata.dc.type=Τύπος
+_metadata.dcterms.alternative=Εναλλακτικός τίτλος
+_metadata.dcterms.conforms.to=Συμμορφώνεται με το
+_metadata.dcterms.has.format=Έχει ως μορφότυπο
+_metadata.dcterms.has.part=Έχει ως μέρος
+_metadata.dcterms.is.format.of=Είναι μορφότυπο τού
+_metadata.dcterms.is.referenced.by=Αναφέρεται από
+_metadata.dcterms.is.replaced.by=Αντικαθίσταται από
+_metadata.dcterms.ispart.of=Μέρος του
+_metadata.dcterms.provenance=Προέλευση
+_metadata.dcterms.references=Αναφορές
+_metadata.dcterms.replaces=Αντικαθιστά
+_metadata.dcterms.requires=Απαιτεί
+_metadata.dcterms.spatial=Κάλυψη του χώρου
+_metadata.dcterms.temporal=Χρονική κάλυψη
 _mine.date.saved=Η ημερομηνία αποθηκεύτηκε
 _mine.delete=Διαγραφή
+_mine.last.name=Επώνυμο
 _mine.saved.items=Αποθηκευμένα τεκμήρια
 _mine.saved.searches=Αποθηκευμένες έρευνες
 _mine.saved.tags=Αποθηκευμένες ετικέτες
@@ -148,7 +174,9 @@ _unused.add=Προσθήκη
 _unused.aggregator.explain=*Ένας 'συγκεντρωτής' συλλέγει υλικό από σειρά άλλων συνεργαζόμενων φορέων, το εμφανίζει στο δικό του δικτυακό τόπο και το διοχετεύει επίσης στη Europeana.
 _unused.altprint=Εκτύπωση αυτής της σελίδας
 _unused.aplacetoshareideas=ένας χώρος για έμπνευση και ιδέες. Ερευνήστε στις πολιτιστικές συλλογές της Ευρώπης, συνδεθείτε με τα μονοπάτια άλλων χρηστών και μοιραστείτε τις ανακαλύψεις σας.
+_unused.bosnia.and.herzegovina=Βοσνία και Ερζεγοβίνη
 _unused.browse.through.time=Χρονολογική φυλλομέτρηση
+_unused.other=Άλλο
 _unused.privacy=Προστασία της ιδιωτικής ζωής
 _unused.remember.me=Απομνημόνευση σ' αυτόν τον υπολογιστή
 _unused.remove=Μετακίνηση
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Μοιραστείτε τις ιδέες σας
 _unused.show.all=Εμφάνιση όλων
 _unused.sign.in=Υπογραφή
 _unused.site.map=Χάρτης πλοήγησης
+_unused.slovenia=Σλοβενία
 _unused.sound=Ήχος
 _unused.tag.added=Προστέθηκε ετικέτα
 _unused.tag.addition.failed=Αποτυχία προσθήκης ετικέτας
@@ -170,107 +199,78 @@ _unused.view.as.xml=Εμφάνιση ως XML
 _unused.view.with.labels=Εμφάνιση με τίτλους
 _unused.view.without.labels=Εμφάνιση χωρίς τίτλους
 _unused.you.have.search.for=Έχετε αναζητήσει για
-albania_t=Αλβανία
-armenia_t=Αρμενία
-austria_t=Αυστρία
-azerbaijan_t=Αζερμπαϊτζάν
-belgium_t=Βέλγιο
-bosniaAndHerzegovina_t=Βοσνία και Ερζεγοβίνη
-bulgaria_t=Βουλγαρία
-croatia_t=Κροατία
-croatian_t=Κροατικά (hrv)
-cyprus_t=Κύπρος
-czech_t=Τσεχία
-czechlanguage_t=Τσεχικά (cze/cse)
-danish_t=Δανέζικα (dan)
-dc_contributor_t=Συνεργαζόμενος φορέας
-dc_coverage_t=Κάλυψη
-dc_creator_t=Συγγραφέας
-dc_date_t=Ημερομηνία
-dc_description_t=Περιγραφή
 dc_format_t=Μορφότυπο
 dc_identifier_t=Ταυτοποιητής
-dc_language_t=Γλώσσα
 dc_publisher_t=Εκδότης
 dc_relation_t=Σχέση
-dc_rights_t=Δικαιώματα πνευματικής ιδιοκτησίας
 dc_source_t=Πηγή
-dc_subject_t=Θέμα
-dc_title_t=Τίτλος
-dc_type_t=Τύπος
-dcterms_alternative_t=Εναλλακτικός τίτλος
-dcterms_conformsTo_t=Συμμορφώνεται με το
-dcterms_hasFormat_t=Έχει ως μορφότυπο
-dcterms_hasPart_t=Έχει ως μέρος
-dcterms_isFormatOf_t=Είναι μορφότυπο τού
-dcterms_isPartOf_t=Μέρος του
-dcterms_isReferencedBy_t=Αναφέρεται από
-dcterms_isReplacedBy_t=Αντικαθίσταται από
-dcterms_provenance_t=Προέλευση
-dcterms_references_t=Αναφορές
-dcterms_replaces_t=Αντικαθιστά
-dcterms_requires_t=Απαιτεί
-dcterms_spatial_t=Κάλυψη του χώρου
-dcterms_temporal_t=Χρονική κάλυψη
-denmark_t=Δανία
-dutch_t=Ολλανδικά (dut)
-english_t=Αγγλικά (eng)
-estonia_t=Εσθονία
-estonian_t=Εσθονικά (est)
-finland_t=Φινλανδία
-finnish_t=Φινλανδικά (fin)
-france_t=Γαλλία
-french_t=Γαλλικά (fre)
-georgia_t=Γεωργία
-german_t=Γερμανικά (deu)
-germany_t=Γερμανία
-greece_t=Ελλάδα
-greek_t=Ελληνικά (ell/gre)
-hungarian_t=Ουγγρικά (hun)
-hungary_t=Ουγγαρία
-iceland_t=Ισλανδία
-icelandic_t=Ισλανδικά (ice)
-ireland_t=Ιρλανδία
-italian_t=Ιταλικά (ita)
-italyFlorence_t=Ιταλία - Φλωρεντία
-italyRome_t=Ιταλία - Ρώμη
 languageDropDownList_t=Γλώσσα
-lastName_t=Επώνυμο
-latvia_t=Λετονία
-latvian_t=Λετονικά (lav)
-liechtenstein_t=Λιχτενστάιν
-lithuania_t=Λιθουανία
-lithuanian_t=Λιθουανικά (lit)
-luxembourg_t=Λουξεμβούργο
-luxemburgish_t=Λουξεμβουργιανά (ltz)
-malta_t=Μάλτα
-maltese_t=Μαλτέζικα (mlt)
-moldova_t=Μολδαβία
-netherlands_t=Ολλανδία
-norway_t=Νορβηγία
-norwegian_t=Νορβηγικά (nor)
-other_t=Άλλο
-poland_t=Πολωνία
-polish_t=Πολωνικά (pol)
-portugal_t=Πορτογαλία
-portuguese_t=Πορτογαλικά (por)
+locale.albania=Αλβανία
+locale.armenia=Αρμενία
+locale.austria=Αυστρία
+locale.azerbaijan=Αζερμπαϊτζάν
+locale.belgium=Βέλγιο
+locale.bulgaria=Βουλγαρία
+locale.croatia=Κροατία
+locale.croatian=Κροατικά (hrv)
+locale.cyprus=Κύπρος
+locale.czech=Τσεχία
+locale.czechlanguage=Τσεχικά (cze/cse)
+locale.danish=Δανέζικα (dan)
+locale.denmark=Δανία
+locale.dutch=Ολλανδικά (dut)
+locale.english=Αγγλικά (eng)
+locale.estonia=Εσθονία
+locale.estonian=Εσθονικά (est)
+locale.finland=Φινλανδία
+locale.finnish=Φινλανδικά (fin)
+locale.france=Γαλλία
+locale.french=Γαλλικά (fre)
+locale.georgia=Γεωργία
+locale.german=Γερμανικά (deu)
+locale.germany=Γερμανία
+locale.greece=Ελλάδα
+locale.greek=Ελληνικά (ell/gre)
+locale.hungarian=Ουγγρικά (hun)
+locale.hungary=Ουγγαρία
+locale.iceland=Ισλανδία
+locale.icelandic=Ισλανδικά (ice)
+locale.ireland=Ιρλανδία
+locale.italy.florence=Ιταλία - Φλωρεντία
+locale.italy.rome=Ιταλία - Ρώμη
+locale.latvia=Λετονία
+locale.latvian=Λετονικά (lav)
+locale.liechtenstein=Λιχτενστάιν
+locale.lithuania=Λιθουανία
+locale.lithuanian=Λιθουανικά (lit)
+locale.luxembourg=Λουξεμβούργο
+locale.luxemburgish=Λουξεμβουργιανά (ltz)
+locale.malta=Μάλτα
+locale.maltese=Μαλτέζικα (mlt)
+locale.moldova=Μολδαβία
+locale.netherlands=Ολλανδία
+locale.norway=Νορβηγία
+locale.norwegian=Νορβηγικά (nor)
+locale.poland=Πολωνία
+locale.polish=Πολωνικά (pol)
+locale.portugal=Πορτογαλία
+locale.portuguese=Πορτογαλικά (por)
+locale.romania=Ρουμανία
+locale.romanian=Ρουμανικά (rom)
+locale.russia.moscow=Ρωσία - Μόσχα
+locale.russia.st.petersburg=Ρωσία - Αγία Πετρούπολη
+locale.russian=Ρωσικά (rus)
+locale.serbia=Σερβία
+locale.serbian=Σερβικά (scc)
+locale.slovak=Σλοβακικά (slo)
+locale.slovakia=Σλοβακία
+locale.slovenian=Σλοβενικά (slv)
+locale.spain=Ισπανία
+locale.spanish=Ισπανικά (esp)
+locale.sweden=Σουηδία
+locale.swedish=Σουηδικά (sve/swe)
+locale.switzerland=Σουηδία
+locale.turkey=Τουρκία
+locale.uk=Ηνωμένο Βασίλειο
+locale.ukraine=Ουκρανία
 registrationSucceed_t=Η εγγραφή σας ήταν επιτυχής
-romania_t=Ρουμανία
-romanian_t=Ρουμανικά (rom)
-russiaMoscow_t=Ρωσία - Μόσχα
-russiaStPetersburg_t=Ρωσία - Αγία Πετρούπολη
-russian_t=Ρωσικά (rus)
-serbia_t=Σερβία
-serbian_t=Σερβικά (scc)
-slovak_t=Σλοβακικά (slo)
-slovakia_t=Σλοβακία
-slovenia_t=Σλοβενία
-slovenian_t=Σλοβενικά (slv)
-spain_t=Ισπανία
-spanish_t=Ισπανικά (esp)
-sweden_t=Σουηδία
-swedish_t=Σουηδικά (sve/swe)
-switzerland_t=Σουηδία
-turkey_t=Τουρκία
-uk_t=Ηνωμένο Βασίλειο
-ukraine_t=Ουκρανία
