--- a/portal/src/main/resources/i18n/messages_es.properties
+++ b/portal/src/main/resources/i18n/messages_es.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Fallo en la grabación de la búsqueda
 _header.actions=Acciones
 _header.relatedcontent=Contenido relacionado
+_language_select.italian=Italiano (ita)
+_metadata.dc.contributor=Colaborador
+_metadata.dc.coverage=Cobertura
+_metadata.dc.creator=Autor
+_metadata.dc.date=Fecha
+_metadata.dc.description=Descripción
+_metadata.dc.language=Lengua
+_metadata.dc.rights=Derechos
+_metadata.dc.subject=Materia
+_metadata.dc.title=Título
+_metadata.dc.type=Tipo
+_metadata.dcterms.alternative=Título Alternativo
+_metadata.dcterms.conforms.to=De acuerdo a
+_metadata.dcterms.has.format=Tiene formato
+_metadata.dcterms.has.part=Tiene parte
+_metadata.dcterms.is.format.of=Es formato de
+_metadata.dcterms.is.referenced.by=Es referido por
+_metadata.dcterms.is.replaced.by=Es sustituido por
+_metadata.dcterms.ispart.of=Parte de
+_metadata.dcterms.provenance=Propiedad
+_metadata.dcterms.references=Referencias
+_metadata.dcterms.replaces=Sustituye
+_metadata.dcterms.requires=Requiere
+_metadata.dcterms.spatial=Cobertura espacial
+_metadata.dcterms.temporal=Cobertura temporal
 _mine.date.saved=Fecha guardada
 _mine.delete=Borrar
+_mine.last.name=Apellidos
 _mine.saved.items=Elementos guardados
 _mine.saved.searches=Búsquedas guardadas
 _mine.saved.tags=Etiquetas guardadas
@@ -148,7 +174,9 @@ _unused.add=Añadir
 _unused.aggregator.explain=Un proveedor recoge material de otros que pueden contribuir, mostrándolo en su web y también enviándolo a Europeana.
 _unused.altprint=Imprimir esta página
 _unused.aplacetoshareideas=un lugar para la inspiración y las ideas. Realice su búsqueda por las colecciones de Europa, únase al recorrido de otros usuarios y comparta sus descubrimientos.
+_unused.bosnia.and.herzegovina=Bosnia Herzegovina
 _unused.browse.through.time=Navegue a través del tiempo
+_unused.other=Otros
 _unused.privacy=Privacidad
 _unused.remember.me=Recordarme en este equipo
 _unused.remove=Quitar
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Comparta sus ideas
 _unused.show.all=Mostrar todos
 _unused.sign.in=Iniciar sesión
 _unused.site.map=Mapa del sitio
+_unused.slovenia=Eslovenia
 _unused.sound=Sonido
 _unused.tag.added=Etiqueta añadida
 _unused.tag.addition.failed=Fallo al añadir etiqueta
@@ -170,107 +199,78 @@ _unused.view.as.xml=Vista en XML
 _unused.view.with.labels=Vista con etiqueta
 _unused.view.without.labels=Vista sin etiquetas
 _unused.you.have.search.for=Usted ha buscado por
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Austria
-azerbaijan_t=Azerbaiyán
-belgium_t=Bélgica
-bosniaAndHerzegovina_t=Bosnia Herzegovina
-bulgaria_t=Bulgaria
-croatia_t=Croacia
-croatian_t=Croacia (hrv)
-cyprus_t=Chipre
-czech_t=República Checa
-czechlanguage_t=Checo (cze/cse)
-danish_t=Danés (dan)
-dc_contributor_t=Colaborador
-dc_coverage_t=Cobertura
-dc_creator_t=Autor
-dc_date_t=Fecha
-dc_description_t=Descripción
 dc_format_t=Formato
 dc_identifier_t=Identificador
-dc_language_t=Lengua
 dc_publisher_t=Editor
 dc_relation_t=Relación
-dc_rights_t=Derechos
 dc_source_t=Fuente
-dc_subject_t=Materia
-dc_title_t=Título
-dc_type_t=Tipo
-dcterms_alternative_t=Título Alternativo
-dcterms_conformsTo_t=De acuerdo a
-dcterms_hasFormat_t=Tiene formato
-dcterms_hasPart_t=Tiene parte
-dcterms_isFormatOf_t=Es formato de
-dcterms_isPartOf_t=Parte de
-dcterms_isReferencedBy_t=Es referido por
-dcterms_isReplacedBy_t=Es sustituido por
-dcterms_provenance_t=Propiedad
-dcterms_references_t=Referencias
-dcterms_replaces_t=Sustituye
-dcterms_requires_t=Requiere
-dcterms_spatial_t=Cobertura espacial
-dcterms_temporal_t=Cobertura temporal
-denmark_t=Dinamarca
-dutch_t=Holandés (dut)
-english_t=Inglés (eng)
-estonia_t=Estonia
-estonian_t=Estonio (est)
-finland_t=Finlandia
-finnish_t=Finés (fin)
-france_t=Francia
-french_t=Francés (fre)
-georgia_t=Georgia
-german_t=Alemán (deu)
-germany_t=Alemania
-greece_t=Grecia
-greek_t=Griego (ell/gre)
-hungarian_t=Húngaro (hun)
-hungary_t=Hungría
-iceland_t=Islandia
-icelandic_t=Islandés (ice)
-ireland_t=Irlanda
-italian_t=Italiano (ita)
-italyFlorence_t=Italia-Florencia
-italyRome_t=Italia-Roma
 languageDropDownList_t=Lengua
-lastName_t=Apellidos
-latvia_t=Letonia
-latvian_t=Letón (lav)
-liechtenstein_t=Liechtenstein
-lithuania_t=Lituania
-lithuanian_t=Lituano (lit)
-luxembourg_t=Luxembourg
-luxemburgish_t=Luxemburgués (ltz)
-malta_t=Malta
-maltese_t=Maltés (mlt)
-moldova_t=Moldova
-netherlands_t=Holanda
-norway_t=Noruega
-norwegian_t=Noruego (nor)
-other_t=Otros
-poland_t=Polonia
-polish_t=Polaco (pol)
-portugal_t=Portugal
-portuguese_t=Portugués (por)
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Austria
+locale.azerbaijan=Azerbaiyán
+locale.belgium=Bélgica
+locale.bulgaria=Bulgaria
+locale.croatia=Croacia
+locale.croatian=Croacia (hrv)
+locale.cyprus=Chipre
+locale.czech=República Checa
+locale.czechlanguage=Checo (cze/cse)
+locale.danish=Danés (dan)
+locale.denmark=Dinamarca
+locale.dutch=Holandés (dut)
+locale.english=Inglés (eng)
+locale.estonia=Estonia
+locale.estonian=Estonio (est)
+locale.finland=Finlandia
+locale.finnish=Finés (fin)
+locale.france=Francia
+locale.french=Francés (fre)
+locale.georgia=Georgia
+locale.german=Alemán (deu)
+locale.germany=Alemania
+locale.greece=Grecia
+locale.greek=Griego (ell/gre)
+locale.hungarian=Húngaro (hun)
+locale.hungary=Hungría
+locale.iceland=Islandia
+locale.icelandic=Islandés (ice)
+locale.ireland=Irlanda
+locale.italy.florence=Italia-Florencia
+locale.italy.rome=Italia-Roma
+locale.latvia=Letonia
+locale.latvian=Letón (lav)
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Lituania
+locale.lithuanian=Lituano (lit)
+locale.luxembourg=Luxembourg
+locale.luxemburgish=Luxemburgués (ltz)
+locale.malta=Malta
+locale.maltese=Maltés (mlt)
+locale.moldova=Moldova
+locale.netherlands=Holanda
+locale.norway=Noruega
+locale.norwegian=Noruego (nor)
+locale.poland=Polonia
+locale.polish=Polaco (pol)
+locale.portugal=Portugal
+locale.portuguese=Portugués (por)
+locale.romania=Rumanía
+locale.romanian=Rumano
+locale.russia.moscow=Rusia - Moscú
+locale.russia.st.petersburg=Rusia - San Petesburgo
+locale.russian=Ruso
+locale.serbia=Serbia
+locale.serbian=Serbio (scc)
+locale.slovak=Eslovaco (slo)
+locale.slovakia=Eslovaquia
+locale.slovenian=Esloveno (slv)
+locale.spain=España
+locale.spanish=Español
+locale.sweden=Suecia
+locale.swedish=Sueco (sve/swe)
+locale.switzerland=Suiza
+locale.turkey=Turquía
+locale.uk=Reino Unido
+locale.ukraine=Ucrania
 registrationSucceed_t=Se ha registrado corecctamente
-romania_t=Rumanía
-romanian_t=Rumano
-russiaMoscow_t=Rusia - Moscú
-russiaStPetersburg_t=Rusia - San Petesburgo
-russian_t=Ruso
-serbia_t=Serbia
-serbian_t=Serbio (scc)
-slovak_t=Eslovaco (slo)
-slovakia_t=Eslovaquia
-slovenia_t=Eslovenia
-slovenian_t=Esloveno (slv)
-spain_t=España
-spanish_t=Español
-sweden_t=Suecia
-swedish_t=Sueco (sve/swe)
-switzerland_t=Suiza
-turkey_t=Turquía
-uk_t=Reino Unido
-ukraine_t=Ucrania
