--- a/portal/src/main/resources/i18n/messages_fi.properties
+++ b/portal/src/main/resources/i18n/messages_fi.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Haun tallentaminen epäonnistui
 _header.actions=Tapahtumat
 _header.relatedcontent=Tähän liittyvä sisältö
+_language_select.italian=italia (ita)
+_metadata.dc.contributor=Muu tekijä
+_metadata.dc.coverage=Kattavuus
+_metadata.dc.creator=Tekijä
+_metadata.dc.date=Päivämäärä
+_metadata.dc.description=Kuvaus
+_metadata.dc.language=Kieli
+_metadata.dc.rights=Tekijänoikeudet
+_metadata.dc.subject=Aihe
+_metadata.dc.title=Nimeke
+_metadata.dc.type=Laji
+_metadata.dcterms.alternative=Vaihtoehtoinen nimeke
+_metadata.dcterms.conforms.to=On yhdenmukainen
+_metadata.dcterms.has.format=On formaatissa
+_metadata.dcterms.has.part=Sisältää osan
+_metadata.dcterms.is.format.of=On tämän formaatti
+_metadata.dcterms.is.referenced.by=Viitattu seuraavassa
+_metadata.dcterms.is.replaced.by=On korvattu seuraavalla
+_metadata.dcterms.ispart.of=Osa teoksesta
+_metadata.dcterms.provenance=Historiatieto
+_metadata.dcterms.references=Viittauksen
+_metadata.dcterms.replaces=Korvaa
+_metadata.dcterms.requires=Vaatii
+_metadata.dcterms.spatial=Alueellinen kattavuus
+_metadata.dcterms.temporal=Ajallinen kattavuus
 _mine.date.saved=Ajankohta tallennettu
 _mine.delete=Hylkää
+_mine.last.name=Sukunimi
 _mine.saved.items=Tallennetut kohteet
 _mine.saved.searches=Tallennetut haut
 _mine.saved.tags=Tallennetut tagit
@@ -148,7 +174,9 @@ _unused.add=Lisää
 _unused.aggregator.explain=*Aggregaattori kerää aineistoa useilta muilta osallistujatahoilta, laittaa sen näkyviin omalle Internet-sivustolleen ja lisäksi kanavoi sen Europeanaan.
 _unused.altprint=Tulosta tämä sivu
 _unused.aplacetoshareideas=paikka elämyksille ja ideoille. Hae Euroopan kulttuuriaarteiden kokoelmista, liity käyttäjien yhteisöön ja jaa kokemuksesi muiden kanssa.
+_unused.bosnia.and.herzegovina=Bosnia-Herzegovina
 _unused.browse.through.time=Selaa aikakausittain
+_unused.other=muu
 _unused.privacy=Tietosuoja
 _unused.remember.me=Muista tunnukset
 _unused.remove=Poista
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Jaa ideoitasi
 _unused.show.all=Näytä kaikki
 _unused.sign.in=Kirjaudu sisään
 _unused.site.map=Sivukartta
+_unused.slovenia=Slovenia
 _unused.sound=Äänite
 _unused.tag.added=Tagi lisätty
 _unused.tag.addition.failed=Tagin lisääminen epäonnistui
@@ -170,107 +199,78 @@ _unused.view.as.xml=Tarkastele XML-muodossa
 _unused.view.with.labels=Otsikkonäyttö
 _unused.view.without.labels=Näyttö ilman otsikkoja
 _unused.you.have.search.for=Olet tehnyt haun:
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Itävalta
-azerbaijan_t=Azerbaidzan
-belgium_t=Belgia
-bosniaAndHerzegovina_t=Bosnia-Herzegovina
-bulgaria_t=Bulgaria
-croatia_t=Kroatia
-croatian_t=kroatia (hrv)
-cyprus_t=Kypros
-czech_t=Tsekin tasavalta
-czechlanguage_t=tsekki (cze/cse)
-danish_t=tanska (dan)
-dc_contributor_t=Muu tekijä
-dc_coverage_t=Kattavuus
-dc_creator_t=Tekijä
-dc_date_t=Päivämäärä
-dc_description_t=Kuvaus
 dc_format_t=Formaatti
 dc_identifier_t=Identifiointitunnus
-dc_language_t=Kieli
 dc_publisher_t=Julkaisija
 dc_relation_t=Suhde
-dc_rights_t=Tekijänoikeudet
 dc_source_t=Lähde
-dc_subject_t=Aihe
-dc_title_t=Nimeke
-dc_type_t=Laji
-dcterms_alternative_t=Vaihtoehtoinen nimeke
-dcterms_conformsTo_t=On yhdenmukainen
-dcterms_hasFormat_t=On formaatissa
-dcterms_hasPart_t=Sisältää osan
-dcterms_isFormatOf_t=On tämän formaatti
-dcterms_isPartOf_t=Osa teoksesta
-dcterms_isReferencedBy_t=Viitattu seuraavassa
-dcterms_isReplacedBy_t=On korvattu seuraavalla
-dcterms_provenance_t=Historiatieto
-dcterms_references_t=Viittauksen
-dcterms_replaces_t=Korvaa
-dcterms_requires_t=Vaatii
-dcterms_spatial_t=Alueellinen kattavuus
-dcterms_temporal_t=Ajallinen kattavuus
-denmark_t=Tanska
-dutch_t=hollanti (dut)
-english_t=englanti (eng)
-estonia_t=Viro
-estonian_t=viro (est)
-finland_t=Suomi
-finnish_t=suomi (fin)
-france_t=Ranska
-french_t=ranska (fre)
-georgia_t=Georgia
-german_t=saksa (deu)
-germany_t=Saksa
-greece_t=Kreikka
-greek_t=kreikka (ell/gre)
-hungarian_t=unkari (hun)
-hungary_t=Unkari
-iceland_t=Islanti
-icelandic_t=islanti (ice)
-ireland_t=Irlanti
-italian_t=italia (ita)
-italyFlorence_t=Italia-Firenze
-italyRome_t=Italia-Rooma
 languageDropDownList_t=Kieli
-lastName_t=Sukunimi
-latvia_t=Latvia
-latvian_t=Latvia (lav)
-liechtenstein_t=Liechtenstein
-lithuania_t=Liettua
-lithuanian_t=liettua (lit)
-luxembourg_t=Luxemburg
-luxemburgish_t=luxemburg (ltz)
-malta_t=Malta
-maltese_t=malta (mlt)
-moldova_t=Moldova
-netherlands_t=Alankomaat
-norway_t=Norja
-norwegian_t=norja (nor)
-other_t=muu
-poland_t=Puola
-polish_t=puola (pol)
-portugal_t=Portugali
-portuguese_t=portugali (por)
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Itävalta
+locale.azerbaijan=Azerbaidzan
+locale.belgium=Belgia
+locale.bulgaria=Bulgaria
+locale.croatia=Kroatia
+locale.croatian=kroatia (hrv)
+locale.cyprus=Kypros
+locale.czech=Tsekin tasavalta
+locale.czechlanguage=tsekki (cze/cse)
+locale.danish=tanska (dan)
+locale.denmark=Tanska
+locale.dutch=hollanti (dut)
+locale.english=englanti (eng)
+locale.estonia=Viro
+locale.estonian=viro (est)
+locale.finland=Suomi
+locale.finnish=suomi (fin)
+locale.france=Ranska
+locale.french=ranska (fre)
+locale.georgia=Georgia
+locale.german=saksa (deu)
+locale.germany=Saksa
+locale.greece=Kreikka
+locale.greek=kreikka (ell/gre)
+locale.hungarian=unkari (hun)
+locale.hungary=Unkari
+locale.iceland=Islanti
+locale.icelandic=islanti (ice)
+locale.ireland=Irlanti
+locale.italy.florence=Italia-Firenze
+locale.italy.rome=Italia-Rooma
+locale.latvia=Latvia
+locale.latvian=Latvia (lav)
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Liettua
+locale.lithuanian=liettua (lit)
+locale.luxembourg=Luxemburg
+locale.luxemburgish=luxemburg (ltz)
+locale.malta=Malta
+locale.maltese=malta (mlt)
+locale.moldova=Moldova
+locale.netherlands=Alankomaat
+locale.norway=Norja
+locale.norwegian=norja (nor)
+locale.poland=Puola
+locale.polish=puola (pol)
+locale.portugal=Portugali
+locale.portuguese=portugali (por)
+locale.romania=Romania
+locale.romanian=Romania (rom)
+locale.russia.moscow=Venäjä - Moskova
+locale.russia.st.petersburg=Venäjä - Pietari
+locale.russian=Venäjä (rus)
+locale.serbia=Serbia
+locale.serbian=serbia (scc)
+locale.slovak=slovakia (slo)
+locale.slovakia=Slovakia
+locale.slovenian=slovenia (slv)
+locale.spain=Espanja
+locale.spanish=espanja (esp)
+locale.sweden=Ruotsi
+locale.swedish=ruotsi (sve/swe)
+locale.switzerland=Sveitsi
+locale.turkey=Turkki
+locale.uk=Britannia
+locale.ukraine=Ukraina
 registrationSucceed_t=Rekisteröitymisesi onnistui
-romania_t=Romania
-romanian_t=Romania (rom)
-russiaMoscow_t=Venäjä - Moskova
-russiaStPetersburg_t=Venäjä - Pietari
-russian_t=Venäjä (rus)
-serbia_t=Serbia
-serbian_t=serbia (scc)
-slovak_t=slovakia (slo)
-slovakia_t=Slovakia
-slovenia_t=Slovenia
-slovenian_t=slovenia (slv)
-spain_t=Espanja
-spanish_t=espanja (esp)
-sweden_t=Ruotsi
-swedish_t=ruotsi (sve/swe)
-switzerland_t=Sveitsi
-turkey_t=Turkki
-uk_t=Britannia
-ukraine_t=Ukraina
