--- a/portal/src/main/resources/i18n/messages_fr.properties
+++ b/portal/src/main/resources/i18n/messages_fr.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Sauvegarde de la recherche échouée
 _header.actions=Actions
 _header.relatedcontent=Contenu en relation
+_language_select.italian=Italien (ita)
+_metadata.dc.contributor=Contributeur
+_metadata.dc.coverage=Couverture
+_metadata.dc.creator=Auteur
+_metadata.dc.date=Date
+_metadata.dc.description=Description
+_metadata.dc.language=Langue
+_metadata.dc.rights=Droits
+_metadata.dc.subject=Sujet
+_metadata.dc.title=Titre
+_metadata.dc.type=Type
+_metadata.dcterms.alternative=Titre alternatif
+_metadata.dcterms.conforms.to=Conforme à
+_metadata.dcterms.has.format=a le format
+_metadata.dcterms.has.part=Comprend
+_metadata.dcterms.is.format.of=est le format de
+_metadata.dcterms.is.referenced.by=Est référencé par
+_metadata.dcterms.is.replaced.by=Est remplacé par
+_metadata.dcterms.ispart.of=Fait partie de
+_metadata.dcterms.provenance=Provenance
+_metadata.dcterms.references=Référence
+_metadata.dcterms.replaces=Remplace
+_metadata.dcterms.requires=Nécessite
+_metadata.dcterms.spatial=Couverture spatiale
+_metadata.dcterms.temporal=Couverture temporelle
 _mine.date.saved=Date sauvegardée
 _mine.delete=Détruire
+_mine.last.name=Nom
 _mine.saved.items=Objets sauvegardés
 _mine.saved.searches=Recherches sauvegardées
 _mine.saved.tags=Etiquettes sauvegardées
@@ -148,7 +174,9 @@ _unused.add=Ajouter
 _unused.aggregator.explain=*Un agrégateur collecte du contenu provenant d'un éventail d'autres contributeurs, l'agrégateur apparaît sur le site de ces contributeurs de la même manière qu'ils sont redirigés dans Europeana.
 _unused.altprint=Imprimer cette page
 _unused.aplacetoshareideas=Une source d'inspiration et d'idées. Recherchez dans le patrimoine culturel de l'Europe et partagez vos découvertes.
+_unused.bosnia.and.herzegovina=Bosnie-Herzégovine
 _unused.browse.through.time=Feuilleter dans le temps
+_unused.other=Autre
 _unused.privacy=Confidentialité
 _unused.remember.me=Voulez-vous que Europeana retienne ce mot de passe
 _unused.remove=Retirer
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Partager vos idées
 _unused.show.all=Afficher tout
 _unused.sign.in=S'inscrire
 _unused.site.map=Plan du site
+_unused.slovenia=Slovénie
 _unused.sound=Son
 _unused.tag.added=Etiquette ajoutée
 _unused.tag.addition.failed=Echec de l'ajout de l'étiquette
@@ -170,107 +199,78 @@ _unused.view.as.xml=Voir en XML
 _unused.view.with.labels=Voir avec les labels
 _unused.view.without.labels=Voir sans les labels
 _unused.you.have.search.for=Vous avez recherché sur
-albania_t=Albanie
-armenia_t=Arménie
-austria_t=Autriche
-azerbaijan_t=Azerbaïdjan
-belgium_t=Belgique
-bosniaAndHerzegovina_t=Bosnie-Herzégovine
-bulgaria_t=Bulgarie
-croatia_t=Croatie
-croatian_t=Croate (hrv)
-cyprus_t=Chypre
-czech_t=République tchèque
-czechlanguage_t=Tchèque (cze/cse)
-danish_t=Danois (dan)
-dc_contributor_t=Contributeur
-dc_coverage_t=Couverture
-dc_creator_t=Auteur
-dc_date_t=Date
-dc_description_t=Description
 dc_format_t=Format
 dc_identifier_t=Identifiant
-dc_language_t=Langue
 dc_publisher_t=Éditeur
 dc_relation_t=Relation
-dc_rights_t=Droits
 dc_source_t=Source
-dc_subject_t=Sujet
-dc_title_t=Titre
-dc_type_t=Type
-dcterms_alternative_t=Titre alternatif
-dcterms_conformsTo_t=Conforme à
-dcterms_hasFormat_t=a le format
-dcterms_hasPart_t=Comprend
-dcterms_isFormatOf_t=est le format de
-dcterms_isPartOf_t=Fait partie de
-dcterms_isReferencedBy_t=Est référencé par
-dcterms_isReplacedBy_t=Est remplacé par
-dcterms_provenance_t=Provenance
-dcterms_references_t=Référence
-dcterms_replaces_t=Remplace
-dcterms_requires_t=Nécessite
-dcterms_spatial_t=Couverture spatiale
-dcterms_temporal_t=Couverture temporelle
-denmark_t=Danemark
-dutch_t=Néerlandais(dut)
-english_t=Anglais (eng)
-estonia_t=Estonie
-estonian_t=Estonien (est)
-finland_t=Finlande
-finnish_t=Finlandais (fin)
-france_t=France
-french_t=Français (fre)
-georgia_t=Géorgie
-german_t=Allemand (deu)
-germany_t=Allemagne
-greece_t=Grèce
-greek_t=Grec (ell/gre)
-hungarian_t=Hongrois (hun)
-hungary_t=Hongrie
-iceland_t=Islande
-icelandic_t=Islandais (ice)
-ireland_t=Irlande
-italian_t=Italien (ita)
-italyFlorence_t=Italie-Florence
-italyRome_t=Italie-Rome
 languageDropDownList_t=Langue
-lastName_t=Nom
-latvia_t=Lettonie
-latvian_t=Letton (lav)
-liechtenstein_t=Lichenstein
-lithuania_t=Lituanie
-lithuanian_t=Lituanien (lit)
-luxembourg_t=Luxembourg
-luxemburgish_t=Luxembourgeois (ltz)
-malta_t=Malte
-maltese_t=Maltais (mlt)
-moldova_t=Moldavie
-netherlands_t=Pays-Bas
-norway_t=Norvège
-norwegian_t=Norvégien (nor)
-other_t=Autre
-poland_t=Pologne
-polish_t=Polonais (pol)
-portugal_t=Portugal
-portuguese_t=Portugais (por)
+locale.albania=Albanie
+locale.armenia=Arménie
+locale.austria=Autriche
+locale.azerbaijan=Azerbaïdjan
+locale.belgium=Belgique
+locale.bulgaria=Bulgarie
+locale.croatia=Croatie
+locale.croatian=Croate (hrv)
+locale.cyprus=Chypre
+locale.czech=République tchèque
+locale.czechlanguage=Tchèque (cze/cse)
+locale.danish=Danois (dan)
+locale.denmark=Danemark
+locale.dutch=Néerlandais(dut)
+locale.english=Anglais (eng)
+locale.estonia=Estonie
+locale.estonian=Estonien (est)
+locale.finland=Finlande
+locale.finnish=Finlandais (fin)
+locale.france=France
+locale.french=Français (fre)
+locale.georgia=Géorgie
+locale.german=Allemand (deu)
+locale.germany=Allemagne
+locale.greece=Grèce
+locale.greek=Grec (ell/gre)
+locale.hungarian=Hongrois (hun)
+locale.hungary=Hongrie
+locale.iceland=Islande
+locale.icelandic=Islandais (ice)
+locale.ireland=Irlande
+locale.italy.florence=Italie-Florence
+locale.italy.rome=Italie-Rome
+locale.latvia=Lettonie
+locale.latvian=Letton (lav)
+locale.liechtenstein=Lichenstein
+locale.lithuania=Lituanie
+locale.lithuanian=Lituanien (lit)
+locale.luxembourg=Luxembourg
+locale.luxemburgish=Luxembourgeois (ltz)
+locale.malta=Malte
+locale.maltese=Maltais (mlt)
+locale.moldova=Moldavie
+locale.netherlands=Pays-Bas
+locale.norway=Norvège
+locale.norwegian=Norvégien (nor)
+locale.poland=Pologne
+locale.polish=Polonais (pol)
+locale.portugal=Portugal
+locale.portuguese=Portugais (por)
+locale.romania=Roumanie
+locale.romanian=Roumain
+locale.russia.moscow=Russie - Moscou
+locale.russia.st.petersburg=Russie-Saint Petersbourg
+locale.russian=Russe
+locale.serbia=Serbie
+locale.serbian=Serbe (scc)
+locale.slovak=Slovaque (slo)
+locale.slovakia=Slovaquie
+locale.slovenian=Slovène (slv)
+locale.spain=Espagne
+locale.spanish=Espagnol (esp)
+locale.sweden=Suède
+locale.swedish=Suédois (sve/swe)
+locale.switzerland=Suisse
+locale.turkey=Turquie
+locale.uk=Royaume-Uni
+locale.ukraine=Ukraine
 registrationSucceed_t=Vous êtes enregistré avec succès
-romania_t=Roumanie
-romanian_t=Roumain
-russiaMoscow_t=Russie - Moscou
-russiaStPetersburg_t=Russie-Saint Petersbourg
-russian_t=Russe
-serbia_t=Serbie
-serbian_t=Serbe (scc)
-slovak_t=Slovaque (slo)
-slovakia_t=Slovaquie
-slovenia_t=Slovénie
-slovenian_t=Slovène (slv)
-spain_t=Espagne
-spanish_t=Espagnol (esp)
-sweden_t=Suède
-swedish_t=Suédois (sve/swe)
-switzerland_t=Suisse
-turkey_t=Turquie
-uk_t=Royaume-Uni
-ukraine_t=Ukraine
