--- a/portal/src/main/resources/i18n/messages_ga.properties
+++ b/portal/src/main/resources/i18n/messages_ga.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Sábháil cuardach teipthe
 _header.actions=Gníomhartha
 _header.relatedcontent=Ábhar gaolmhar
+_language_select.italian=Iodáilis (ita)
+_metadata.dc.contributor=Rannpháirtí
+_metadata.dc.coverage=Clúdach
+_metadata.dc.creator=Údar
+_metadata.dc.date=Dáta
+_metadata.dc.description=Cur síos
+_metadata.dc.language=Teanga
+_metadata.dc.rights=Cearta
+_metadata.dc.subject=Ábhar
+_metadata.dc.title=Teideal
+_metadata.dc.type=Sórt
+_metadata.dcterms.alternative=Teideal Malartach
+_metadata.dcterms.conforms.to=Comhlíonann le
+_metadata.dcterms.has.format=Tá formáid aige
+_metadata.dcterms.has.part=tá cuid ag
+_metadata.dcterms.is.format.of=Tá... mar fhormáid de
+_metadata.dcterms.is.referenced.by=Tá... tagartha ag
+_metadata.dcterms.is.replaced.by=Tá...ionadaithe ag
+_metadata.dcterms.ispart.of=Tá... mar chuid de
+_metadata.dcterms.provenance=Úinéireacht
+_metadata.dcterms.references=Tagairtí
+_metadata.dcterms.replaces=Ionadaíonn
+_metadata.dcterms.requires=Éilíonn
+_metadata.dcterms.spatial=Clúdach spasúil
+_metadata.dcterms.temporal=Clúdach ama
 _mine.date.saved=Dáta sábháilte
 _mine.delete=Scrios
+_mine.last.name=Last name
 _mine.saved.items=Míreanna sábhailte
 _mine.saved.searches=Cuardaigh shábháilte
 _mine.saved.tags=Clibeanna sábhailte
@@ -148,7 +174,9 @@ _unused.add=Suimigh
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Priontáil an leathanach seo
 _unused.aplacetoshareideas=áit spreagtha agus smaointe. Déan cuardach ar bhailiúcháin chultúrtha na hEorpa, nasc le cosáin úsáideora eile agus roinn do chuid fionnahtana
+_unused.bosnia.and.herzegovina=An Bhoisnia-Heirseagaivéin
 _unused.browse.through.time=Brabhsáil trí am
+_unused.other=Eile
 _unused.privacy=Príobháideacht
 _unused.remember.me=Cuimhnigh orm ar an ríomhaire seo
 _unused.remove=Bain
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Roinn do chuid smaointe
 _unused.show.all=Taispeáin gach rud
 _unused.sign.in=Sínigh isteach
 _unused.site.map=Mapa suímh
+_unused.slovenia=An tSlóivéin
 _unused.sound=Fuaim
 _unused.tag.added=Clib curtha leis seo
 _unused.tag.addition.failed=Theip ort an chlib a chur leis seo
@@ -170,107 +199,78 @@ _unused.view.as.xml=Amharc mar XML
 _unused.view.with.labels=Amharc le lipéid
 _unused.view.without.labels=Amharc gan lipéidd
 _unused.you.have.search.for=Chuardaigh tú
-albania_t=An Albáin
-armenia_t=An Airméin
-austria_t=An Ostair
-azerbaijan_t=An Asarbaiseáin
-belgium_t=An Bheilg
-bosniaAndHerzegovina_t=An Bhoisnia-Heirseagaivéin
-bulgaria_t=An Bhulgáir
-croatia_t=An Chróit
-croatian_t=Cróitis (hrv)
-cyprus_t=An Chipir
-czech_t=Poblacht na Seice
-czechlanguage_t=Seicis (cze/cse)
-danish_t=Danmhairgis(dan)
-dc_contributor_t=Rannpháirtí
-dc_coverage_t=Clúdach
-dc_creator_t=Údar
-dc_date_t=Dáta
-dc_description_t=Cur síos
 dc_format_t=Formáid
 dc_identifier_t=Aitheantóir
-dc_language_t=Teanga
 dc_publisher_t=Foilsitheoir
 dc_relation_t=Coibhneas
-dc_rights_t=Cearta
 dc_source_t=Foinse
-dc_subject_t=Ábhar
-dc_title_t=Teideal
-dc_type_t=Sórt
-dcterms_alternative_t=Teideal Malartach
-dcterms_conformsTo_t=Comhlíonann le
-dcterms_hasFormat_t=Tá formáid aige
-dcterms_hasPart_t=tá cuid ag
-dcterms_isFormatOf_t=Tá... mar fhormáid de
-dcterms_isPartOf_t=Tá... mar chuid de
-dcterms_isReferencedBy_t=Tá... tagartha ag
-dcterms_isReplacedBy_t=Tá...ionadaithe ag
-dcterms_provenance_t=Úinéireacht
-dcterms_references_t=Tagairtí
-dcterms_replaces_t=Ionadaíonn
-dcterms_requires_t=Éilíonn
-dcterms_spatial_t=Clúdach spasúil
-dcterms_temporal_t=Clúdach ama
-denmark_t=An Danmhairg
-dutch_t=Ollainnis(dut)
-english_t=Béarla (eng)
-estonia_t=An Eastóin
-estonian_t=Eastóinis(est)
-finland_t=An Fhionlainn
-finnish_t=Fionlainnis(fin)
-france_t=An Fhrainc
-french_t=Fraincis(fre)
-georgia_t=An tSeoirsia
-german_t=Gearmáinis (deu)
-germany_t=An Ghearmáin
-greece_t=An Ghréig
-greek_t=Gréigis(ell/gre)
-hungarian_t=Ungáiris (hun)
-hungary_t=An Ungáir
-iceland_t=An Íoslainn
-icelandic_t=Mórlainnis (ice)
-ireland_t=Éire
-italian_t=Iodáilis (ita)
-italyFlorence_t=An Iodáil-Flórans
-italyRome_t=An Iodáil-An Róimh
 languageDropDownList_t=Teanga
-lastName_t=Last name
-latvia_t=An Laitvia
-latvian_t=Laitvis (lav)
-liechtenstein_t=Lichtinstéin
-lithuania_t=An Liotuáin
-lithuanian_t=Liotuáinis (lit)
-luxembourg_t=Lucsamburg
-luxemburgish_t=Lucsambuirgis (ltz)
-malta_t=Málta
-maltese_t=Máltais (mlt)
-moldova_t=An Mholdóiv
-netherlands_t=An Ísiltír
-norway_t=An Iorua
-norwegian_t=Ioruais (nor)
-other_t=Eile
-poland_t=An Pholainn
-polish_t=Polainnis (pol)
-portugal_t=An Phortaingéil
-portuguese_t=Portaingéilis (por)
+locale.albania=An Albáin
+locale.armenia=An Airméin
+locale.austria=An Ostair
+locale.azerbaijan=An Asarbaiseáin
+locale.belgium=An Bheilg
+locale.bulgaria=An Bhulgáir
+locale.croatia=An Chróit
+locale.croatian=Cróitis (hrv)
+locale.cyprus=An Chipir
+locale.czech=Poblacht na Seice
+locale.czechlanguage=Seicis (cze/cse)
+locale.danish=Danmhairgis(dan)
+locale.denmark=An Danmhairg
+locale.dutch=Ollainnis(dut)
+locale.english=Béarla (eng)
+locale.estonia=An Eastóin
+locale.estonian=Eastóinis(est)
+locale.finland=An Fhionlainn
+locale.finnish=Fionlainnis(fin)
+locale.france=An Fhrainc
+locale.french=Fraincis(fre)
+locale.georgia=An tSeoirsia
+locale.german=Gearmáinis (deu)
+locale.germany=An Ghearmáin
+locale.greece=An Ghréig
+locale.greek=Gréigis(ell/gre)
+locale.hungarian=Ungáiris (hun)
+locale.hungary=An Ungáir
+locale.iceland=An Íoslainn
+locale.icelandic=Mórlainnis (ice)
+locale.ireland=Éire
+locale.italy.florence=An Iodáil-Flórans
+locale.italy.rome=An Iodáil-An Róimh
+locale.latvia=An Laitvia
+locale.latvian=Laitvis (lav)
+locale.liechtenstein=Lichtinstéin
+locale.lithuania=An Liotuáin
+locale.lithuanian=Liotuáinis (lit)
+locale.luxembourg=Lucsamburg
+locale.luxemburgish=Lucsambuirgis (ltz)
+locale.malta=Málta
+locale.maltese=Máltais (mlt)
+locale.moldova=An Mholdóiv
+locale.netherlands=An Ísiltír
+locale.norway=An Iorua
+locale.norwegian=Ioruais (nor)
+locale.poland=An Pholainn
+locale.polish=Polainnis (pol)
+locale.portugal=An Phortaingéil
+locale.portuguese=Portaingéilis (por)
+locale.romania=An Rómáin
+locale.romanian=Rómáinis (rom)
+locale.russia.moscow=An Rúis-Moscó
+locale.russia.st.petersburg=An Rúis-Cathair Pheadair
+locale.russian=Rúisis (rus)
+locale.serbia=An tSeirbia
+locale.serbian=Seirbis (scc)
+locale.slovak=Slóvaicis (slo)
+locale.slovakia=An tSlóvaic
+locale.slovenian=Slóivéinis (slv)
+locale.spain=An Spáinn
+locale.spanish=Spáinnis (esp)
+locale.sweden=An tSualainn
+locale.swedish=Sualainnis (sve/swe)
+locale.switzerland=An Eilvéis
+locale.turkey=An Tuirc
+locale.uk=An Ríocht Aontaithe
+locale.ukraine=An Úcráin
 registrationSucceed_t=D'éirigh leat tú féin a chlárú
-romania_t=An Rómáin
-romanian_t=Rómáinis (rom)
-russiaMoscow_t=An Rúis-Moscó
-russiaStPetersburg_t=An Rúis-Cathair Pheadair
-russian_t=Rúisis (rus)
-serbia_t=An tSeirbia
-serbian_t=Seirbis (scc)
-slovak_t=Slóvaicis (slo)
-slovakia_t=An tSlóvaic
-slovenia_t=An tSlóivéin
-slovenian_t=Slóivéinis (slv)
-spain_t=An Spáinn
-spanish_t=Spáinnis (esp)
-sweden_t=An tSualainn
-swedish_t=Sualainnis (sve/swe)
-switzerland_t=An Eilvéis
-turkey_t=An Tuirc
-uk_t=An Ríocht Aontaithe
-ukraine_t=An Úcráin
