--- a/portal/src/main/resources/i18n/messages_hr.properties
+++ b/portal/src/main/resources/i18n/messages_hr.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
+_language_select.italian=talijanski (ita)
+_metadata.dc.contributor=Suradnik
+_metadata.dc.coverage=Obuhvat
+_metadata.dc.creator=Autor
+_metadata.dc.date=Datum
+_metadata.dc.description=Opis
+_metadata.dc.language=Jezik
+_metadata.dc.rights=Prava
+_metadata.dc.subject=Predmet
+_metadata.dc.title=Naslov
+_metadata.dc.type=Vrsta
+_metadata.dcterms.alternative=Alternativni naslov
+_metadata.dcterms.conforms.to=Conforms to
+_metadata.dcterms.has.format=Has format
+_metadata.dcterms.has.part=Has part
+_metadata.dcterms.is.format.of=Is format of
+_metadata.dcterms.is.referenced.by=Is referenced by
+_metadata.dcterms.is.replaced.by=Is replaced by
+_metadata.dcterms.ispart.of=Dio
+_metadata.dcterms.provenance=Provenance
+_metadata.dcterms.references=References
+_metadata.dcterms.replaces=Replaces
+_metadata.dcterms.requires=Requires
+_metadata.dcterms.spatial=Prostorni obuhvat
+_metadata.dcterms.temporal=Vremenski obuhvat
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.last.name=Last name
 _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
@@ -148,7 +174,9 @@ _unused.add=Add
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
+_unused.bosnia.and.herzegovina=Bosnia and Herzegovina
 _unused.browse.through.time=Browse through time
+_unused.other=Ostali
 _unused.privacy=Privacy
 _unused.remember.me=Remember me on this computer
 _unused.remove=Remove
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Share your ideas
 _unused.show.all=Show all
 _unused.sign.in=Sign in
 _unused.site.map=Sitemap
+_unused.slovenia=Slovenija
 _unused.sound=Sound
 _unused.tag.added=Tag added
 _unused.tag.addition.failed=Tag addition failed
@@ -170,107 +199,78 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Austrija
-azerbaijan_t=Azerbaijan
-belgium_t=Belgija
-bosniaAndHerzegovina_t=Bosnia and Herzegovina
-bulgaria_t=Bulgaria
-croatia_t=Hrvatska
-croatian_t=hrvatski (hrv)
-cyprus_t=Cipar
-czech_t=Republika Češka
-czechlanguage_t=češki (cze/cse)
-danish_t=danski (dan)
-dc_contributor_t=Suradnik
-dc_coverage_t=Obuhvat
-dc_creator_t=Autor
-dc_date_t=Datum
-dc_description_t=Opis
 dc_format_t=Format
 dc_identifier_t=Identifikator
-dc_language_t=Jezik
 dc_publisher_t=Nakladnik
 dc_relation_t=Odnos
-dc_rights_t=Prava
 dc_source_t=Izvor
-dc_subject_t=Predmet
-dc_title_t=Naslov
-dc_type_t=Vrsta
-dcterms_alternative_t=Alternativni naslov
-dcterms_conformsTo_t=Conforms to
-dcterms_hasFormat_t=Has format
-dcterms_hasPart_t=Has part
-dcterms_isFormatOf_t=Is format of
-dcterms_isPartOf_t=Dio
-dcterms_isReferencedBy_t=Is referenced by
-dcterms_isReplacedBy_t=Is replaced by
-dcterms_provenance_t=Provenance
-dcterms_references_t=References
-dcterms_replaces_t=Replaces
-dcterms_requires_t=Requires
-dcterms_spatial_t=Prostorni obuhvat
-dcterms_temporal_t=Vremenski obuhvat
-denmark_t=Danska
-dutch_t=holandski (dut)
-english_t=engleski (eng)
-estonia_t=Estonija
-estonian_t=estonski (est)
-finland_t=Finska
-finnish_t=finski (fin)
-france_t=Francuska
-french_t=francuski (fre)
-georgia_t=Georgia
-german_t=njemački (deu)
-germany_t=Njemačka
-greece_t=Grčka
-greek_t=grčki (ell/gre)
-hungarian_t=madžarski (hun)
-hungary_t=Madžarska
-iceland_t=Island
-icelandic_t=islandski (ice)
-ireland_t=Irska
-italian_t=talijanski (ita)
-italyFlorence_t=Italija - Firenca
-italyRome_t=Italija - Rim
 languageDropDownList_t=Jezik
-lastName_t=Last name
-latvia_t=Latvija
-latvian_t=latvijski (lav)
-liechtenstein_t=Lihtenštajn
-lithuania_t=Litva
-lithuanian_t=litvanski (lit)
-luxembourg_t=Luksemburg
-luxemburgish_t=Luxemburgish (ltz)
-malta_t=Malta
-maltese_t=Maltese (mlt)
-moldova_t=Moldova
-netherlands_t=Nizozemska
-norway_t=Norveška
-norwegian_t=Norwegian (nor)
-other_t=Ostali
-poland_t=Poljska
-polish_t=Polish (pol)
-portugal_t=Portugal
-portuguese_t=portugalski (por)
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Austrija
+locale.azerbaijan=Azerbaijan
+locale.belgium=Belgija
+locale.bulgaria=Bulgaria
+locale.croatia=Hrvatska
+locale.croatian=hrvatski (hrv)
+locale.cyprus=Cipar
+locale.czech=Republika Češka
+locale.czechlanguage=češki (cze/cse)
+locale.danish=danski (dan)
+locale.denmark=Danska
+locale.dutch=holandski (dut)
+locale.english=engleski (eng)
+locale.estonia=Estonija
+locale.estonian=estonski (est)
+locale.finland=Finska
+locale.finnish=finski (fin)
+locale.france=Francuska
+locale.french=francuski (fre)
+locale.georgia=Georgia
+locale.german=njemački (deu)
+locale.germany=Njemačka
+locale.greece=Grčka
+locale.greek=grčki (ell/gre)
+locale.hungarian=madžarski (hun)
+locale.hungary=Madžarska
+locale.iceland=Island
+locale.icelandic=islandski (ice)
+locale.ireland=Irska
+locale.italy.florence=Italija - Firenca
+locale.italy.rome=Italija - Rim
+locale.latvia=Latvija
+locale.latvian=latvijski (lav)
+locale.liechtenstein=Lihtenštajn
+locale.lithuania=Litva
+locale.lithuanian=litvanski (lit)
+locale.luxembourg=Luksemburg
+locale.luxemburgish=Luxemburgish (ltz)
+locale.malta=Malta
+locale.maltese=Maltese (mlt)
+locale.moldova=Moldova
+locale.netherlands=Nizozemska
+locale.norway=Norveška
+locale.norwegian=Norwegian (nor)
+locale.poland=Poljska
+locale.polish=Polish (pol)
+locale.portugal=Portugal
+locale.portuguese=portugalski (por)
+locale.romania=Romania
+locale.romanian=Romanian (rom)
+locale.russia.moscow=Russia - Moscow
+locale.russia.st.petersburg=Russia - Saint Petersburg
+locale.russian=Russian (rus)
+locale.serbia=Srbija
+locale.serbian=srpski (scc)
+locale.slovak=slovački (slo)
+locale.slovakia=Slovačka
+locale.slovenian=slovenski (slv)
+locale.spain=Španjolska
+locale.spanish=španjolski (esp)
+locale.sweden=Švedska
+locale.swedish=švedski (sve/swe)
+locale.switzerland=Švicarska
+locale.turkey=Turkey
+locale.uk=Ujedinjeno Kraljevstvo
+locale.ukraine=Ukraine
 registrationSucceed_t=Uspješno ste se registrirali
-romania_t=Romania
-romanian_t=Romanian (rom)
-russiaMoscow_t=Russia - Moscow
-russiaStPetersburg_t=Russia - Saint Petersburg
-russian_t=Russian (rus)
-serbia_t=Srbija
-serbian_t=srpski (scc)
-slovak_t=slovački (slo)
-slovakia_t=Slovačka
-slovenia_t=Slovenija
-slovenian_t=slovenski (slv)
-spain_t=Španjolska
-spanish_t=španjolski (esp)
-sweden_t=Švedska
-swedish_t=švedski (sve/swe)
-switzerland_t=Švicarska
-turkey_t=Turkey
-uk_t=Ujedinjeno Kraljevstvo
-ukraine_t=Ukraine
