--- a/portal/src/main/resources/i18n/messages_hu.properties
+++ b/portal/src/main/resources/i18n/messages_hu.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=A keresés mentése sikertelen.
 _header.actions=Műveletek
 _header.relatedcontent=Kapcsolódó tartalom
+_language_select.italian=olasz
+_metadata.dc.contributor=Közreműködő
+_metadata.dc.coverage=Tartalom
+_metadata.dc.creator=Szerző
+_metadata.dc.date=Kiadási év
+_metadata.dc.description=Leírás
+_metadata.dc.language=Language
+_metadata.dc.rights=Jogok
+_metadata.dc.subject=Tárgyszó
+_metadata.dc.title=Cím
+_metadata.dc.type=Típus
+_metadata.dcterms.alternative=Párhuzamos cím
+_metadata.dcterms.conforms.to=Összhangban
+_metadata.dcterms.has.format=Formátumú
+_metadata.dcterms.has.part=Részben
+_metadata.dcterms.is.format.of=Formátumú
+_metadata.dcterms.is.referenced.by=Hivatkozva
+_metadata.dcterms.is.replaced.by=Felcserélve
+_metadata.dcterms.ispart.of=Része
+_metadata.dcterms.provenance=Származás
+_metadata.dcterms.references=Hivatkozás
+_metadata.dcterms.replaces=Helyettesít
+_metadata.dcterms.requires=Igényel
+_metadata.dcterms.spatial=Térbeli lefedettség
+_metadata.dcterms.temporal=Időbeli lefedettség
 _mine.date.saved=Dátum mentése
 _mine.delete=Törlés
+_mine.last.name=Családnév
 _mine.saved.items=Mentett elemek
 _mine.saved.searches=Mentett keresések
 _mine.saved.tags=Mentett címkék
@@ -148,7 +174,9 @@ _unused.add=Hozzáad
 _unused.aggregator.explain=*A szolgáltató összegyűjti a közreműködőktől a különböző anyagokat, amelyeket megjelenítenek a saját honlapjukon, valamint az Europeanán.
 _unused.altprint=Nyomtatás
 _unused.aplacetoshareideas=- teret ad a gondolatoknak és inspirációknak. Keressen Európa kulturális gyűjteményeiben, kapcsolódjon más felhasználók keresési útvonalaihoz, és ossza meg felefdezéseit!
+_unused.bosnia.and.herzegovina=Bosznia-Hercegovina
 _unused.browse.through.time=Idő szerinti keresés
+_unused.other=egyéb
 _unused.privacy=Adatvédelem
 _unused.remember.me=Emlékezzen rám ezen a számítógépen
 _unused.remove=Törlés
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Ossza meg gondolatait
 _unused.show.all=Az összes megtekintése
 _unused.sign.in=Bejelentkezés
 _unused.site.map=Honlaptérkép
+_unused.slovenia=Szlovénia
 _unused.sound=Hang
 _unused.tag.added=Címke hozzáadva
 _unused.tag.addition.failed=A címke hozzáadása sikertelen.
@@ -170,107 +199,78 @@ _unused.view.as.xml=XML nézet
 _unused.view.with.labels=Feliratos nézet
 _unused.view.without.labels=Felirat nélküli nézet
 _unused.you.have.search.for=Keresés
-albania_t=Albánia
-armenia_t=Örményország
-austria_t=Ausztria
-azerbaijan_t=Azerbajdzsán
-belgium_t=Belgium
-bosniaAndHerzegovina_t=Bosznia-Hercegovina
-bulgaria_t=Bulgária
-croatia_t=Horvátország
-croatian_t=horvát
-cyprus_t=Ciprus
-czech_t=Cseh Köztársaság
-czechlanguage_t=cseh
-danish_t=dán
-dc_contributor_t=Közreműködő
-dc_coverage_t=Tartalom
-dc_creator_t=Szerző
-dc_date_t=Kiadási év
-dc_description_t=Leírás
 dc_format_t=Formátum
 dc_identifier_t=Azonosító
-dc_language_t=Language
 dc_publisher_t=Kiadó
 dc_relation_t=Kapcsolat
-dc_rights_t=Jogok
 dc_source_t=Forrás
-dc_subject_t=Tárgyszó
-dc_title_t=Cím
-dc_type_t=Típus
-dcterms_alternative_t=Párhuzamos cím
-dcterms_conformsTo_t=Összhangban
-dcterms_hasFormat_t=Formátumú
-dcterms_hasPart_t=Részben
-dcterms_isFormatOf_t=Formátumú
-dcterms_isPartOf_t=Része
-dcterms_isReferencedBy_t=Hivatkozva
-dcterms_isReplacedBy_t=Felcserélve
-dcterms_provenance_t=Származás
-dcterms_references_t=Hivatkozás
-dcterms_replaces_t=Helyettesít
-dcterms_requires_t=Igényel
-dcterms_spatial_t=Térbeli lefedettség
-dcterms_temporal_t=Időbeli lefedettség
-denmark_t=Dánia
-dutch_t=holland
-english_t=angol
-estonia_t=Észtország
-estonian_t=észt
-finland_t=Finnország
-finnish_t=finn
-france_t=Franciaország
-french_t=francia
-georgia_t=Grúzia
-german_t=német
-germany_t=Németország
-greece_t=Görögország
-greek_t=görög
-hungarian_t=magyar
-hungary_t=Magyarország
-iceland_t=Izland
-icelandic_t=izlandi
-ireland_t=Írország
-italian_t=olasz
-italyFlorence_t=Olaszország-Firenze
-italyRome_t=Olaszország-Róma
 languageDropDownList_t=Nyelv
-lastName_t=Családnév
-latvia_t=Lettország
-latvian_t=lett
-liechtenstein_t=Lichtenstein
-lithuania_t=Litvánia
-lithuanian_t=litván
-luxembourg_t=Luxemburg
-luxemburgish_t=luxemburgi
-malta_t=Málta
-maltese_t=máltai
-moldova_t=Moldávia
-netherlands_t=Hollandia
-norway_t=Norvégia
-norwegian_t=norvég
-other_t=egyéb
-poland_t=Lengyelország
-polish_t=lengyel
-portugal_t=Portugália
-portuguese_t=portugál
+locale.albania=Albánia
+locale.armenia=Örményország
+locale.austria=Ausztria
+locale.azerbaijan=Azerbajdzsán
+locale.belgium=Belgium
+locale.bulgaria=Bulgária
+locale.croatia=Horvátország
+locale.croatian=horvát
+locale.cyprus=Ciprus
+locale.czech=Cseh Köztársaság
+locale.czechlanguage=cseh
+locale.danish=dán
+locale.denmark=Dánia
+locale.dutch=holland
+locale.english=angol
+locale.estonia=Észtország
+locale.estonian=észt
+locale.finland=Finnország
+locale.finnish=finn
+locale.france=Franciaország
+locale.french=francia
+locale.georgia=Grúzia
+locale.german=német
+locale.germany=Németország
+locale.greece=Görögország
+locale.greek=görög
+locale.hungarian=magyar
+locale.hungary=Magyarország
+locale.iceland=Izland
+locale.icelandic=izlandi
+locale.ireland=Írország
+locale.italy.florence=Olaszország-Firenze
+locale.italy.rome=Olaszország-Róma
+locale.latvia=Lettország
+locale.latvian=lett
+locale.liechtenstein=Lichtenstein
+locale.lithuania=Litvánia
+locale.lithuanian=litván
+locale.luxembourg=Luxemburg
+locale.luxemburgish=luxemburgi
+locale.malta=Málta
+locale.maltese=máltai
+locale.moldova=Moldávia
+locale.netherlands=Hollandia
+locale.norway=Norvégia
+locale.norwegian=norvég
+locale.poland=Lengyelország
+locale.polish=lengyel
+locale.portugal=Portugália
+locale.portuguese=portugál
+locale.romania=Románia
+locale.romanian=román
+locale.russia.moscow=Oroszország-Moszkva
+locale.russia.st.petersburg=Oroszország-Szentpétervár
+locale.russian=orosz
+locale.serbia=Szerbia
+locale.serbian=szerb
+locale.slovak=szlovák
+locale.slovakia=Szlovákia
+locale.slovenian=szlovén
+locale.spain=Spanyolország
+locale.spanish=spanyol
+locale.sweden=Svédország
+locale.swedish=svéd
+locale.switzerland=Svájc
+locale.turkey=Törökország
+locale.uk=Egyesült Királyság
+locale.ukraine=Ukrajna
 registrationSucceed_t=Ön sikeresen regisztrált.
-romania_t=Románia
-romanian_t=román
-russiaMoscow_t=Oroszország-Moszkva
-russiaStPetersburg_t=Oroszország-Szentpétervár
-russian_t=orosz
-serbia_t=Szerbia
-serbian_t=szerb
-slovak_t=szlovák
-slovakia_t=Szlovákia
-slovenia_t=Szlovénia
-slovenian_t=szlovén
-spain_t=Spanyolország
-spanish_t=spanyol
-sweden_t=Svédország
-swedish_t=svéd
-switzerland_t=Svájc
-turkey_t=Törökország
-uk_t=Egyesült Királyság
-ukraine_t=Ukrajna
