--- a/portal/src/main/resources/i18n/messages_hy.properties
+++ b/portal/src/main/resources/i18n/messages_hy.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
+_language_select.italian=Italian (ita)
+_metadata.dc.contributor=Contributor
+_metadata.dc.coverage=Coverage
+_metadata.dc.creator=Author
+_metadata.dc.date=Date
+_metadata.dc.description=Description
+_metadata.dc.language=Language
+_metadata.dc.rights=Rights
+_metadata.dc.subject=Subject
+_metadata.dc.title=Title
+_metadata.dc.type=Type
+_metadata.dcterms.alternative=Alternative Title
+_metadata.dcterms.conforms.to=Conforms to
+_metadata.dcterms.has.format=Has format
+_metadata.dcterms.has.part=Has part
+_metadata.dcterms.is.format.of=Is format of
+_metadata.dcterms.is.referenced.by=Is referenced by
+_metadata.dcterms.is.replaced.by=Is replaced by
+_metadata.dcterms.ispart.of=Is Part of
+_metadata.dcterms.provenance=Provenance
+_metadata.dcterms.references=References
+_metadata.dcterms.replaces=Replaces
+_metadata.dcterms.requires=Requires
+_metadata.dcterms.spatial=Spatial coverage
+_metadata.dcterms.temporal=Temporal coverage
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.last.name=Last name
 _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
@@ -148,7 +174,9 @@ _unused.add=Add
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
+_unused.bosnia.and.herzegovina=Bosnia and Herzegovina
 _unused.browse.through.time=Browse through time
+_unused.other=Other
 _unused.privacy=Privacy
 _unused.remember.me=Remember me on this computer
 _unused.remove=Remove
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Share your ideas
 _unused.show.all=Show all
 _unused.sign.in=Sign in
 _unused.site.map=Sitemap
+_unused.slovenia=Slovenia
 _unused.sound=Sound
 _unused.tag.added=Tag added
 _unused.tag.addition.failed=Tag addition failed
@@ -170,107 +199,78 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Austria
-azerbaijan_t=Azerbaijan
-belgium_t=Belgium
-bosniaAndHerzegovina_t=Bosnia and Herzegovina
-bulgaria_t=Bulgaria
-croatia_t=Croatia
-croatian_t=Croatian (hrv)
-cyprus_t=Cyprus
-czech_t=Czech Republic
-czechlanguage_t=Czech (cze/cse)
-danish_t=Danish (dan)
-dc_contributor_t=Contributor
-dc_coverage_t=Coverage
-dc_creator_t=Author
-dc_date_t=Date
-dc_description_t=Description
 dc_format_t=Format
 dc_identifier_t=Identifier
-dc_language_t=Language
 dc_publisher_t=Publisher
 dc_relation_t=Relation
-dc_rights_t=Rights
 dc_source_t=Source
-dc_subject_t=Subject
-dc_title_t=Title
-dc_type_t=Type
-dcterms_alternative_t=Alternative Title
-dcterms_conformsTo_t=Conforms to
-dcterms_hasFormat_t=Has format
-dcterms_hasPart_t=Has part
-dcterms_isFormatOf_t=Is format of
-dcterms_isPartOf_t=Is Part of
-dcterms_isReferencedBy_t=Is referenced by
-dcterms_isReplacedBy_t=Is replaced by
-dcterms_provenance_t=Provenance
-dcterms_references_t=References
-dcterms_replaces_t=Replaces
-dcterms_requires_t=Requires
-dcterms_spatial_t=Spatial coverage
-dcterms_temporal_t=Temporal coverage
-denmark_t=Denmark
-dutch_t=Dutch (dut)
-english_t=English (eng)
-estonia_t=Estonia
-estonian_t=Estonian (est)
-finland_t=Finland
-finnish_t=Finnish (fin)
-france_t=France
-french_t=French (fre)
-georgia_t=Georgia
-german_t=German (deu)
-germany_t=Germany
-greece_t=Greece
-greek_t=Greek (ell/gre)
-hungarian_t=Hungarian (hun)
-hungary_t=Hungary
-iceland_t=Iceland
-icelandic_t=Icelandic (ice)
-ireland_t=Ireland
-italian_t=Italian (ita)
-italyFlorence_t=Italy-Florence
-italyRome_t=Italy-Rome
 languageDropDownList_t=Language
-lastName_t=Last name
-latvia_t=Latvia
-latvian_t=Latvian (lav)
-liechtenstein_t=Liechtenstein
-lithuania_t=Lithuania
-lithuanian_t=Lithuanian (lit)
-luxembourg_t=Luxembourg
-luxemburgish_t=Luxemburgish (ltz)
-malta_t=Malta
-maltese_t=Maltese (mlt)
-moldova_t=Moldova
-netherlands_t=Netherlands
-norway_t=Norway
-norwegian_t=Norwegian (nor)
-other_t=Other
-poland_t=Poland
-polish_t=Polish (pol)
-portugal_t=Portugal
-portuguese_t=Portuguese (por)
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Austria
+locale.azerbaijan=Azerbaijan
+locale.belgium=Belgium
+locale.bulgaria=Bulgaria
+locale.croatia=Croatia
+locale.croatian=Croatian (hrv)
+locale.cyprus=Cyprus
+locale.czech=Czech Republic
+locale.czechlanguage=Czech (cze/cse)
+locale.danish=Danish (dan)
+locale.denmark=Denmark
+locale.dutch=Dutch (dut)
+locale.english=English (eng)
+locale.estonia=Estonia
+locale.estonian=Estonian (est)
+locale.finland=Finland
+locale.finnish=Finnish (fin)
+locale.france=France
+locale.french=French (fre)
+locale.georgia=Georgia
+locale.german=German (deu)
+locale.germany=Germany
+locale.greece=Greece
+locale.greek=Greek (ell/gre)
+locale.hungarian=Hungarian (hun)
+locale.hungary=Hungary
+locale.iceland=Iceland
+locale.icelandic=Icelandic (ice)
+locale.ireland=Ireland
+locale.italy.florence=Italy-Florence
+locale.italy.rome=Italy-Rome
+locale.latvia=Latvia
+locale.latvian=Latvian (lav)
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Lithuania
+locale.lithuanian=Lithuanian (lit)
+locale.luxembourg=Luxembourg
+locale.luxemburgish=Luxemburgish (ltz)
+locale.malta=Malta
+locale.maltese=Maltese (mlt)
+locale.moldova=Moldova
+locale.netherlands=Netherlands
+locale.norway=Norway
+locale.norwegian=Norwegian (nor)
+locale.poland=Poland
+locale.polish=Polish (pol)
+locale.portugal=Portugal
+locale.portuguese=Portuguese (por)
+locale.romania=Romania
+locale.romanian=Romanian (rom)
+locale.russia.moscow=Russia - Moscow
+locale.russia.st.petersburg=Russia - Saint Petersburg
+locale.russian=Russian (rus)
+locale.serbia=Serbia
+locale.serbian=Serbian (scc)
+locale.slovak=Slovak (slo)
+locale.slovakia=Slovakia
+locale.slovenian=Slovenian (slv)
+locale.spain=Spain
+locale.spanish=Spanish (esp)
+locale.sweden=Sweden
+locale.swedish=Swedish (sve/swe)
+locale.switzerland=Switzerland
+locale.turkey=Turkey
+locale.uk=United Kingdom
+locale.ukraine=Ukraine
 registrationSucceed_t=You have successfully registered
-romania_t=Romania
-romanian_t=Romanian (rom)
-russiaMoscow_t=Russia - Moscow
-russiaStPetersburg_t=Russia - Saint Petersburg
-russian_t=Russian (rus)
-serbia_t=Serbia
-serbian_t=Serbian (scc)
-slovak_t=Slovak (slo)
-slovakia_t=Slovakia
-slovenia_t=Slovenia
-slovenian_t=Slovenian (slv)
-spain_t=Spain
-spanish_t=Spanish (esp)
-sweden_t=Sweden
-swedish_t=Swedish (sve/swe)
-switzerland_t=Switzerland
-turkey_t=Turkey
-uk_t=United Kingdom
-ukraine_t=Ukraine
