--- a/portal/src/main/resources/i18n/messages_is.properties
+++ b/portal/src/main/resources/i18n/messages_is.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Vistun á leit mistókst
 _header.actions=Aðgerðir
 _header.relatedcontent=Tengt efni
+_language_select.italian=Ítalska (ita)
+_metadata.dc.contributor=Samverkamenn
+_metadata.dc.coverage=Yfirgrip
+_metadata.dc.creator=Höfundur
+_metadata.dc.date=Ártal
+_metadata.dc.description=Lýsing
+_metadata.dc.language=Tungumál
+_metadata.dc.rights=Réttindi
+_metadata.dc.subject=Efni
+_metadata.dc.title=Titill
+_metadata.dc.type=Tegund
+_metadata.dcterms.alternative=Annar titill
+_metadata.dcterms.conforms.to=Svarar til
+_metadata.dcterms.has.format=Á forminu
+_metadata.dcterms.has.part=Hefur hluta
+_metadata.dcterms.is.format.of=Er á forminu
+_metadata.dcterms.is.referenced.by=Vísað í af
+_metadata.dcterms.is.replaced.by=Í staðinn fyrir
+_metadata.dcterms.ispart.of=Er hluti af
+_metadata.dcterms.provenance=Ferill skjals
+_metadata.dcterms.references=Tilvísanir
+_metadata.dcterms.replaces=Kemur í stað
+_metadata.dcterms.requires=Krefst
+_metadata.dcterms.spatial=Svæðismörk
+_metadata.dcterms.temporal=Tímamörk
 _mine.date.saved=Vistuð dagsetning
 _mine.delete=Eyða
+_mine.last.name=Eftirnafn
 _mine.saved.items=Vistuð eintök
 _mine.saved.searches=Vistaðar leitir
 _mine.saved.tags=Vistaðar tilvísanir
@@ -148,7 +174,9 @@ _unused.add=Bæta við
 _unused.aggregator.explain=*Safnari safnar efni frá öðrum  efnisveitendum, birtir það á eigin vef og beinir því einnig inn í  Europeana.
 _unused.altprint=Prenta þessa síðu
 _unused.aplacetoshareideas=vefur fyrir hugljómun og hugmyndir. Leitaðu í menningarsöfnum Evrópu, hafðu samband við aðra notendur og deildu með þeim því sem þú finnur.
+_unused.bosnia.and.herzegovina=Bosníu og Hersegóvínu
 _unused.browse.through.time=Fletta í tímaröð
+_unused.other=Annað
 _unused.privacy=Gagnaleynd
 _unused.remember.me=Vistaðu lykilorðið á þessari tölvu
 _unused.remove=Taka burt
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Deildu hugmyndum þínum
 _unused.show.all=Sýna allt
 _unused.sign.in=Innskráning
 _unused.site.map=Veftré
+_unused.slovenia=Slóveníu
 _unused.sound=Hljóð
 _unused.tag.added=Tilvísun bætt við
 _unused.tag.addition.failed=Það mistókst að bæta tilvísun við
@@ -170,107 +199,78 @@ _unused.view.as.xml=Skoða XML
 _unused.view.with.labels=Skoða merki
 _unused.view.without.labels=Fela merki
 _unused.you.have.search.for=Þú leitaðir að
-albania_t=Albaníu
-armenia_t=Armeníu
-austria_t=Austurríki
-azerbaijan_t=Aserbaidsjan
-belgium_t=Belgíu
-bosniaAndHerzegovina_t=Bosníu og Hersegóvínu
-bulgaria_t=Búlgaríu
-croatia_t=Króatíu
-croatian_t=Króatíska (hrv)
-cyprus_t=Kýpur
-czech_t=Tékklandi
-czechlanguage_t=Tékkneska (cze/cse)
-danish_t=Danska (dan)
-dc_contributor_t=Samverkamenn
-dc_coverage_t=Yfirgrip
-dc_creator_t=Höfundur
-dc_date_t=Ártal
-dc_description_t=Lýsing
 dc_format_t=Form
 dc_identifier_t=Auðkenni
-dc_language_t=Tungumál
 dc_publisher_t=Útgefandi
 dc_relation_t=Tenging
-dc_rights_t=Réttindi
 dc_source_t=Uppruni
-dc_subject_t=Efni
-dc_title_t=Titill
-dc_type_t=Tegund
-dcterms_alternative_t=Annar titill
-dcterms_conformsTo_t=Svarar til
-dcterms_hasFormat_t=Á forminu
-dcterms_hasPart_t=Hefur hluta
-dcterms_isFormatOf_t=Er á forminu
-dcterms_isPartOf_t=Er hluti af
-dcterms_isReferencedBy_t=Vísað í af
-dcterms_isReplacedBy_t=Í staðinn fyrir
-dcterms_provenance_t=Ferill skjals
-dcterms_references_t=Tilvísanir
-dcterms_replaces_t=Kemur í stað
-dcterms_requires_t=Krefst
-dcterms_spatial_t=Svæðismörk
-dcterms_temporal_t=Tímamörk
-denmark_t=Danmörku
-dutch_t=Hollenska (dut)
-english_t=Enska (eng)
-estonia_t=Eistlandi
-estonian_t=Eistneska (est)
-finland_t=Finnlandi
-finnish_t=Finnska (fin)
-france_t=Frakklandi
-french_t=Franska (fre)
-georgia_t=Georgíu
-german_t=Þýska (ger)
-germany_t=Þýskalandi
-greece_t=Grikklandi
-greek_t=Gríska (ell/gre)
-hungarian_t=Ungverska (hun)
-hungary_t=Ungverjalandi
-iceland_t=Íslandi
-icelandic_t=Íslenska (ice)
-ireland_t=Írlandi
-italian_t=Ítalska (ita)
-italyFlorence_t=Ítalíu-Flórens
-italyRome_t=Ítalíu - Róm
 languageDropDownList_t=Tungumál
-lastName_t=Eftirnafn
-latvia_t=Lettlandi
-latvian_t=Lettneska (lav)
-liechtenstein_t=Liechtenstein
-lithuania_t=Litháen
-lithuanian_t=Litháíska (lit)
-luxembourg_t=Lúxemborg
-luxemburgish_t=Luxemborgíska (ltz)
-malta_t=Möltu
-maltese_t=Maltneska (mlt)
-moldova_t=Moldóvu
-netherlands_t=Hollandi
-norway_t=Noregi
-norwegian_t=Norska (nor)
-other_t=Annað
-poland_t=Póllandi
-polish_t=Pólska (pol)
-portugal_t=Portúgal
-portuguese_t=Portúgalska (por)
+locale.albania=Albaníu
+locale.armenia=Armeníu
+locale.austria=Austurríki
+locale.azerbaijan=Aserbaidsjan
+locale.belgium=Belgíu
+locale.bulgaria=Búlgaríu
+locale.croatia=Króatíu
+locale.croatian=Króatíska (hrv)
+locale.cyprus=Kýpur
+locale.czech=Tékklandi
+locale.czechlanguage=Tékkneska (cze/cse)
+locale.danish=Danska (dan)
+locale.denmark=Danmörku
+locale.dutch=Hollenska (dut)
+locale.english=Enska (eng)
+locale.estonia=Eistlandi
+locale.estonian=Eistneska (est)
+locale.finland=Finnlandi
+locale.finnish=Finnska (fin)
+locale.france=Frakklandi
+locale.french=Franska (fre)
+locale.georgia=Georgíu
+locale.german=Þýska (ger)
+locale.germany=Þýskalandi
+locale.greece=Grikklandi
+locale.greek=Gríska (ell/gre)
+locale.hungarian=Ungverska (hun)
+locale.hungary=Ungverjalandi
+locale.iceland=Íslandi
+locale.icelandic=Íslenska (ice)
+locale.ireland=Írlandi
+locale.italy.florence=Ítalíu-Flórens
+locale.italy.rome=Ítalíu - Róm
+locale.latvia=Lettlandi
+locale.latvian=Lettneska (lav)
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Litháen
+locale.lithuanian=Litháíska (lit)
+locale.luxembourg=Lúxemborg
+locale.luxemburgish=Luxemborgíska (ltz)
+locale.malta=Möltu
+locale.maltese=Maltneska (mlt)
+locale.moldova=Moldóvu
+locale.netherlands=Hollandi
+locale.norway=Noregi
+locale.norwegian=Norska (nor)
+locale.poland=Póllandi
+locale.polish=Pólska (pol)
+locale.portugal=Portúgal
+locale.portuguese=Portúgalska (por)
+locale.romania=Rúmeníu
+locale.romanian=Rúmenska
+locale.russia.moscow=Rússlandi - Moskvu
+locale.russia.st.petersburg=Rússlandi - Sankti Pétursborg
+locale.russian=Rússneska
+locale.serbia=Serbíu
+locale.serbian=Serbneska (scc)
+locale.slovak=Slóvakíska (slo)
+locale.slovakia=Slóvakíu
+locale.slovenian=Slóvenska (slv)
+locale.spain=Spáni
+locale.spanish=Spænska (esp)
+locale.sweden=Svíþjóð
+locale.swedish=Sænska (sve/swe)
+locale.switzerland=Sviss
+locale.turkey=Tyrklandi
+locale.uk=Bretlandi
+locale.ukraine=Úkraínu
 registrationSucceed_t=Skráning tókst
-romania_t=Rúmeníu
-romanian_t=Rúmenska
-russiaMoscow_t=Rússlandi - Moskvu
-russiaStPetersburg_t=Rússlandi - Sankti Pétursborg
-russian_t=Rússneska
-serbia_t=Serbíu
-serbian_t=Serbneska (scc)
-slovak_t=Slóvakíska (slo)
-slovakia_t=Slóvakíu
-slovenia_t=Slóveníu
-slovenian_t=Slóvenska (slv)
-spain_t=Spáni
-spanish_t=Spænska (esp)
-sweden_t=Svíþjóð
-swedish_t=Sænska (sve/swe)
-switzerland_t=Sviss
-turkey_t=Tyrklandi
-uk_t=Bretlandi
-ukraine_t=Úkraínu
