--- a/portal/src/main/resources/i18n/messages_it.properties
+++ b/portal/src/main/resources/i18n/messages_it.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Salvataggio ricerca fallito
 _header.actions=Azioni
 _header.relatedcontent=Contenuti correlati
+_language_select.italian=italiano
+_metadata.dc.contributor=Autore di contributo subordinato
+_metadata.dc.coverage=Copertura
+_metadata.dc.creator=Autore
+_metadata.dc.date=Data
+_metadata.dc.description=Descrizione
+_metadata.dc.language=Lingua
+_metadata.dc.rights=Diritti
+_metadata.dc.subject=Soggetto
+_metadata.dc.title=Titolo
+_metadata.dc.type=Tipo
+_metadata.dcterms.alternative=Titolo alternativo
+_metadata.dcterms.conforms.to=E' conforme a
+_metadata.dcterms.has.format=Ha formato
+_metadata.dcterms.has.part=Include
+_metadata.dcterms.is.format.of=E' formato di
+_metadata.dcterms.is.referenced.by=E' riferito da
+_metadata.dcterms.is.replaced.by=E' sostituito da
+_metadata.dcterms.ispart.of=E' parte di
+_metadata.dcterms.provenance=Provenienza
+_metadata.dcterms.references=Riferimenti
+_metadata.dcterms.replaces=Sostituisce
+_metadata.dcterms.requires=Richiede
+_metadata.dcterms.spatial=Copertura spaziale
+_metadata.dcterms.temporal=Copertura temporale
 _mine.date.saved=Dati salvati
 _mine.delete=Cancella
+_mine.last.name=Cognome
 _mine.saved.items=Oggetti salvati
 _mine.saved.searches=Ricerche salvate
 _mine.saved.tags=Tag salvati
@@ -148,7 +174,9 @@ _unused.add=Aggiungi
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Stampa questa pagina
 _unused.aplacetoshareideas=un luogo per le idee e l'ispirazione. Ricerca le collezioni culturali europee, collegati ai percorsi degli altri utenti e condividi le tue scoperte
+_unused.bosnia.and.herzegovina=Bosnia Erzegovina
 _unused.browse.through.time=Naviga attraverso il tempo
+_unused.other=altro
 _unused.privacy=Privacy
 _unused.remember.me=Ricordami su questo computer
 _unused.remove=Rimuovi
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Condividi le tue idee
 _unused.show.all=Mostra tutti
 _unused.sign.in=Registrarsi
 _unused.site.map=Mappa del sito
+_unused.slovenia=Slovenia
 _unused.sound=Suono
 _unused.tag.added=Tag aggiunto
 _unused.tag.addition.failed=Etichettatura non riuscita
@@ -170,107 +199,78 @@ _unused.view.as.xml=Visualizza come XML
 _unused.view.with.labels=Visualizza con le etichette
 _unused.view.without.labels=Visualizza senza etichette
 _unused.you.have.search.for=Hai cercato
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Austria
-azerbaijan_t=Azerbaijan
-belgium_t=Belgio
-bosniaAndHerzegovina_t=Bosnia Erzegovina
-bulgaria_t=Bulgaria
-croatia_t=Croazia
-croatian_t=croato
-cyprus_t=Cipro
-czech_t=Repubblica Ceca
-czechlanguage_t=ceco
-danish_t=danese
-dc_contributor_t=Autore di contributo subordinato
-dc_coverage_t=Copertura
-dc_creator_t=Autore
-dc_date_t=Data
-dc_description_t=Descrizione
 dc_format_t=Formato
 dc_identifier_t=Identificatore
-dc_language_t=Lingua
 dc_publisher_t=Editore
 dc_relation_t=Relazione
-dc_rights_t=Diritti
 dc_source_t=Fonte
-dc_subject_t=Soggetto
-dc_title_t=Titolo
-dc_type_t=Tipo
-dcterms_alternative_t=Titolo alternativo
-dcterms_conformsTo_t=E' conforme a
-dcterms_hasFormat_t=Ha formato
-dcterms_hasPart_t=Include
-dcterms_isFormatOf_t=E' formato di
-dcterms_isPartOf_t=E' parte di
-dcterms_isReferencedBy_t=E' riferito da
-dcterms_isReplacedBy_t=E' sostituito da
-dcterms_provenance_t=Provenienza
-dcterms_references_t=Riferimenti
-dcterms_replaces_t=Sostituisce
-dcterms_requires_t=Richiede
-dcterms_spatial_t=Copertura spaziale
-dcterms_temporal_t=Copertura temporale
-denmark_t=Danimarca
-dutch_t=olandese
-english_t=inglese
-estonia_t=Estonia
-estonian_t=estone
-finland_t=Finlandia
-finnish_t=finlandese
-france_t=Francia
-french_t=francese
-georgia_t=Georgia
-german_t=tedesco
-germany_t=Germania
-greece_t=Grecia
-greek_t=greco
-hungarian_t=ungherese
-hungary_t=Ungheria
-iceland_t=Islanda
-icelandic_t=islandese
-ireland_t=Irlanda
-italian_t=italiano
-italyFlorence_t=Italia - Firenze
-italyRome_t=Italia - Roma
 languageDropDownList_t=Lingua
-lastName_t=Cognome
-latvia_t=Lettonia
-latvian_t=lettone
-liechtenstein_t=Liechtenstein
-lithuania_t=Lituania
-lithuanian_t=lituano
-luxembourg_t=Lussemburgo
-luxemburgish_t=lussemburghese
-malta_t=Malta
-maltese_t=maltese
-moldova_t=Moldova
-netherlands_t=Paesi Bassi
-norway_t=Norvegia
-norwegian_t=norvegese
-other_t=altro
-poland_t=Polonia
-polish_t=polacco
-portugal_t=Portogallo
-portuguese_t=portoghese
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Austria
+locale.azerbaijan=Azerbaijan
+locale.belgium=Belgio
+locale.bulgaria=Bulgaria
+locale.croatia=Croazia
+locale.croatian=croato
+locale.cyprus=Cipro
+locale.czech=Repubblica Ceca
+locale.czechlanguage=ceco
+locale.danish=danese
+locale.denmark=Danimarca
+locale.dutch=olandese
+locale.english=inglese
+locale.estonia=Estonia
+locale.estonian=estone
+locale.finland=Finlandia
+locale.finnish=finlandese
+locale.france=Francia
+locale.french=francese
+locale.georgia=Georgia
+locale.german=tedesco
+locale.germany=Germania
+locale.greece=Grecia
+locale.greek=greco
+locale.hungarian=ungherese
+locale.hungary=Ungheria
+locale.iceland=Islanda
+locale.icelandic=islandese
+locale.ireland=Irlanda
+locale.italy.florence=Italia - Firenze
+locale.italy.rome=Italia - Roma
+locale.latvia=Lettonia
+locale.latvian=lettone
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Lituania
+locale.lithuanian=lituano
+locale.luxembourg=Lussemburgo
+locale.luxemburgish=lussemburghese
+locale.malta=Malta
+locale.maltese=maltese
+locale.moldova=Moldova
+locale.netherlands=Paesi Bassi
+locale.norway=Norvegia
+locale.norwegian=norvegese
+locale.poland=Polonia
+locale.polish=polacco
+locale.portugal=Portogallo
+locale.portuguese=portoghese
+locale.romania=Romania
+locale.romanian=rumeno
+locale.russia.moscow=Russia - Mosca
+locale.russia.st.petersburg=Russia - San Pietroburgo
+locale.russian=russo
+locale.serbia=Serbia
+locale.serbian=serbo
+locale.slovak=slovacco
+locale.slovakia=Slovacchia
+locale.slovenian=sloveno
+locale.spain=Spagna
+locale.spanish=spagnolo
+locale.sweden=Svezia
+locale.swedish=svedese
+locale.switzerland=Svizzera
+locale.turkey=Turchia
+locale.uk=Regno Unito
+locale.ukraine=Ucraina
 registrationSucceed_t=La tua registrazione e'avvenuta con successo
-romania_t=Romania
-romanian_t=rumeno
-russiaMoscow_t=Russia - Mosca
-russiaStPetersburg_t=Russia - San Pietroburgo
-russian_t=russo
-serbia_t=Serbia
-serbian_t=serbo
-slovak_t=slovacco
-slovakia_t=Slovacchia
-slovenia_t=Slovenia
-slovenian_t=sloveno
-spain_t=Spagna
-spanish_t=spagnolo
-sweden_t=Svezia
-swedish_t=svedese
-switzerland_t=Svizzera
-turkey_t=Turchia
-uk_t=Regno Unito
-ukraine_t=Ucraina
