--- a/portal/src/main/resources/i18n/messages_ka.properties
+++ b/portal/src/main/resources/i18n/messages_ka.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
+_language_select.italian=ტალურ (ტ)
+_metadata.dc.contributor=Contributor
+_metadata.dc.coverage=დაფარვა
+_metadata.dc.creator=ავტორი
+_metadata.dc.date=თარიღი
+_metadata.dc.description=აღწერა
+_metadata.dc.language=ენა
+_metadata.dc.rights=უფლებები
+_metadata.dc.subject=თემატიკა
+_metadata.dc.title=სახელწოდება
+_metadata.dc.type=ტიპი
+_metadata.dcterms.alternative=ალტერნატიული სახელწოდება
+_metadata.dcterms.conforms.to=შეესაბამება
+_metadata.dcterms.has.format=აქვს შემდეგი ფორმატი
+_metadata.dcterms.has.part=აქვს ნაწილი
+_metadata.dcterms.is.format.of=წარმოადგენს შემდეგის ფორმატს
+_metadata.dcterms.is.referenced.by=Is referenced by
+_metadata.dcterms.is.replaced.by=შენაცვლებულია
+_metadata.dcterms.ispart.of=ნაწილია
+_metadata.dcterms.provenance=Provenance
+_metadata.dcterms.references=References
+_metadata.dcterms.replaces=ენაცვლება
+_metadata.dcterms.requires=მოითხოვს
+_metadata.dcterms.spatial=სივრცითი დაფარვა
+_metadata.dcterms.temporal=დროითი დაფარვა
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.last.name=Last name
 _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
@@ -148,7 +174,9 @@ _unused.add=Add
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
+_unused.bosnia.and.herzegovina=ბოსნია და ჰერცოგოვინა
 _unused.browse.through.time=Browse through time
+_unused.other=სხვა
 _unused.privacy=Privacy
 _unused.remember.me=Remember me on this computer
 _unused.remove=Remove
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Share your ideas
 _unused.show.all=Show all
 _unused.sign.in=Sign in
 _unused.site.map=Sitemap
+_unused.slovenia=სლოვენია
 _unused.sound=Sound
 _unused.tag.added=Tag added
 _unused.tag.addition.failed=Tag addition failed
@@ -170,107 +199,78 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-albania_t=ალბანეთი
-armenia_t=სომხეთი
-austria_t=ავსტრია
-azerbaijan_t=აზერბაიჯანი
-belgium_t=ბელგია
-bosniaAndHerzegovina_t=ბოსნია და ჰერცოგოვინა
-bulgaria_t=ბულგარეთი
-croatia_t=ხორვატია
-croatian_t=ხორვატულ (ხორვ)
-cyprus_t=კვიპროსი
-czech_t=ჩეხეთის რესპუბლიკა
-czechlanguage_t=ჩეხურ (ჩეხ)
-danish_t=დანურ (დან)
-dc_contributor_t=Contributor
-dc_coverage_t=დაფარვა
-dc_creator_t=ავტორი
-dc_date_t=თარიღი
-dc_description_t=აღწერა
 dc_format_t=ფორმატი
 dc_identifier_t=იდენტიფიკატორი
-dc_language_t=ენა
 dc_publisher_t=გამომცემელი
 dc_relation_t=კავშირი
-dc_rights_t=უფლებები
 dc_source_t=წყარო
-dc_subject_t=თემატიკა
-dc_title_t=სახელწოდება
-dc_type_t=ტიპი
-dcterms_alternative_t=ალტერნატიული სახელწოდება
-dcterms_conformsTo_t=შეესაბამება
-dcterms_hasFormat_t=აქვს შემდეგი ფორმატი
-dcterms_hasPart_t=აქვს ნაწილი
-dcterms_isFormatOf_t=წარმოადგენს შემდეგის ფორმატს
-dcterms_isPartOf_t=ნაწილია
-dcterms_isReferencedBy_t=Is referenced by
-dcterms_isReplacedBy_t=შენაცვლებულია
-dcterms_provenance_t=Provenance
-dcterms_references_t=References
-dcterms_replaces_t=ენაცვლება
-dcterms_requires_t=მოითხოვს
-dcterms_spatial_t=სივრცითი დაფარვა
-dcterms_temporal_t=დროითი დაფარვა
-denmark_t=დანია
-dutch_t=ნდერლანდურ (ნდ)
-english_t=ნგლსურ (ნგ)
-estonia_t=ესტონეთი
-estonian_t=ესტორნურ (ესტ)
-finland_t=ფინეთი
-finnish_t=ფნურ (ფნ)
-france_t=საფრანგეთი
-french_t=ფრანგულ (ფრ)
-georgia_t=საქართველო
-german_t=გერმანულ (გერ)
-germany_t=გერმანია
-greece_t=საბერძნეთი
-greek_t=ერძნულ (ერძნ)
-hungarian_t=უნგრულ (უნგრ)
-hungary_t=უნგრეთი
-iceland_t=ისლანდია
-icelandic_t=სლანდაურ (სლ)
-ireland_t=ირლანდია
-italian_t=ტალურ (ტ)
-italyFlorence_t=იტალია – ფლორენცია
-italyRome_t=იტალია – რომი
 languageDropDownList_t=ენა
-lastName_t=Last name
-latvia_t=ლატვია
-latvian_t=ლატვურ (ლატ)
-liechtenstein_t=ლიხტენშტაინი
-lithuania_t=ლიტვა
-lithuanian_t=ლტვურ (ლტ)
-luxembourg_t=ლუქსემბურგი
-luxemburgish_t=ლუქსემურგულ (ლუქს)
-malta_t=მალტა
-maltese_t=მალტურ (მალტ)
-moldova_t=მოლდოვეთი
-netherlands_t=ნიდერლანდები
-norway_t=ნორვეგია
-norwegian_t=ნორვეგულ (ნორვ)
-other_t=სხვა
-poland_t=პოლონეთი
-polish_t=პოლონურ (პოლ)
-portugal_t=პორტუგალია
-portuguese_t=პორტუგალურ (პორ)
+locale.albania=ალბანეთი
+locale.armenia=სომხეთი
+locale.austria=ავსტრია
+locale.azerbaijan=აზერბაიჯანი
+locale.belgium=ბელგია
+locale.bulgaria=ბულგარეთი
+locale.croatia=ხორვატია
+locale.croatian=ხორვატულ (ხორვ)
+locale.cyprus=კვიპროსი
+locale.czech=ჩეხეთის რესპუბლიკა
+locale.czechlanguage=ჩეხურ (ჩეხ)
+locale.danish=დანურ (დან)
+locale.denmark=დანია
+locale.dutch=ნდერლანდურ (ნდ)
+locale.english=ნგლსურ (ნგ)
+locale.estonia=ესტონეთი
+locale.estonian=ესტორნურ (ესტ)
+locale.finland=ფინეთი
+locale.finnish=ფნურ (ფნ)
+locale.france=საფრანგეთი
+locale.french=ფრანგულ (ფრ)
+locale.georgia=საქართველო
+locale.german=გერმანულ (გერ)
+locale.germany=გერმანია
+locale.greece=საბერძნეთი
+locale.greek=ერძნულ (ერძნ)
+locale.hungarian=უნგრულ (უნგრ)
+locale.hungary=უნგრეთი
+locale.iceland=ისლანდია
+locale.icelandic=სლანდაურ (სლ)
+locale.ireland=ირლანდია
+locale.italy.florence=იტალია – ფლორენცია
+locale.italy.rome=იტალია – რომი
+locale.latvia=ლატვია
+locale.latvian=ლატვურ (ლატ)
+locale.liechtenstein=ლიხტენშტაინი
+locale.lithuania=ლიტვა
+locale.lithuanian=ლტვურ (ლტ)
+locale.luxembourg=ლუქსემბურგი
+locale.luxemburgish=ლუქსემურგულ (ლუქს)
+locale.malta=მალტა
+locale.maltese=მალტურ (მალტ)
+locale.moldova=მოლდოვეთი
+locale.netherlands=ნიდერლანდები
+locale.norway=ნორვეგია
+locale.norwegian=ნორვეგულ (ნორვ)
+locale.poland=პოლონეთი
+locale.polish=პოლონურ (პოლ)
+locale.portugal=პორტუგალია
+locale.portuguese=პორტუგალურ (პორ)
+locale.romania=რუმინეთი
+locale.romanian=რუმნულ (რუმ)
+locale.russia.moscow=რუსეთი – მოსკოვი
+locale.russia.st.petersburg=რუსეთი – სანკტ–პეტერბურგი
+locale.russian=რუსულ (რუს)
+locale.serbia=სერბეთი
+locale.serbian=სერულ (სერ)
+locale.slovak=სლოვაკურ (სლოვაკ)
+locale.slovakia=სლოვაკეთი
+locale.slovenian=სლოვენურ (სლოვენ)
+locale.spain=ესპანეთი
+locale.spanish=ესპანურ (ესპ)
+locale.sweden=შვედეთი
+locale.swedish=ვედურ (ვედ)
+locale.switzerland=შვეიცარია
+locale.turkey=თურქეთი
+locale.uk=გაერთიანებული სამეფო
+locale.ukraine=უკრაინა
 registrationSucceed_t=რეგისტრაციამ წარმატებით ჩაიარა
-romania_t=რუმინეთი
-romanian_t=რუმნულ (რუმ)
-russiaMoscow_t=რუსეთი – მოსკოვი
-russiaStPetersburg_t=რუსეთი – სანკტ–პეტერბურგი
-russian_t=რუსულ (რუს)
-serbia_t=სერბეთი
-serbian_t=სერულ (სერ)
-slovak_t=სლოვაკურ (სლოვაკ)
-slovakia_t=სლოვაკეთი
-slovenia_t=სლოვენია
-slovenian_t=სლოვენურ (სლოვენ)
-spain_t=ესპანეთი
-spanish_t=ესპანურ (ესპ)
-sweden_t=შვედეთი
-swedish_t=ვედურ (ვედ)
-switzerland_t=შვეიცარია
-turkey_t=თურქეთი
-uk_t=გაერთიანებული სამეფო
-ukraine_t=უკრაინა
