--- a/portal/src/main/resources/i18n/messages_lt.properties
+++ b/portal/src/main/resources/i18n/messages_lt.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Paieškos išsaugojimas nepavyko
 _header.actions=Veiksmai
 _header.relatedcontent=Susijęs turinys
+_language_select.italian=Italų (ita)
+_metadata.dc.contributor=Bendraautorius
+_metadata.dc.coverage=Aprėptis
+_metadata.dc.creator=Autorius
+_metadata.dc.date=Data
+_metadata.dc.description=Aprašymas
+_metadata.dc.language=Kalba
+_metadata.dc.rights=Teisės
+_metadata.dc.subject=Dalykas
+_metadata.dc.title=Antraštė
+_metadata.dc.type=Tipas
+_metadata.dcterms.alternative=Gretutinė antraštė
+_metadata.dcterms.conforms.to=Atitinka
+_metadata.dcterms.has.format=Turi formatą
+_metadata.dcterms.has.part=Turi dalį
+_metadata.dcterms.is.format.of=Yra formatas
+_metadata.dcterms.is.referenced.by=Nuorodos pateiktos
+_metadata.dcterms.is.replaced.by=Pakeista
+_metadata.dcterms.ispart.of=Yra dalis
+_metadata.dcterms.provenance=Kilmė
+_metadata.dcterms.references=Nuorodos
+_metadata.dcterms.replaces=Pakeitimai
+_metadata.dcterms.requires=Reikalauja
+_metadata.dcterms.spatial=Erdvinė aprėptis
+_metadata.dcterms.temporal=Chronologinė aprėptis
 _mine.date.saved=Išsaugota data
 _mine.delete=Trinti
+_mine.last.name=Pavardė
 _mine.saved.items=Išsaugoti vienetai
 _mine.saved.searches=Išsaugotos užklausos
 _mine.saved.tags=Išsaugoti žymenys
@@ -148,7 +174,9 @@ _unused.add=Įtraukite
 _unused.aggregator.explain=Agregatas surenka medžiagą iš daugelio bendradarbiaujančių organizacijų, pateikia ją savo tinklalapyje, o taip pat nukreipia ją į Europeana.
 _unused.altprint=Spausdinti šį puslapį
 _unused.aplacetoshareideas=vieta mintims ir idėjoms. Ieškokite Europos kultūros ištekliuose, susisiekite su kitu vartotoju ir ir pasidalinkite patirtimi.
+_unused.bosnia.and.herzegovina=Bosnija ir Hercegovina
 _unused.browse.through.time=Peržiūra per tam tikrą laiką
+_unused.other=Kita
 _unused.privacy=Privatumas
 _unused.remember.me=Įsidėmėti mane šiame kompiuteryje
 _unused.remove=Naikinti
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Pasidalinkite savo idėjomis
 _unused.show.all=Rodyti viską
 _unused.sign.in=Prisijungti
 _unused.site.map=Svetainės struktūra
+_unused.slovenia=Slovėnija
 _unused.sound=Garsas
 _unused.tag.added=Pridėtas žymuo
 _unused.tag.addition.failed=Žymens pridėti nepavyko
@@ -170,107 +199,78 @@ _unused.view.as.xml=Žiūrėti kaip XML
 _unused.view.with.labels=Žiūrėti etiketes
 _unused.view.without.labels=Žiūrėti be etikečių
 _unused.you.have.search.for=Atlikote paiešką
-albania_t=Albanija
-armenia_t=Armėnija
-austria_t=Austrija
-azerbaijan_t=Azerbaidžanas
-belgium_t=Belgija
-bosniaAndHerzegovina_t=Bosnija ir Hercegovina
-bulgaria_t=Bulgarija
-croatia_t=Kroatija
-croatian_t=Kroatų (hrv)
-cyprus_t=Kipras
-czech_t=Čekijos Respublika
-czechlanguage_t=Čekų (cze/cse)
-danish_t=Danų (dan)
-dc_contributor_t=Bendraautorius
-dc_coverage_t=Aprėptis
-dc_creator_t=Autorius
-dc_date_t=Data
-dc_description_t=Aprašymas
 dc_format_t=Formatas
 dc_identifier_t=Identifikatorius
-dc_language_t=Kalba
 dc_publisher_t=Leidėjas
 dc_relation_t=Ryšiai
-dc_rights_t=Teisės
 dc_source_t=Šaltinis
-dc_subject_t=Dalykas
-dc_title_t=Antraštė
-dc_type_t=Tipas
-dcterms_alternative_t=Gretutinė antraštė
-dcterms_conformsTo_t=Atitinka
-dcterms_hasFormat_t=Turi formatą
-dcterms_hasPart_t=Turi dalį
-dcterms_isFormatOf_t=Yra formatas
-dcterms_isPartOf_t=Yra dalis
-dcterms_isReferencedBy_t=Nuorodos pateiktos
-dcterms_isReplacedBy_t=Pakeista
-dcterms_provenance_t=Kilmė
-dcterms_references_t=Nuorodos
-dcterms_replaces_t=Pakeitimai
-dcterms_requires_t=Reikalauja
-dcterms_spatial_t=Erdvinė aprėptis
-dcterms_temporal_t=Chronologinė aprėptis
-denmark_t=Danija
-dutch_t=Olandų (dut)
-english_t=Anglų (eng)
-estonia_t=Estija
-estonian_t=Estų (est)
-finland_t=Suomija
-finnish_t=Suomių (fin)
-france_t=Prancūzija
-french_t=Prancūzų (fre)
-georgia_t=Gruzija
-german_t=Vokiečių (deu)
-germany_t=Vokietija
-greece_t=Graikija
-greek_t=Graikų (ell/gre)
-hungarian_t=Vengrų (hun)
-hungary_t=Vengrija
-iceland_t=Islandija
-icelandic_t=Islandų (ice)
-ireland_t=Airija
-italian_t=Italų (ita)
-italyFlorence_t=Italija-Florencija
-italyRome_t=Italija-Roma
 languageDropDownList_t=Kalba
-lastName_t=Pavardė
-latvia_t=Latvija
-latvian_t=Latvių (lav)
-liechtenstein_t=Lichtenšteinas
-lithuania_t=Lietuva
-lithuanian_t=Lietuvių (lit)
-luxembourg_t=Liuksemburgas
-luxemburgish_t=Liuksemburgiečių
-malta_t=Malta
-maltese_t=Maltiečių
-moldova_t=Moldova
-netherlands_t=Olandija
-norway_t=Norvegija
-norwegian_t=Norvegų
-other_t=Kita
-poland_t=Lenkija
-polish_t=Lenkų
-portugal_t=Portugalija
-portuguese_t=Portugalų (por)
+locale.albania=Albanija
+locale.armenia=Armėnija
+locale.austria=Austrija
+locale.azerbaijan=Azerbaidžanas
+locale.belgium=Belgija
+locale.bulgaria=Bulgarija
+locale.croatia=Kroatija
+locale.croatian=Kroatų (hrv)
+locale.cyprus=Kipras
+locale.czech=Čekijos Respublika
+locale.czechlanguage=Čekų (cze/cse)
+locale.danish=Danų (dan)
+locale.denmark=Danija
+locale.dutch=Olandų (dut)
+locale.english=Anglų (eng)
+locale.estonia=Estija
+locale.estonian=Estų (est)
+locale.finland=Suomija
+locale.finnish=Suomių (fin)
+locale.france=Prancūzija
+locale.french=Prancūzų (fre)
+locale.georgia=Gruzija
+locale.german=Vokiečių (deu)
+locale.germany=Vokietija
+locale.greece=Graikija
+locale.greek=Graikų (ell/gre)
+locale.hungarian=Vengrų (hun)
+locale.hungary=Vengrija
+locale.iceland=Islandija
+locale.icelandic=Islandų (ice)
+locale.ireland=Airija
+locale.italy.florence=Italija-Florencija
+locale.italy.rome=Italija-Roma
+locale.latvia=Latvija
+locale.latvian=Latvių (lav)
+locale.liechtenstein=Lichtenšteinas
+locale.lithuania=Lietuva
+locale.lithuanian=Lietuvių (lit)
+locale.luxembourg=Liuksemburgas
+locale.luxemburgish=Liuksemburgiečių
+locale.malta=Malta
+locale.maltese=Maltiečių
+locale.moldova=Moldova
+locale.netherlands=Olandija
+locale.norway=Norvegija
+locale.norwegian=Norvegų
+locale.poland=Lenkija
+locale.polish=Lenkų
+locale.portugal=Portugalija
+locale.portuguese=Portugalų (por)
+locale.romania=Rumunija
+locale.romanian=Rumunų (rom)
+locale.russia.moscow=Rusija - Maskva
+locale.russia.st.petersburg=Rusija - Sankt Peterburgas
+locale.russian=Rusų (rus)
+locale.serbia=Serbija
+locale.serbian=Serbų (scc)
+locale.slovak=Slovakų (slo)
+locale.slovakia=Slovakija
+locale.slovenian=Slovėnų (slv)
+locale.spain=Ispanija
+locale.spanish=Ispanų (esp)
+locale.sweden=Švedija
+locale.swedish=Švedų (sve/swe)
+locale.switzerland=Šveicarija
+locale.turkey=Turkija
+locale.uk=Jungtinė Karalystė
+locale.ukraine=Ukraina
 registrationSucceed_t=Registracija baigta
-romania_t=Rumunija
-romanian_t=Rumunų (rom)
-russiaMoscow_t=Rusija - Maskva
-russiaStPetersburg_t=Rusija - Sankt Peterburgas
-russian_t=Rusų (rus)
-serbia_t=Serbija
-serbian_t=Serbų (scc)
-slovak_t=Slovakų (slo)
-slovakia_t=Slovakija
-slovenia_t=Slovėnija
-slovenian_t=Slovėnų (slv)
-spain_t=Ispanija
-spanish_t=Ispanų (esp)
-sweden_t=Švedija
-swedish_t=Švedų (sve/swe)
-switzerland_t=Šveicarija
-turkey_t=Turkija
-uk_t=Jungtinė Karalystė
-ukraine_t=Ukraina
