--- a/portal/src/main/resources/i18n/messages_lv.properties
+++ b/portal/src/main/resources/i18n/messages_lv.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Meklējuma saglabāšana neizdevās
 _header.actions=Darbības
 _header.relatedcontent=Saistītais saturs
+_language_select.italian=itāļu
+_metadata.dc.contributor=Līdzradītājs
+_metadata.dc.coverage=Aptvērums
+_metadata.dc.creator=Autors
+_metadata.dc.date=Datējums
+_metadata.dc.description=Apraksts
+_metadata.dc.language=Valoda
+_metadata.dc.rights=Tiesības
+_metadata.dc.subject=Priekšmets
+_metadata.dc.title=Nosaukums
+_metadata.dc.type=Tips
+_metadata.dcterms.alternative=Cits nosaukums
+_metadata.dcterms.conforms.to=Atbilst
+_metadata.dcterms.has.format=Ir formāts
+_metadata.dcterms.has.part=Satur daļu
+_metadata.dcterms.is.format.of=ir formāts no
+_metadata.dcterms.is.referenced.by=Ir dota atsauce no
+_metadata.dcterms.is.replaced.by=Ir aizvietota ar
+_metadata.dcterms.ispart.of=Daļa no
+_metadata.dcterms.provenance=Izcelsme
+_metadata.dcterms.references=Atsauces
+_metadata.dcterms.replaces=Aizvieto
+_metadata.dcterms.requires=Prasa
+_metadata.dcterms.spatial=Telpiskais aptvērums
+_metadata.dcterms.temporal=Aptvērums laikā
 _mine.date.saved=Saglabāšanas datums
 _mine.delete=Izdzēst
+_mine.last.name=Uzvārds
 _mine.saved.items=Saglabātie objekti
 _mine.saved.searches=Saglabātie meklējumi
 _mine.saved.tags=Saglabātie tagi
@@ -148,7 +174,9 @@ _unused.add=Pievienot
 _unused.aggregator.explain=*Agregators savāc materiālus no virknes citu satura turētāju, parādot to gan viņu pašu tīmekļa vietnēs, gan piegādājot  Europeana.
 _unused.altprint=Izdrukāt lappusi
 _unused.aplacetoshareideas=vieta iedvesmai un idejām. Meklē Eiropas kultūras kolekcijās, ieskaties citu lietotāju meklējumos un dalies savos atklājumos.
+_unused.bosnia.and.herzegovina=Bosnija un Hercogovina
 _unused.browse.through.time=Pārlūkot laikā
+_unused.other=citas
 _unused.privacy=Privātums
 _unused.remember.me=Atcerēties mani šajā datorā
 _unused.remove=Aizvākt
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Dalies ar idejām
 _unused.show.all=Parādīt visus
 _unused.sign.in=Pieslēgties
 _unused.site.map=Lapas karte
+_unused.slovenia=Slovēnija
 _unused.sound=Skaņa
 _unused.tag.added=Tags pievienots
 _unused.tag.addition.failed=Tagu pievienot neizdevās
@@ -170,107 +199,78 @@ _unused.view.as.xml=Skatīt kā XML
 _unused.view.with.labels=Skatīt ar iezīmēm
 _unused.view.without.labels=Skatīt bez iezīmēm
 _unused.you.have.search.for=Jūs meklējāt pēc
-albania_t=Albānija
-armenia_t=Armēnija
-austria_t=Austrija
-azerbaijan_t=Azerbeidžāna
-belgium_t=Beļģija
-bosniaAndHerzegovina_t=Bosnija un Hercogovina
-bulgaria_t=Bulgārija
-croatia_t=Horvātija
-croatian_t=horvātu
-cyprus_t=Kipra
-czech_t=Čehija
-czechlanguage_t=čehu
-danish_t=dāņu
-dc_contributor_t=Līdzradītājs
-dc_coverage_t=Aptvērums
-dc_creator_t=Autors
-dc_date_t=Datējums
-dc_description_t=Apraksts
 dc_format_t=Formāts
 dc_identifier_t=Identifikators
-dc_language_t=Valoda
 dc_publisher_t=Izdevējs
 dc_relation_t=Saistība
-dc_rights_t=Tiesības
 dc_source_t=Avots
-dc_subject_t=Priekšmets
-dc_title_t=Nosaukums
-dc_type_t=Tips
-dcterms_alternative_t=Cits nosaukums
-dcterms_conformsTo_t=Atbilst
-dcterms_hasFormat_t=Ir formāts
-dcterms_hasPart_t=Satur daļu
-dcterms_isFormatOf_t=ir formāts no
-dcterms_isPartOf_t=Daļa no
-dcterms_isReferencedBy_t=Ir dota atsauce no
-dcterms_isReplacedBy_t=Ir aizvietota ar
-dcterms_provenance_t=Izcelsme
-dcterms_references_t=Atsauces
-dcterms_replaces_t=Aizvieto
-dcterms_requires_t=Prasa
-dcterms_spatial_t=Telpiskais aptvērums
-dcterms_temporal_t=Aptvērums laikā
-denmark_t=Dānija
-dutch_t=holandiešu
-english_t=angļu
-estonia_t=Igaunija
-estonian_t=igauņu
-finland_t=Somija
-finnish_t=somu
-france_t=Francija
-french_t=franču
-georgia_t=Gruzija
-german_t=vācu
-germany_t=Vācija
-greece_t=Grieķija
-greek_t=grieķu
-hungarian_t=ungāru
-hungary_t=Ungārija
-iceland_t=Islande
-icelandic_t=islandiešu
-ireland_t=Īrija
-italian_t=itāļu
-italyFlorence_t=Itālija-Florence
-italyRome_t=Itālija-Roma
 languageDropDownList_t=Valoda
-lastName_t=Uzvārds
-latvia_t=Latvija
-latvian_t=latviešu
-liechtenstein_t=Lihtenšteina
-lithuania_t=Lietuva
-lithuanian_t=lietuviešu
-luxembourg_t=Luksemburga
-luxemburgish_t=luksemburgiešu
-malta_t=Malta
-maltese_t=maltiešu
-moldova_t=Moldāvija
-netherlands_t=Holande
-norway_t=Norvēģija
-norwegian_t=norvēģu
-other_t=citas
-poland_t=Polija
-polish_t=poļu
-portugal_t=Portugāle
-portuguese_t=portugāļu
+locale.albania=Albānija
+locale.armenia=Armēnija
+locale.austria=Austrija
+locale.azerbaijan=Azerbeidžāna
+locale.belgium=Beļģija
+locale.bulgaria=Bulgārija
+locale.croatia=Horvātija
+locale.croatian=horvātu
+locale.cyprus=Kipra
+locale.czech=Čehija
+locale.czechlanguage=čehu
+locale.danish=dāņu
+locale.denmark=Dānija
+locale.dutch=holandiešu
+locale.english=angļu
+locale.estonia=Igaunija
+locale.estonian=igauņu
+locale.finland=Somija
+locale.finnish=somu
+locale.france=Francija
+locale.french=franču
+locale.georgia=Gruzija
+locale.german=vācu
+locale.germany=Vācija
+locale.greece=Grieķija
+locale.greek=grieķu
+locale.hungarian=ungāru
+locale.hungary=Ungārija
+locale.iceland=Islande
+locale.icelandic=islandiešu
+locale.ireland=Īrija
+locale.italy.florence=Itālija-Florence
+locale.italy.rome=Itālija-Roma
+locale.latvia=Latvija
+locale.latvian=latviešu
+locale.liechtenstein=Lihtenšteina
+locale.lithuania=Lietuva
+locale.lithuanian=lietuviešu
+locale.luxembourg=Luksemburga
+locale.luxemburgish=luksemburgiešu
+locale.malta=Malta
+locale.maltese=maltiešu
+locale.moldova=Moldāvija
+locale.netherlands=Holande
+locale.norway=Norvēģija
+locale.norwegian=norvēģu
+locale.poland=Polija
+locale.polish=poļu
+locale.portugal=Portugāle
+locale.portuguese=portugāļu
+locale.romania=Rumānija
+locale.romanian=rumāņu
+locale.russia.moscow=Krievija - Maskava
+locale.russia.st.petersburg=Krievija - Sankt Pēterburga
+locale.russian=krievu
+locale.serbia=Serbija
+locale.serbian=serbu
+locale.slovak=slovāku
+locale.slovakia=Slovākija
+locale.slovenian=slovēņu
+locale.spain=Spānija
+locale.spanish=spāņu
+locale.sweden=Zviedrija
+locale.swedish=zviedru
+locale.switzerland=Šveice
+locale.turkey=Turcija
+locale.uk=Apvienotā Karaliste
+locale.ukraine=Ukraina
 registrationSucceed_t=Jūsu reģistrācija ir veiksmīga
-romania_t=Rumānija
-romanian_t=rumāņu
-russiaMoscow_t=Krievija - Maskava
-russiaStPetersburg_t=Krievija - Sankt Pēterburga
-russian_t=krievu
-serbia_t=Serbija
-serbian_t=serbu
-slovak_t=slovāku
-slovakia_t=Slovākija
-slovenia_t=Slovēnija
-slovenian_t=slovēņu
-spain_t=Spānija
-spanish_t=spāņu
-sweden_t=Zviedrija
-swedish_t=zviedru
-switzerland_t=Šveice
-turkey_t=Turcija
-uk_t=Apvienotā Karaliste
-ukraine_t=Ukraina
