--- a/portal/src/main/resources/i18n/messages_mk.properties
+++ b/portal/src/main/resources/i18n/messages_mk.properties
@@ -116,8 +116,34 @@ _facet.by.year=null
 _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
+_language_select.italian=Италијански (ита)
+_metadata.dc.contributor=Соработник
+_metadata.dc.coverage=Опсег
+_metadata.dc.creator=Автор
+_metadata.dc.date=Датум
+_metadata.dc.description=Опис
+_metadata.dc.language=Јазик
+_metadata.dc.rights=Права
+_metadata.dc.subject=Предмет
+_metadata.dc.title=Наслов
+_metadata.dc.type=Вид
+_metadata.dcterms.alternative=Алтернативен наслов
+_metadata.dcterms.conforms.to=Одговара на
+_metadata.dcterms.has.format=Има формат
+_metadata.dcterms.has.part=Има дел
+_metadata.dcterms.is.format.of=Е формат на
+_metadata.dcterms.is.referenced.by=Се упатува од
+_metadata.dcterms.is.replaced.by=Е заменет од
+_metadata.dcterms.ispart.of=Е дел од
+_metadata.dcterms.provenance=Provenance
+_metadata.dcterms.references=Референци
+_metadata.dcterms.replaces=Заменува
+_metadata.dcterms.requires=Бара
+_metadata.dcterms.spatial=Просторно опфаќање
+_metadata.dcterms.temporal=Временско опфаќање
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.last.name=Last name
 _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
@@ -147,7 +173,9 @@ _unused.add=Add
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
+_unused.bosnia.and.herzegovina=Босна и Херцеговина
 _unused.browse.through.time=Browse through time
+_unused.other=Други
 _unused.privacy=Privacy
 _unused.remember.me=Remember me on this computer
 _unused.remove=Remove
@@ -156,6 +184,7 @@ _unused.share.your.ideas=Share your ideas
 _unused.show.all=Show all
 _unused.sign.in=Sign in
 _unused.site.map=Sitemap
+_unused.slovenia=Словенија
 _unused.sound=Sound
 _unused.tag.added=Tag added
 _unused.tag.addition.failed=Tag addition failed
@@ -169,107 +198,78 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-albania_t=Албанија
-armenia_t=Ерменија
-austria_t=Австрија
-azerbaijan_t=Азербејџан
-belgium_t=Белгија
-bosniaAndHerzegovina_t=Босна и Херцеговина
-bulgaria_t=Бугарија
-croatia_t=Хрватска
-croatian_t=Хрватски (хрв)
-cyprus_t=Кипар
-czech_t=Република Чешка
-czechlanguage_t=Чешки (чеш)
-danish_t=Дански (дан)
-dc_contributor_t=Соработник
-dc_coverage_t=Опсег
-dc_creator_t=Автор
-dc_date_t=Датум
-dc_description_t=Опис
 dc_format_t=Формат
 dc_identifier_t=Идентификатор
-dc_language_t=Јазик
 dc_publisher_t=Издавач
 dc_relation_t=Врска
-dc_rights_t=Права
 dc_source_t=Извор
-dc_subject_t=Предмет
-dc_title_t=Наслов
-dc_type_t=Вид
-dcterms_alternative_t=Алтернативен наслов
-dcterms_conformsTo_t=Одговара на
-dcterms_hasFormat_t=Има формат
-dcterms_hasPart_t=Има дел
-dcterms_isFormatOf_t=Е формат на
-dcterms_isPartOf_t=Е дел од
-dcterms_isReferencedBy_t=Се упатува од
-dcterms_isReplacedBy_t=Е заменет од
-dcterms_provenance_t=Provenance
-dcterms_references_t=Референци
-dcterms_replaces_t=Заменува
-dcterms_requires_t=Бара
-dcterms_spatial_t=Просторно опфаќање
-dcterms_temporal_t=Временско опфаќање
-denmark_t=Данска
-dutch_t=Холандски (хол)
-english_t=Англиски (анг)
-estonia_t=Естонија
-estonian_t=Естонски (ест)
-finland_t=Финска
-finnish_t=Фински (фин)
-france_t=Франција
-french_t=Француски (фра)
-georgia_t=Грузија
-german_t=Германски (гер)
-germany_t=Германија
-greece_t=Грција
-greek_t=Грчки (грч)
-hungarian_t=Унгарски (унг)
-hungary_t=Унгарија
-iceland_t=Исланд
-icelandic_t=Исландски (исл)
-ireland_t=Ирска
-italian_t=Италијански (ита)
-italyFlorence_t=Италија-Фиренца
-italyRome_t=Италија-Рим
 languageDropDownList_t=Јазик
-lastName_t=Last name
-latvia_t=Латвија
-latvian_t=Латвиски (лат)
-liechtenstein_t=Лихтенштајн
-lithuania_t=Литванија
-lithuanian_t=Литвански (лит)
-luxembourg_t=Луксембург
-luxemburgish_t=Луксембршки (лук)
-malta_t=Малта
-maltese_t=Малтешки (мал)
-moldova_t=Молдавија
-netherlands_t=Холандија
-norway_t=Норвешка
-norwegian_t=Норвешки (нор)
-other_t=Други
-poland_t=Полска
-polish_t=Полски (пол)
-portugal_t=Португалија
-portuguese_t=Португалски (пор)
+locale.albania=Албанија
+locale.armenia=Ерменија
+locale.austria=Австрија
+locale.azerbaijan=Азербејџан
+locale.belgium=Белгија
+locale.bulgaria=Бугарија
+locale.croatia=Хрватска
+locale.croatian=Хрватски (хрв)
+locale.cyprus=Кипар
+locale.czech=Република Чешка
+locale.czechlanguage=Чешки (чеш)
+locale.danish=Дански (дан)
+locale.denmark=Данска
+locale.dutch=Холандски (хол)
+locale.english=Англиски (анг)
+locale.estonia=Естонија
+locale.estonian=Естонски (ест)
+locale.finland=Финска
+locale.finnish=Фински (фин)
+locale.france=Франција
+locale.french=Француски (фра)
+locale.georgia=Грузија
+locale.german=Германски (гер)
+locale.germany=Германија
+locale.greece=Грција
+locale.greek=Грчки (грч)
+locale.hungarian=Унгарски (унг)
+locale.hungary=Унгарија
+locale.iceland=Исланд
+locale.icelandic=Исландски (исл)
+locale.ireland=Ирска
+locale.italy.florence=Италија-Фиренца
+locale.italy.rome=Италија-Рим
+locale.latvia=Латвија
+locale.latvian=Латвиски (лат)
+locale.liechtenstein=Лихтенштајн
+locale.lithuania=Литванија
+locale.lithuanian=Литвански (лит)
+locale.luxembourg=Луксембург
+locale.luxemburgish=Луксембршки (лук)
+locale.malta=Малта
+locale.maltese=Малтешки (мал)
+locale.moldova=Молдавија
+locale.netherlands=Холандија
+locale.norway=Норвешка
+locale.norwegian=Норвешки (нор)
+locale.poland=Полска
+locale.polish=Полски (пол)
+locale.portugal=Португалија
+locale.portuguese=Португалски (пор)
+locale.romania=Романија
+locale.romanian=Романски (ром)
+locale.russia.moscow=Русија-Москва
+locale.russia.st.petersburg=Русија-Санкт Петерсбург
+locale.russian=Руски (рус)
+locale.serbia=Србија
+locale.serbian=Српски (срп)
+locale.slovak=Словачки (сло)
+locale.slovakia=Словачка
+locale.slovenian=Словенечки (слв)
+locale.spain=Шпанија
+locale.spanish=Шпански (шпа)
+locale.sweden=Шведска
+locale.swedish=Шведски (шве)
+locale.switzerland=Швајцарија
+locale.turkey=Турција
+locale.uk=Обединето Кралство
+locale.ukraine=Украина
 registrationSucceed_t=Успешно сте регистрирани
-romania_t=Романија
-romanian_t=Романски (ром)
-russiaMoscow_t=Русија-Москва
-russiaStPetersburg_t=Русија-Санкт Петерсбург
-russian_t=Руски (рус)
-serbia_t=Србија
-serbian_t=Српски (срп)
-slovak_t=Словачки (сло)
-slovakia_t=Словачка
-slovenia_t=Словенија
-slovenian_t=Словенечки (слв)
-spain_t=Шпанија
-spanish_t=Шпански (шпа)
-sweden_t=Шведска
-swedish_t=Шведски (шве)
-switzerland_t=Швајцарија
-turkey_t=Турција
-uk_t=Обединето Кралство
-ukraine_t=Украина
