--- a/portal/src/main/resources/i18n/messages_mt.properties
+++ b/portal/src/main/resources/i18n/messages_mt.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=L-issejvjar tat-tiftixa falla
 _header.actions=Azzjonijiet
 _header.relatedcontent=Kontenut relatat
+_language_select.italian=Taljan (ita)
+_metadata.dc.contributor=Kontributur
+_metadata.dc.coverage=Kopertura
+_metadata.dc.creator=Awtur
+_metadata.dc.date=Data
+_metadata.dc.description=Deskrizzjoni
+_metadata.dc.language=Lingwa
+_metadata.dc.rights=Drittijiet
+_metadata.dc.subject=Suġġett
+_metadata.dc.title=Titlu
+_metadata.dc.type=Tip
+_metadata.dcterms.alternative=Titlu Alternattiv
+_metadata.dcterms.conforms.to=Jaqbel ma'
+_metadata.dcterms.has.format=Għandu format
+_metadata.dcterms.has.part=Għandu parti
+_metadata.dcterms.is.format.of=Hu format ta'
+_metadata.dcterms.is.referenced.by=Irreferenzjat minn
+_metadata.dcterms.is.replaced.by=Mibdul bi
+_metadata.dcterms.ispart.of=Jagħmel Parti minn
+_metadata.dcterms.provenance=Provenjenza
+_metadata.dcterms.references=Referenzi
+_metadata.dcterms.replaces=Jieħu post
+_metadata.dcterms.requires=Jeħtieġ
+_metadata.dcterms.spatial=Kopertura spazjali
+_metadata.dcterms.temporal=Kopertura temporali
 _mine.date.saved=Data tal-issejvjar
 _mine.delete=Ħassar
+_mine.last.name=Kunjom
 _mine.saved.items=Oġġetti ssejvjati
 _mine.saved.searches=Tiftixiet issejvjati
 _mine.saved.tags=Tikketti ssejvjati
@@ -148,7 +174,9 @@ _unused.add=Żid
 _unused.aggregator.explain=*Aggregatur jiġbor il-materjal mingħand għażla ta' kontributuri oħra, jurih fuq il-websajt tiegħu stess u jinkalah ukoll fl-Europeana.
 _unused.altprint=Stampa din il-paġna
 _unused.aplacetoshareideas=post ta' ispirazzjoni u ideat. Fittex fil-ġabriet kulturali tal-Ewropa, aqbad ma' mogħdijiet ta' użaturi oħra u aqsam is-sejbiet tiegħek.
+_unused.bosnia.and.herzegovina=Il-Bożnja-Ħerzegovina
 _unused.browse.through.time=Qalleb kronoloġikament
+_unused.other=Oħrajn
 _unused.privacy=Privatezza
 _unused.remember.me=Ftakarni fuq dan il-kompjuter
 _unused.remove=Neħħi
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Aqsam l-ideat tiegħek
 _unused.show.all=Uri kollox
 _unused.sign.in=Idħol
 _unused.site.map=Mappa tas-sit
+_unused.slovenia=Is-Slovenja
 _unused.sound=Ħoss
 _unused.tag.added=It-tikketta miżjuda
 _unused.tag.addition.failed=Iż-żieda tat-tikketta falliet
@@ -170,107 +199,78 @@ _unused.view.as.xml=Ara bħala XML
 _unused.view.with.labels=Ara bit-tikketti
 _unused.view.without.labels=Ara bla tikketti
 _unused.you.have.search.for=Fittixt
-albania_t=L-Albanija
-armenia_t=L-Armenja
-austria_t=L-Awstrija
-azerbaijan_t=L-Ażerbajġan
-belgium_t=Il-Belġju
-bosniaAndHerzegovina_t=Il-Bożnja-Ħerzegovina
-bulgaria_t=Il-Bulgarija
-croatia_t=Il-Kroazja
-croatian_t=Kroat (hrv)
-cyprus_t=Ċipru
-czech_t=Ir-Repubblika Ċeka
-czechlanguage_t=Ċek (cze/cse)
-danish_t=Daniż (dan)
-dc_contributor_t=Kontributur
-dc_coverage_t=Kopertura
-dc_creator_t=Awtur
-dc_date_t=Data
-dc_description_t=Deskrizzjoni
 dc_format_t=Format
 dc_identifier_t=Identifikatur
-dc_language_t=Lingwa
 dc_publisher_t=Pubblikatur
 dc_relation_t=Relazzjoni
-dc_rights_t=Drittijiet
 dc_source_t=Sors
-dc_subject_t=Suġġett
-dc_title_t=Titlu
-dc_type_t=Tip
-dcterms_alternative_t=Titlu Alternattiv
-dcterms_conformsTo_t=Jaqbel ma'
-dcterms_hasFormat_t=Għandu format
-dcterms_hasPart_t=Għandu parti
-dcterms_isFormatOf_t=Hu format ta'
-dcterms_isPartOf_t=Jagħmel Parti minn
-dcterms_isReferencedBy_t=Irreferenzjat minn
-dcterms_isReplacedBy_t=Mibdul bi
-dcterms_provenance_t=Provenjenza
-dcterms_references_t=Referenzi
-dcterms_replaces_t=Jieħu post
-dcterms_requires_t=Jeħtieġ
-dcterms_spatial_t=Kopertura spazjali
-dcterms_temporal_t=Kopertura temporali
-denmark_t=Id-Danimarka
-dutch_t=Olandiż (dut)
-english_t=Ingliż (eng)
-estonia_t=L-Estonja
-estonian_t=Estonjan (est)
-finland_t=Il-Finlandja
-finnish_t=Finlandiż (fin)
-france_t=Franza
-french_t=Franċiż (fre)
-georgia_t=Il-Ġorġja
-german_t=Ġermaniż (deu)
-germany_t=Il-Ġermanja
-greece_t=Il-Greċja
-greek_t=Grieg (ell/gre)
-hungarian_t=Ungeriż (hun)
-hungary_t=L-Ungerija
-iceland_t=L-Iżlanda
-icelandic_t=Iżlandiż (ice)
-ireland_t=L-Irlanda
-italian_t=Taljan (ita)
-italyFlorence_t=L-Italja-Firenze
-italyRome_t=L-Italja-Ruma
 languageDropDownList_t=Lingwa
-lastName_t=Kunjom
-latvia_t=Il-Latvja
-latvian_t=Latvjan (lav)
-liechtenstein_t=Il-Liechtenstein
-lithuania_t=Il-Litwanja
-lithuanian_t=Litwan (lit)
-luxembourg_t=Il-Lussemburgu
-luxemburgish_t=Lussemburgiż (ltz)
-malta_t=Malta
-maltese_t=Malti (mlt)
-moldova_t=Il-Moldova
-netherlands_t=L-Olanda
-norway_t=In-Norveġja
-norwegian_t=Norveġiż (nor)
-other_t=Oħrajn
-poland_t=Il-Polonja
-polish_t=Pollakk (pol)
-portugal_t=Il-Portugall
-portuguese_t=Portugiż (por)
+locale.albania=L-Albanija
+locale.armenia=L-Armenja
+locale.austria=L-Awstrija
+locale.azerbaijan=L-Ażerbajġan
+locale.belgium=Il-Belġju
+locale.bulgaria=Il-Bulgarija
+locale.croatia=Il-Kroazja
+locale.croatian=Kroat (hrv)
+locale.cyprus=Ċipru
+locale.czech=Ir-Repubblika Ċeka
+locale.czechlanguage=Ċek (cze/cse)
+locale.danish=Daniż (dan)
+locale.denmark=Id-Danimarka
+locale.dutch=Olandiż (dut)
+locale.english=Ingliż (eng)
+locale.estonia=L-Estonja
+locale.estonian=Estonjan (est)
+locale.finland=Il-Finlandja
+locale.finnish=Finlandiż (fin)
+locale.france=Franza
+locale.french=Franċiż (fre)
+locale.georgia=Il-Ġorġja
+locale.german=Ġermaniż (deu)
+locale.germany=Il-Ġermanja
+locale.greece=Il-Greċja
+locale.greek=Grieg (ell/gre)
+locale.hungarian=Ungeriż (hun)
+locale.hungary=L-Ungerija
+locale.iceland=L-Iżlanda
+locale.icelandic=Iżlandiż (ice)
+locale.ireland=L-Irlanda
+locale.italy.florence=L-Italja-Firenze
+locale.italy.rome=L-Italja-Ruma
+locale.latvia=Il-Latvja
+locale.latvian=Latvjan (lav)
+locale.liechtenstein=Il-Liechtenstein
+locale.lithuania=Il-Litwanja
+locale.lithuanian=Litwan (lit)
+locale.luxembourg=Il-Lussemburgu
+locale.luxemburgish=Lussemburgiż (ltz)
+locale.malta=Malta
+locale.maltese=Malti (mlt)
+locale.moldova=Il-Moldova
+locale.netherlands=L-Olanda
+locale.norway=In-Norveġja
+locale.norwegian=Norveġiż (nor)
+locale.poland=Il-Polonja
+locale.polish=Pollakk (pol)
+locale.portugal=Il-Portugall
+locale.portuguese=Portugiż (por)
+locale.romania=Ir-Rumanija
+locale.romanian=Rumen (rom)
+locale.russia.moscow=Ir-Russja-Moska
+locale.russia.st.petersburg=Ir-Russja-San Pitruburgu
+locale.russian=Russu (rus)
+locale.serbia=Is-Serbja
+locale.serbian=Serb (scc)
+locale.slovak=Slovakk (slo)
+locale.slovakia=Is-Slovakkja
+locale.slovenian=Sloven (slv)
+locale.spain=Spanja
+locale.spanish=Spanjol (esp)
+locale.sweden=L-Iżvezja
+locale.swedish=Żvediż (sve/swe)
+locale.switzerland=L-Iżvizzera
+locale.turkey=It-Turkija
+locale.uk=Ir-Renju Unit
+locale.ukraine=L-Ukraina
 registrationSucceed_t=Irreġistrajt b'suċċess
-romania_t=Ir-Rumanija
-romanian_t=Rumen (rom)
-russiaMoscow_t=Ir-Russja-Moska
-russiaStPetersburg_t=Ir-Russja-San Pitruburgu
-russian_t=Russu (rus)
-serbia_t=Is-Serbja
-serbian_t=Serb (scc)
-slovak_t=Slovakk (slo)
-slovakia_t=Is-Slovakkja
-slovenia_t=Is-Slovenja
-slovenian_t=Sloven (slv)
-spain_t=Spanja
-spanish_t=Spanjol (esp)
-sweden_t=L-Iżvezja
-swedish_t=Żvediż (sve/swe)
-switzerland_t=L-Iżvizzera
-turkey_t=It-Turkija
-uk_t=Ir-Renju Unit
-ukraine_t=L-Ukraina
