--- a/portal/src/main/resources/i18n/messages_nl.properties
+++ b/portal/src/main/resources/i18n/messages_nl.properties
@@ -118,8 +118,34 @@ _facet.by.year=Per jaar
 _failure.search.saved=Zoekopdracht opslaan mislukt
 _header.actions=Acties
 _header.relatedcontent=Gerelateerde content
+_language_select.italian=Italiaans (ita)
+_metadata.dc.contributor=Met bijdrage van
+_metadata.dc.coverage=Herkomst
+_metadata.dc.creator=Vervaardiger
+_metadata.dc.date=Vervaardigingsdatum
+_metadata.dc.description=Beschrijving
+_metadata.dc.language=Taal
+_metadata.dc.rights=Rechten
+_metadata.dc.subject=Trefwoorden
+_metadata.dc.title=Titel
+_metadata.dc.type=Soort object
+_metadata.dcterms.alternative=Titel
+_metadata.dcterms.conforms.to=Voldoet aan
+_metadata.dcterms.has.format=Heeft formaat
+_metadata.dcterms.has.part=Is onderdeel
+_metadata.dcterms.is.format.of=Is formaat van
+_metadata.dcterms.is.referenced.by=Is verwezen door
+_metadata.dcterms.is.replaced.by=Is vervangen door
+_metadata.dcterms.ispart.of=Is deel van
+_metadata.dcterms.provenance=Herkomst
+_metadata.dcterms.references=Referenties
+_metadata.dcterms.replaces=Vervangt
+_metadata.dcterms.requires=Vereist
+_metadata.dcterms.spatial=Plaats van vervaardiging
+_metadata.dcterms.temporal=Periode
 _mine.date.saved=Datum opgeslagen
 _mine.delete=Verwijder
+_mine.last.name=Achternaam
 _mine.saved.items=Bewaarde items
 _mine.saved.searches=Bewaarde zoekopdrachten
 _mine.saved.tags=Bewaarde tags
@@ -149,7 +175,9 @@ _unused.add=Toevoegen
 _unused.aggregator.explain=* Een aggregator verzamelt materiaal van een scala van andere bijdragers, toont het op zijn eigen website en maakt het toegankelijk voor Europeana.
 _unused.altprint=Print deze pagina
 _unused.aplacetoshareideas=een plaats voor inspiratie en ideeën. Doorzoek de culturele collecties van Europa, volg het pad van andere gebruikers en deel je ontdekkingen.
+_unused.bosnia.and.herzegovina=Bosnië en Herzegovina
 _unused.browse.through.time=Browse door de tijd
+_unused.other=Overig
 _unused.privacy=Privacy
 _unused.remember.me=Onthoud mij op deze computer
 _unused.remove=Verwijder
@@ -158,6 +186,7 @@ _unused.share.your.ideas=Deel jouw ideeën
 _unused.show.all=Toon alles
 _unused.sign.in=Log in
 _unused.site.map=Sitemap
+_unused.slovenia=Slovenië
 _unused.sound=Geluid
 _unused.tag.added=Tags toevoegen
 _unused.tag.addition.failed=Tag toevoegen mislukt
@@ -171,49 +200,17 @@ _unused.view.as.xml=Bekijk als XML
 _unused.view.with.labels=Bekijk met labels
 _unused.view.without.labels=Bekijk zonder labels
 _unused.you.have.search.for=U heeft gezocht naar
-albania_t=Albanië
-armenia_t=Armenië
-austria_t=Oosterijk
-azerbaijan_t=Azerbeidzjan
-belgium_t=België
-bosniaAndHerzegovina_t=Bosnië en Herzegovina
-bulgaria_t=Bulgarije
-croatia_t=Croatië
-croatian_t=Kroatisch (kro)
-cyprus_t=Cyprus
-czech_t=Tsjechische Republiek
-czechlanguage_t=Tsjechisch (tsj)
-danish_t=Deens (dee)
-dc_contributor_t=Met bijdrage van
-dc_coverage_t=Herkomst
-dc_creator_t=Vervaardiger
-dc_date_t=Vervaardigingsdatum
-dc_description_t=Beschrijving
+_validation.password.long=Wachtwoord te lang
+_validation.password.mismatch=Wachtwoorden ongelijk
+_validation.password.short=Wachtwoord te kort
+_validation.username.exists=Gebrukersnaam bestaat al
+_validation.username.invalid.chars=Gebruikersnaam mag alleen letters, cijfers, spaties en onderstreep bevatten
+_validation.username.long=Gebruikersnaam is te lang
 dc_format_t=Formaat
 dc_identifier_t=Identificatie
-dc_language_t=Taal
 dc_publisher_t=Uitgever
 dc_relation_t=Verwijzing(en)
-dc_rights_t=Rechten
 dc_source_t=Bron
-dc_subject_t=Trefwoorden
-dc_title_t=Titel
-dc_type_t=Soort object
-dcterms_alternative_t=Titel
-dcterms_conformsTo_t=Voldoet aan
-dcterms_hasFormat_t=Heeft formaat
-dcterms_hasPart_t=Is onderdeel
-dcterms_isFormatOf_t=Is formaat van
-dcterms_isPartOf_t=Is deel van
-dcterms_isReferencedBy_t=Is verwezen door
-dcterms_isReplacedBy_t=Is vervangen door
-dcterms_provenance_t=Herkomst
-dcterms_references_t=Referenties
-dcterms_replaces_t=Vervangt
-dcterms_requires_t=Vereist
-dcterms_spatial_t=Plaats van vervaardiging
-dcterms_temporal_t=Periode
-denmark_t=Denemarken
 disclaimer.unchecked=Voorwaarden moeten geaccepteerd worden
 dms.administration.images=Afbeeldingen beheren
 dms.administration.pages=Paginas beheren
@@ -243,71 +240,74 @@ dms.upload=Uploaden
 dms.version.approve=Deze versie goedkeuren
 dms.version.approve.explain=Door een versie goed te keuren worden alle andere versies verwijderd.
 dms.version.management=Versiebeheer
-dutch_t=Nederlands (ned)
-english_t=Engels (eng)
-estonia_t=Estland
-estonian_t=Estisch (est)
-finland_t=Finland
-finnish_t=Fins (fin)
-france_t=Frankrijk
-french_t=Frans (fra)
-georgia_t=Georgië
-german_t=Duits (dui)
-germany_t=Duitsland
-greece_t=Griekenland
-greek_t=Grieks (gri)
-hungarian_t=Hongaars (hon)
-hungary_t=Hongarije
-iceland_t=IJsland
-icelandic_t=IJslands (ijs)
-ireland_t=Ierland
-italian_t=Italiaans (ita)
-italyFlorence_t=Italië-Florence
-italyRome_t=Italë-Rome
 languageDropDownList_t=Taal
-lastName_t=Achternaam
-latvia_t=Letland
-latvian_t=Lets (let)
-liechtenstein_t=Liechtenstein
-lithuania_t=Litouwen
-lithuanian_t=Litouws (lit)
-luxembourg_t=Luxemburg
-luxemburgish_t=Luxemburgs
-malta_t=Malta
-maltese_t=Maltees
-moldova_t=Moldavië
-netherlands_t=Nederland
-norway_t=Noorwegen
-norwegian_t=Noors
-other_t=Overig
-password.mismatch=Wachtwoorden ongelijk
-password.tooLong=Wachtwoord te lang
-password.tooShort=Wachtwoord te kort
-poland_t=Polen
-polish_t=Pools
-portugal_t=Portugal
-portuguese_t=Portugees (por)
+locale.albania=Albanië
+locale.armenia=Armenië
+locale.austria=Oosterijk
+locale.azerbaijan=Azerbeidzjan
+locale.belgium=België
+locale.bulgaria=Bulgarije
+locale.croatia=Croatië
+locale.croatian=Kroatisch (kro)
+locale.cyprus=Cyprus
+locale.czech=Tsjechische Republiek
+locale.czechlanguage=Tsjechisch (tsj)
+locale.danish=Deens (dee)
+locale.denmark=Denemarken
+locale.dutch=Nederlands (ned)
+locale.english=Engels (eng)
+locale.estonia=Estland
+locale.estonian=Estisch (est)
+locale.finland=Finland
+locale.finnish=Fins (fin)
+locale.france=Frankrijk
+locale.french=Frans (fra)
+locale.georgia=Georgië
+locale.german=Duits (dui)
+locale.germany=Duitsland
+locale.greece=Griekenland
+locale.greek=Grieks (gri)
+locale.hungarian=Hongaars (hon)
+locale.hungary=Hongarije
+locale.iceland=IJsland
+locale.icelandic=IJslands (ijs)
+locale.ireland=Ierland
+locale.italy.florence=Italië-Florence
+locale.italy.rome=Italë-Rome
+locale.latvia=Letland
+locale.latvian=Lets (let)
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Litouwen
+locale.lithuanian=Litouws (lit)
+locale.luxembourg=Luxemburg
+locale.luxemburgish=Luxemburgs
+locale.malta=Malta
+locale.maltese=Maltees
+locale.moldova=Moldavië
+locale.netherlands=Nederland
+locale.norway=Noorwegen
+locale.norwegian=Noors
+locale.poland=Polen
+locale.polish=Pools
+locale.portugal=Portugal
+locale.portuguese=Portugees (por)
+locale.romania=Roemenië
+locale.romanian=Roemeens (rom)
+locale.russia.moscow=Rusland - Moscow
+locale.russia.st.petersburg=Rusland - Sint Petersburg
+locale.russian=Russisch (rus)
+locale.serbia=Servië
+locale.serbian=Servisch (ser)
+locale.slovak=Slowaaks (slo)
+locale.slovakia=Slowakije
+locale.slovenian=Sloveens (slv)
+locale.spain=Spanje
+locale.spanish=Spaans (spa)
+locale.sweden=Zweden
+locale.swedish=Zweeds (zwe)
+locale.switzerland=Zwitzerland
+locale.turkey=Turkije
+locale.uk=Verenigd Koninkrijk
+locale.ukraine=Oekraïne
 registrationSucceed_t=U bent met succes geregistreerd
-romania_t=Roemenië
-romanian_t=Roemeens (rom)
-russiaMoscow_t=Rusland - Moscow
-russiaStPetersburg_t=Rusland - Sint Petersburg
-russian_t=Russisch (rus)
 search.order.by=Sorteren op
-serbia_t=Servië
-serbian_t=Servisch (ser)
-slovak_t=Slowaaks (slo)
-slovakia_t=Slowakije
-slovenia_t=Slovenië
-slovenian_t=Sloveens (slv)
-spain_t=Spanje
-spanish_t=Spaans (spa)
-sweden_t=Zweden
-swedish_t=Zweeds (zwe)
-switzerland_t=Zwitzerland
-turkey_t=Turkije
-uk_t=Verenigd Koninkrijk
-ukraine_t=Oekraïne
-username.exists=Gebrukersnaam bestaat al
-username.invalidChars=Gebruikersnaam mag alleen letters, cijfers, spaties en onderstreep bevatten
-username.tooLong=Gebruikersnaam is te lang
