--- a/portal/src/main/resources/i18n/messages_pt.properties
+++ b/portal/src/main/resources/i18n/messages_pt.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Guardar a pesquisa falhou
 _header.actions=Acções
 _header.relatedcontent=Conteúdo relacionado
+_language_select.italian=Italiano (ita)
+_metadata.dc.contributor=Outro Contribuinte
+_metadata.dc.coverage=Cobertura
+_metadata.dc.creator=Autor
+_metadata.dc.date=Data
+_metadata.dc.description=Descrição
+_metadata.dc.language=Língua
+_metadata.dc.rights=Direitos
+_metadata.dc.subject=Assunto
+_metadata.dc.title=Título
+_metadata.dc.type=Tipo
+_metadata.dcterms.alternative=Título Alternativo
+_metadata.dcterms.conforms.to=Está conforme com
+_metadata.dcterms.has.format=Tem formato
+_metadata.dcterms.has.part=Tem parte
+_metadata.dcterms.is.format.of=É formato de
+_metadata.dcterms.is.referenced.by=É referenciado por
+_metadata.dcterms.is.replaced.by=É substituído por
+_metadata.dcterms.ispart.of=Parte de
+_metadata.dcterms.provenance=Proveniência
+_metadata.dcterms.references=Referências
+_metadata.dcterms.replaces=Substitui
+_metadata.dcterms.requires=Requer
+_metadata.dcterms.spatial=Cobertura espacial
+_metadata.dcterms.temporal=Cobertura temporal
 _mine.date.saved=Guardado em (data)
 _mine.delete=Apagar
+_mine.last.name=Último nome
 _mine.saved.items=Items guardados
 _mine.saved.searches=Pesquisas guardadas
 _mine.saved.tags=Etiquetas guardadas
@@ -148,7 +174,9 @@ _unused.add=Adicionar
 _unused.aggregator.explain=*Um agregador junta material de uma série de outros participantes, apresenta-o no seu próprio sítio e canaliza-o para a Europeana.
 _unused.altprint=Imprimir esta página
 _unused.aplacetoshareideas=um lugar de inspiração e ideias. Pesquise através das colecções culturais da Europa, ligue-se aos percursos de outros utilizadores e partilhe as suas descobertas.
+_unused.bosnia.and.herzegovina=Bósnia e Herzegovina
 _unused.browse.through.time=Percorra atrvés do tempo
+_unused.other=Outra
 _unused.privacy=Privacidade
 _unused.remember.me=Lembrar-me neste computador
 _unused.remove=Remover
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Partilhe as suas ideias
 _unused.show.all=Mostrar todos
 _unused.sign.in=Entrar
 _unused.site.map=Mapa do sítio
+_unused.slovenia=Eslovénia
 _unused.sound=Som
 _unused.tag.added=Etiqueta adicionada
 _unused.tag.addition.failed=Adicionar etiqueta falhou
@@ -170,107 +199,78 @@ _unused.view.as.xml=Ver em XML
 _unused.view.with.labels=Ver com etiquetas
 _unused.view.without.labels=Ver sem etiquetas
 _unused.you.have.search.for=Pesquisou por
-albania_t=Albânia
-armenia_t=Arménia
-austria_t=Austria
-azerbaijan_t=Azerbeijão
-belgium_t=Bélgica
-bosniaAndHerzegovina_t=Bósnia e Herzegovina
-bulgaria_t=Bulgária
-croatia_t=Croácia
-croatian_t=Servo-croata(Croácia) (hrv)
-cyprus_t=Chipre
-czech_t=República Checa
-czechlanguage_t=Checo (cze/cse)
-danish_t=Dinamarquês (dan)
-dc_contributor_t=Outro Contribuinte
-dc_coverage_t=Cobertura
-dc_creator_t=Autor
-dc_date_t=Data
-dc_description_t=Descrição
 dc_format_t=Formato
 dc_identifier_t=Identificador
-dc_language_t=Língua
 dc_publisher_t=Editor
 dc_relation_t=Relação
-dc_rights_t=Direitos
 dc_source_t=Fonte
-dc_subject_t=Assunto
-dc_title_t=Título
-dc_type_t=Tipo
-dcterms_alternative_t=Título Alternativo
-dcterms_conformsTo_t=Está conforme com
-dcterms_hasFormat_t=Tem formato
-dcterms_hasPart_t=Tem parte
-dcterms_isFormatOf_t=É formato de
-dcterms_isPartOf_t=Parte de
-dcterms_isReferencedBy_t=É referenciado por
-dcterms_isReplacedBy_t=É substituído por
-dcterms_provenance_t=Proveniência
-dcterms_references_t=Referências
-dcterms_replaces_t=Substitui
-dcterms_requires_t=Requer
-dcterms_spatial_t=Cobertura espacial
-dcterms_temporal_t=Cobertura temporal
-denmark_t=Dinamarca
-dutch_t=Holandês (dut)
-english_t=Inglês (eng)
-estonia_t=Estónia
-estonian_t=Estónio (est)
-finland_t=Finlândia
-finnish_t=Finlandês (fin)
-france_t=França
-french_t=Francês (fre)
-georgia_t=Georgia
-german_t=Alemão (deu)
-germany_t=Alemanha
-greece_t=Grécia
-greek_t=Grego (all/gre)
-hungarian_t=Húngaro (hun)
-hungary_t=Hungria
-iceland_t=Islândia
-icelandic_t=Islandês (ice)
-ireland_t=Irlanda
-italian_t=Italiano (ita)
-italyFlorence_t=Itália-Florença
-italyRome_t=Itália-Roma
 languageDropDownList_t=Língua
-lastName_t=Último nome
-latvia_t=Letónia
-latvian_t=Letão (lav)
-liechtenstein_t=Liechtenstein
-lithuania_t=Lituânia
-lithuanian_t=Lítuano (lit)
-luxembourg_t=Luxemburgo
-luxemburgish_t=Luxemburguês (ltz)
-malta_t=Malta
-maltese_t=Maltês (mlt)
-moldova_t=Moldova
-netherlands_t=Holanda
-norway_t=Noruega
-norwegian_t=Norueguês (nor)
-other_t=Outra
-poland_t=Polónia
-polish_t=Polaco (pol)
-portugal_t=Portugal
-portuguese_t=Português (por)
+locale.albania=Albânia
+locale.armenia=Arménia
+locale.austria=Austria
+locale.azerbaijan=Azerbeijão
+locale.belgium=Bélgica
+locale.bulgaria=Bulgária
+locale.croatia=Croácia
+locale.croatian=Servo-croata(Croácia) (hrv)
+locale.cyprus=Chipre
+locale.czech=República Checa
+locale.czechlanguage=Checo (cze/cse)
+locale.danish=Dinamarquês (dan)
+locale.denmark=Dinamarca
+locale.dutch=Holandês (dut)
+locale.english=Inglês (eng)
+locale.estonia=Estónia
+locale.estonian=Estónio (est)
+locale.finland=Finlândia
+locale.finnish=Finlandês (fin)
+locale.france=França
+locale.french=Francês (fre)
+locale.georgia=Georgia
+locale.german=Alemão (deu)
+locale.germany=Alemanha
+locale.greece=Grécia
+locale.greek=Grego (all/gre)
+locale.hungarian=Húngaro (hun)
+locale.hungary=Hungria
+locale.iceland=Islândia
+locale.icelandic=Islandês (ice)
+locale.ireland=Irlanda
+locale.italy.florence=Itália-Florença
+locale.italy.rome=Itália-Roma
+locale.latvia=Letónia
+locale.latvian=Letão (lav)
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Lituânia
+locale.lithuanian=Lítuano (lit)
+locale.luxembourg=Luxemburgo
+locale.luxemburgish=Luxemburguês (ltz)
+locale.malta=Malta
+locale.maltese=Maltês (mlt)
+locale.moldova=Moldova
+locale.netherlands=Holanda
+locale.norway=Noruega
+locale.norwegian=Norueguês (nor)
+locale.poland=Polónia
+locale.polish=Polaco (pol)
+locale.portugal=Portugal
+locale.portuguese=Português (por)
+locale.romania=Roménia
+locale.romanian=romeno
+locale.russia.moscow=Rússia - Moscovo
+locale.russia.st.petersburg=Rússia - S. Petersburgo
+locale.russian=russo
+locale.serbia=Sérvia
+locale.serbian=Servo-croata(Sérvia) (scc)
+locale.slovak=Eslovaco (slo)
+locale.slovakia=Eslováquia
+locale.slovenian=Esloveno (slv)
+locale.spain=Espanha
+locale.spanish=Espanhol (esp)
+locale.sweden=Suécia
+locale.swedish=Sueco (sve/swe)
+locale.switzerland=Suíça
+locale.turkey=Turquia
+locale.uk=Reino Unido
+locale.ukraine=Ucrânia
 registrationSucceed_t=O seu registo foi efectuado com sucesso
-romania_t=Roménia
-romanian_t=romeno
-russiaMoscow_t=Rússia - Moscovo
-russiaStPetersburg_t=Rússia - S. Petersburgo
-russian_t=russo
-serbia_t=Sérvia
-serbian_t=Servo-croata(Sérvia) (scc)
-slovak_t=Eslovaco (slo)
-slovakia_t=Eslováquia
-slovenia_t=Eslovénia
-slovenian_t=Esloveno (slv)
-spain_t=Espanha
-spanish_t=Espanhol (esp)
-sweden_t=Suécia
-swedish_t=Sueco (sve/swe)
-switzerland_t=Suíça
-turkey_t=Turquia
-uk_t=Reino Unido
-ukraine_t=Ucrânia
