--- a/portal/src/main/resources/i18n/messages_ro.properties
+++ b/portal/src/main/resources/i18n/messages_ro.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Salvarea interogării a eşuat
 _header.actions=Acţiuni
 _header.relatedcontent=Conţinut asociat
+_language_select.italian=Italiană (ita)
+_metadata.dc.contributor=Contributor
+_metadata.dc.coverage=Relatare
+_metadata.dc.creator=Autor
+_metadata.dc.date=Data
+_metadata.dc.description=Descriere
+_metadata.dc.language=Limbǎ
+_metadata.dc.rights=Drepturi
+_metadata.dc.subject=Subiect
+_metadata.dc.title=Titlu
+_metadata.dc.type=Tip
+_metadata.dcterms.alternative=Titlu alternativ
+_metadata.dcterms.conforms.to=Conform cu
+_metadata.dcterms.has.format=Are ca format
+_metadata.dcterms.has.part=Are ca parte pe
+_metadata.dcterms.is.format.of=Este un alt format al
+_metadata.dcterms.is.referenced.by=Referit de către
+_metadata.dcterms.is.replaced.by=Este înlocuit cu
+_metadata.dcterms.ispart.of=Este parte a
+_metadata.dcterms.provenance=Provenienţă
+_metadata.dcterms.references=Referinţe
+_metadata.dcterms.replaces=Înlocuieşte
+_metadata.dcterms.requires=Cerinţe
+_metadata.dcterms.spatial=Relatare spaţială
+_metadata.dcterms.temporal=Relatare temporală
 _mine.date.saved=Dată salvată
 _mine.delete=Şterge
+_mine.last.name=Nume de familie
 _mine.saved.items=Resurse salvate
 _mine.saved.searches=Interogări salvate
 _mine.saved.tags=Descriptori salvaţi
@@ -148,7 +174,9 @@ _unused.add=Adăugaţi
 _unused.aggregator.explain=*Un agregator colectează material de la alți contributori, îl expun pe propriul lor sait și îl canalizează spre Europeana.
 _unused.altprint=Imprimă această pagină
 _unused.aplacetoshareideas=un loc al inspiraţiei şi al ideilor. Căutaţi prin colecţiile culturale ale Europei, intersectaţi-vă cu alţi utilizatori şi partajaţi-vă descoperirile.
+_unused.bosnia.and.herzegovina=Bosnia şi Herzegovina
 _unused.browse.through.time=Baleiază cronologic
+_unused.other=Altele
 _unused.privacy=Confidenţialitate
 _unused.remember.me=Ţine-mă minte pe acest computer
 _unused.remove=Elimină
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Împărtăşiţi-vă ideile
 _unused.show.all=Arată tot
 _unused.sign.in=Logaţi-vă
 _unused.site.map=Harta saitului
+_unused.slovenia=Slovenia
 _unused.sound=Sonor
 _unused.tag.added=Descriptor adăugat
 _unused.tag.addition.failed=Adăugarea descriptorului a eşuat
@@ -170,107 +199,78 @@ _unused.view.as.xml=Prezentare în format XML
 _unused.view.with.labels=Prezentare cu etichete
 _unused.view.without.labels=Prezentare fără etichete
 _unused.you.have.search.for=Aţi căutat
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Austria
-azerbaijan_t=Azerbagian
-belgium_t=Belgia
-bosniaAndHerzegovina_t=Bosnia şi Herzegovina
-bulgaria_t=Bulgaria
-croatia_t=Croaţia
-croatian_t=Croată (hrv)
-cyprus_t=Cipru
-czech_t=Republica Cehǎ
-czechlanguage_t=Cehă (cze/cse)
-danish_t=Daneză (dan)
-dc_contributor_t=Contributor
-dc_coverage_t=Relatare
-dc_creator_t=Autor
-dc_date_t=Data
-dc_description_t=Descriere
 dc_format_t=Format
 dc_identifier_t=Identificator
-dc_language_t=Limbǎ
 dc_publisher_t=Editor
 dc_relation_t=Relaţie
-dc_rights_t=Drepturi
 dc_source_t=Sursǎ
-dc_subject_t=Subiect
-dc_title_t=Titlu
-dc_type_t=Tip
-dcterms_alternative_t=Titlu alternativ
-dcterms_conformsTo_t=Conform cu
-dcterms_hasFormat_t=Are ca format
-dcterms_hasPart_t=Are ca parte pe
-dcterms_isFormatOf_t=Este un alt format al
-dcterms_isPartOf_t=Este parte a
-dcterms_isReferencedBy_t=Referit de către
-dcterms_isReplacedBy_t=Este înlocuit cu
-dcterms_provenance_t=Provenienţă
-dcterms_references_t=Referinţe
-dcterms_replaces_t=Înlocuieşte
-dcterms_requires_t=Cerinţe
-dcterms_spatial_t=Relatare spaţială
-dcterms_temporal_t=Relatare temporală
-denmark_t=Danemarca
-dutch_t=Olandeză (dut)
-english_t=Engleză (eng)
-estonia_t=Estonia
-estonian_t=Estoniană (est)
-finland_t=Finlanda
-finnish_t=Finlandeză (fin)
-france_t=Franţa
-french_t=Franceză (fre)
-georgia_t=Georgia
-german_t=Germană (deu)
-germany_t=Germania
-greece_t=Grecia
-greek_t=Greacă (ell/gre)
-hungarian_t=Maghiară (hun)
-hungary_t=Ungaria
-iceland_t=Islanda
-icelandic_t=Islandeză (ice)
-ireland_t=Irlanda
-italian_t=Italiană (ita)
-italyFlorence_t=Italia-Florenţa
-italyRome_t=Italia-Roma
 languageDropDownList_t=Limba
-lastName_t=Nume de familie
-latvia_t=Letonia
-latvian_t=Letonă (lav)
-liechtenstein_t=Liechtenstein
-lithuania_t=Lituania
-lithuanian_t=Lituaniană (lit)
-luxembourg_t=Luxemburg
-luxemburgish_t=Luxemburgheză (ltz)
-malta_t=Malta
-maltese_t=Malteză (mlt)
-moldova_t=Moldova
-netherlands_t=Olanda
-norway_t=Norvegia
-norwegian_t=Norvegiană (nor)
-other_t=Altele
-poland_t=Polonia
-polish_t=Poloneză (pol)
-portugal_t=Portugalia
-portuguese_t=Portugheză (por)
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Austria
+locale.azerbaijan=Azerbagian
+locale.belgium=Belgia
+locale.bulgaria=Bulgaria
+locale.croatia=Croaţia
+locale.croatian=Croată (hrv)
+locale.cyprus=Cipru
+locale.czech=Republica Cehǎ
+locale.czechlanguage=Cehă (cze/cse)
+locale.danish=Daneză (dan)
+locale.denmark=Danemarca
+locale.dutch=Olandeză (dut)
+locale.english=Engleză (eng)
+locale.estonia=Estonia
+locale.estonian=Estoniană (est)
+locale.finland=Finlanda
+locale.finnish=Finlandeză (fin)
+locale.france=Franţa
+locale.french=Franceză (fre)
+locale.georgia=Georgia
+locale.german=Germană (deu)
+locale.germany=Germania
+locale.greece=Grecia
+locale.greek=Greacă (ell/gre)
+locale.hungarian=Maghiară (hun)
+locale.hungary=Ungaria
+locale.iceland=Islanda
+locale.icelandic=Islandeză (ice)
+locale.ireland=Irlanda
+locale.italy.florence=Italia-Florenţa
+locale.italy.rome=Italia-Roma
+locale.latvia=Letonia
+locale.latvian=Letonă (lav)
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Lituania
+locale.lithuanian=Lituaniană (lit)
+locale.luxembourg=Luxemburg
+locale.luxemburgish=Luxemburgheză (ltz)
+locale.malta=Malta
+locale.maltese=Malteză (mlt)
+locale.moldova=Moldova
+locale.netherlands=Olanda
+locale.norway=Norvegia
+locale.norwegian=Norvegiană (nor)
+locale.poland=Polonia
+locale.polish=Poloneză (pol)
+locale.portugal=Portugalia
+locale.portuguese=Portugheză (por)
+locale.romania=România
+locale.romanian=Română (rom)
+locale.russia.moscow=Rusia - Moscova
+locale.russia.st.petersburg=Rusia - Sankt Petersburg
+locale.russian=Rusă (rus)
+locale.serbia=Serbia
+locale.serbian=Sârbă (scc)
+locale.slovak=Slovacă (slo)
+locale.slovakia=Slovacia
+locale.slovenian=Slovenă (slv)
+locale.spain=Spania
+locale.spanish=Spaniolă (esp)
+locale.sweden=Suedia
+locale.swedish=Suedeză (sve/swe)
+locale.switzerland=Elveţia
+locale.turkey=Turcia
+locale.uk=Marea Britanie
+locale.ukraine=Ucraina
 registrationSucceed_t=V-aţi înregistrat cu succes
-romania_t=România
-romanian_t=Română (rom)
-russiaMoscow_t=Rusia - Moscova
-russiaStPetersburg_t=Rusia - Sankt Petersburg
-russian_t=Rusă (rus)
-serbia_t=Serbia
-serbian_t=Sârbă (scc)
-slovak_t=Slovacă (slo)
-slovakia_t=Slovacia
-slovenia_t=Slovenia
-slovenian_t=Slovenă (slv)
-spain_t=Spania
-spanish_t=Spaniolă (esp)
-sweden_t=Suedia
-swedish_t=Suedeză (sve/swe)
-switzerland_t=Elveţia
-turkey_t=Turcia
-uk_t=Marea Britanie
-ukraine_t=Ucraina
