--- a/portal/src/main/resources/i18n/messages_ru.properties
+++ b/portal/src/main/resources/i18n/messages_ru.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
+_language_select.italian=Итальянский (ит.)
+_metadata.dc.contributor=Спонсор
+_metadata.dc.coverage=Границы
+_metadata.dc.creator=Автор
+_metadata.dc.date=Дата
+_metadata.dc.description=Описание
+_metadata.dc.language=Язык
+_metadata.dc.rights=Права
+_metadata.dc.subject=Тема
+_metadata.dc.title=Название
+_metadata.dc.type=Тип
+_metadata.dcterms.alternative=Второе название
+_metadata.dcterms.conforms.to=Соответствует
+_metadata.dcterms.has.format=Имеет формат
+_metadata.dcterms.has.part=Состоит из
+_metadata.dcterms.is.format.of=Является форматом
+_metadata.dcterms.is.referenced.by=Ссылка с
+_metadata.dcterms.is.replaced.by=Заменено
+_metadata.dcterms.ispart.of=Является частью
+_metadata.dcterms.provenance=Provenance
+_metadata.dcterms.references=Ссылки
+_metadata.dcterms.replaces=Заменяет
+_metadata.dcterms.requires=Требует
+_metadata.dcterms.spatial=Пространственные границы
+_metadata.dcterms.temporal=Временные границы
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.last.name=Last name
 _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
@@ -148,7 +174,9 @@ _unused.add=Add
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
+_unused.bosnia.and.herzegovina=Bosnia and Herzegovina
 _unused.browse.through.time=Browse through time
+_unused.other=Другой
 _unused.privacy=Privacy
 _unused.remember.me=Remember me on this computer
 _unused.remove=Remove
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Share your ideas
 _unused.show.all=Show all
 _unused.sign.in=Sign in
 _unused.site.map=Sitemap
+_unused.slovenia=Словения
 _unused.sound=Sound
 _unused.tag.added=Tag added
 _unused.tag.addition.failed=Tag addition failed
@@ -170,107 +199,78 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Австрия
-azerbaijan_t=Azerbaijan
-belgium_t=Бельгия
-bosniaAndHerzegovina_t=Bosnia and Herzegovina
-bulgaria_t=Болгария
-croatia_t=Хорватия
-croatian_t=Хорватский (хорв.)
-cyprus_t=Кипр
-czech_t=Чешская республика
-czechlanguage_t=Чешский (чешск.)
-danish_t=Датский (дат.)
-dc_contributor_t=Спонсор
-dc_coverage_t=Границы
-dc_creator_t=Автор
-dc_date_t=Дата
-dc_description_t=Описание
 dc_format_t=Формат
 dc_identifier_t=Идентификатор
-dc_language_t=Язык
 dc_publisher_t=Издательство
 dc_relation_t=Отношение
-dc_rights_t=Права
 dc_source_t=Источник
-dc_subject_t=Тема
-dc_title_t=Название
-dc_type_t=Тип
-dcterms_alternative_t=Второе название
-dcterms_conformsTo_t=Соответствует
-dcterms_hasFormat_t=Имеет формат
-dcterms_hasPart_t=Состоит из
-dcterms_isFormatOf_t=Является форматом
-dcterms_isPartOf_t=Является частью
-dcterms_isReferencedBy_t=Ссылка с
-dcterms_isReplacedBy_t=Заменено
-dcterms_provenance_t=Provenance
-dcterms_references_t=Ссылки
-dcterms_replaces_t=Заменяет
-dcterms_requires_t=Требует
-dcterms_spatial_t=Пространственные границы
-dcterms_temporal_t=Временные границы
-denmark_t=Дания
-dutch_t=Нидерландский (нид.)
-english_t=Английский (англ.)
-estonia_t=Эстония
-estonian_t=Эстонский (эст.)
-finland_t=Финляндия
-finnish_t=Финский (фин.)
-france_t=Франция
-french_t=Французский (франц.)
-georgia_t=Georgia
-german_t=Немецкий (нем.)
-germany_t=Германия
-greece_t=Греция
-greek_t=Греческий (греч.)
-hungarian_t=Венгерский (венгр.)
-hungary_t=Венгрия
-iceland_t=Исландия
-icelandic_t=Исландский (исл.)
-ireland_t=Ирландия
-italian_t=Итальянский (ит.)
-italyFlorence_t=Италия-Флоренция
-italyRome_t=Италия-Рим
 languageDropDownList_t=Язык
-lastName_t=Last name
-latvia_t=Латвия
-latvian_t=Латвийский (латв.)
-liechtenstein_t=Лихтенштейн
-lithuania_t=Литва
-lithuanian_t=Литовский (лит.)
-luxembourg_t=Люксембург
-luxemburgish_t=Люксембургский (люкс.)
-malta_t=Мальта
-maltese_t=Мальтийский (мальт.)
-moldova_t=Moldova
-netherlands_t=Нидерланды
-norway_t=Норвегия
-norwegian_t=Норвежский (норв.)
-other_t=Другой
-poland_t=Польша
-polish_t=Польский (полск.)
-portugal_t=Португалия
-portuguese_t=португальский (порт.)
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Австрия
+locale.azerbaijan=Azerbaijan
+locale.belgium=Бельгия
+locale.bulgaria=Болгария
+locale.croatia=Хорватия
+locale.croatian=Хорватский (хорв.)
+locale.cyprus=Кипр
+locale.czech=Чешская республика
+locale.czechlanguage=Чешский (чешск.)
+locale.danish=Датский (дат.)
+locale.denmark=Дания
+locale.dutch=Нидерландский (нид.)
+locale.english=Английский (англ.)
+locale.estonia=Эстония
+locale.estonian=Эстонский (эст.)
+locale.finland=Финляндия
+locale.finnish=Финский (фин.)
+locale.france=Франция
+locale.french=Французский (франц.)
+locale.georgia=Georgia
+locale.german=Немецкий (нем.)
+locale.germany=Германия
+locale.greece=Греция
+locale.greek=Греческий (греч.)
+locale.hungarian=Венгерский (венгр.)
+locale.hungary=Венгрия
+locale.iceland=Исландия
+locale.icelandic=Исландский (исл.)
+locale.ireland=Ирландия
+locale.italy.florence=Италия-Флоренция
+locale.italy.rome=Италия-Рим
+locale.latvia=Латвия
+locale.latvian=Латвийский (латв.)
+locale.liechtenstein=Лихтенштейн
+locale.lithuania=Литва
+locale.lithuanian=Литовский (лит.)
+locale.luxembourg=Люксембург
+locale.luxemburgish=Люксембургский (люкс.)
+locale.malta=Мальта
+locale.maltese=Мальтийский (мальт.)
+locale.moldova=Moldova
+locale.netherlands=Нидерланды
+locale.norway=Норвегия
+locale.norwegian=Норвежский (норв.)
+locale.poland=Польша
+locale.polish=Польский (полск.)
+locale.portugal=Португалия
+locale.portuguese=португальский (порт.)
+locale.romania=Румыния
+locale.romanian=Румынский
+locale.russia.moscow=Россия - Москва
+locale.russia.st.petersburg=Russia - Saint Petersburg
+locale.russian=Русский
+locale.serbia=Сербия
+locale.serbian=Сербский (сербск.)
+locale.slovak=Словацкий (словц.)
+locale.slovakia=Словакия
+locale.slovenian=Словенский (словен.)
+locale.spain=Испания
+locale.spanish=Испанский (исп.)
+locale.sweden=Швеция
+locale.swedish=Шведский (швед.)
+locale.switzerland=Швейцария
+locale.turkey=Turkey
+locale.uk=Великобритания
+locale.ukraine=Ukraine
 registrationSucceed_t=Ваша регистрация завершилась успешно
-romania_t=Румыния
-romanian_t=Румынский
-russiaMoscow_t=Россия - Москва
-russiaStPetersburg_t=Russia - Saint Petersburg
-russian_t=Русский
-serbia_t=Сербия
-serbian_t=Сербский (сербск.)
-slovak_t=Словацкий (словц.)
-slovakia_t=Словакия
-slovenia_t=Словения
-slovenian_t=Словенский (словен.)
-spain_t=Испания
-spanish_t=Испанский (исп.)
-sweden_t=Швеция
-swedish_t=Шведский (швед.)
-switzerland_t=Швейцария
-turkey_t=Turkey
-uk_t=Великобритания
-ukraine_t=Ukraine
