--- a/portal/src/main/resources/i18n/messages_sk.properties
+++ b/portal/src/main/resources/i18n/messages_sk.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Uloženie vyhľadávania zlyhalo
 _header.actions=Akcie
 _header.relatedcontent=Súvisiaci obsah
+_language_select.italian=Taliansky (ita)
+_metadata.dc.contributor=Prispievateľ
+_metadata.dc.coverage=Pokrytie
+_metadata.dc.creator=Autor
+_metadata.dc.date=Dátum
+_metadata.dc.description=Opis
+_metadata.dc.language=Jazyk
+_metadata.dc.rights=Práva
+_metadata.dc.subject=Predmet
+_metadata.dc.title=Názov
+_metadata.dc.type=Typ
+_metadata.dcterms.alternative=Alternatívny názov
+_metadata.dcterms.conforms.to=Vyhovuje
+_metadata.dcterms.has.format=Má formát
+_metadata.dcterms.has.part=Má súčasť
+_metadata.dcterms.is.format.of=Je formátom
+_metadata.dcterms.is.referenced.by=Je citovaný
+_metadata.dcterms.is.replaced.by=Je nahradený
+_metadata.dcterms.ispart.of=Je súčasťou
+_metadata.dcterms.provenance=Proveniencia
+_metadata.dcterms.references=Odkazy
+_metadata.dcterms.replaces=Nahrádza
+_metadata.dcterms.requires=Vyžaduje
+_metadata.dcterms.spatial=Priestorové pokrytie
+_metadata.dcterms.temporal=Časové pokrytie
 _mine.date.saved=Dátum uloženia
 _mine.delete=Vymazať
+_mine.last.name=Priezvisko
 _mine.saved.items=Uložené položky
 _mine.saved.searches=Uložené vyhľadávania
 _mine.saved.tags=Uložené tagy
@@ -148,7 +174,9 @@ _unused.add=Pridať
 _unused.aggregator.explain=*Agregátor zhromažďuje materiál od niekoľkých prispievateľov, zobrazuje ho na vlastnom webovom sídle a poskytuje ho pre Europeanu.
 _unused.altprint=Tlačiť túto stranu
 _unused.aplacetoshareideas=miesto pre inšpiráciu a nápady. Vyhľadávajte v kultúrnych zbierkach Európy, napojte sa na iné používateľské cesty a podeľte sa o svoje objavy.
+_unused.bosnia.and.herzegovina=Bosna a Hercegovina
 _unused.browse.through.time=Prezeranie v čase
+_unused.other=Iný
 _unused.privacy=Ochrana súkromia
 _unused.remember.me=Zapämätať si ma na tomto počítači
 _unused.remove=Odstrániť
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Podeľte sa o svoje nápady
 _unused.show.all=Zobraziť všetko
 _unused.sign.in=Prihlásenie
 _unused.site.map=Mapa www sídla
+_unused.slovenia=Slovinsko
 _unused.sound=Zvuk
 _unused.tag.added=Pridané tagy
 _unused.tag.addition.failed=Pridanie tagu zlyhalo
@@ -170,107 +199,78 @@ _unused.view.as.xml=Zobraziť ako XML
 _unused.view.with.labels=Zobraziť s návestiami
 _unused.view.without.labels=Zobraziť bez návestí
 _unused.you.have.search.for=Hľadali ste
-albania_t=Albánsko
-armenia_t=Arménsko
-austria_t=Rakúsko
-azerbaijan_t=Azerbajdžan
-belgium_t=Belgicko
-bosniaAndHerzegovina_t=Bosna a Hercegovina
-bulgaria_t=Bulharsko
-croatia_t=Chorvátsko
-croatian_t=Chorvátsky (hrv)
-cyprus_t=Cyprus
-czech_t=Česká republika
-czechlanguage_t=Český (cze/cse)
-danish_t=Dánsky (dan)
-dc_contributor_t=Prispievateľ
-dc_coverage_t=Pokrytie
-dc_creator_t=Autor
-dc_date_t=Dátum
-dc_description_t=Opis
 dc_format_t=Formát
 dc_identifier_t=Identifikátor
-dc_language_t=Jazyk
 dc_publisher_t=Vydavateľ
 dc_relation_t=Vzťah
-dc_rights_t=Práva
 dc_source_t=Zdroj
-dc_subject_t=Predmet
-dc_title_t=Názov
-dc_type_t=Typ
-dcterms_alternative_t=Alternatívny názov
-dcterms_conformsTo_t=Vyhovuje
-dcterms_hasFormat_t=Má formát
-dcterms_hasPart_t=Má súčasť
-dcterms_isFormatOf_t=Je formátom
-dcterms_isPartOf_t=Je súčasťou
-dcterms_isReferencedBy_t=Je citovaný
-dcterms_isReplacedBy_t=Je nahradený
-dcterms_provenance_t=Proveniencia
-dcterms_references_t=Odkazy
-dcterms_replaces_t=Nahrádza
-dcterms_requires_t=Vyžaduje
-dcterms_spatial_t=Priestorové pokrytie
-dcterms_temporal_t=Časové pokrytie
-denmark_t=Dánsko
-dutch_t=Holandský (dut)
-english_t=Anglický (eng)
-estonia_t=Estónsko
-estonian_t=Estónsky (est)
-finland_t=Fínsko
-finnish_t=Fínsky (fin)
-france_t=Francúzsko
-french_t=Francúzsky (fre)
-georgia_t=Gruzínsko
-german_t=Nemecký (deu)
-germany_t=Nemecko
-greece_t=Grécko
-greek_t=Grécky (ell/gre)
-hungarian_t=Maďarský (hun)
-hungary_t=Maďarsko
-iceland_t=Island
-icelandic_t=Islandský (ice)
-ireland_t=Írsko
-italian_t=Taliansky (ita)
-italyFlorence_t=Taliansko - Florencia
-italyRome_t=Taliansko - Rím
 languageDropDownList_t=Jazyk
-lastName_t=Priezvisko
-latvia_t=Lotyšsko
-latvian_t=Lotyšský (lav)
-liechtenstein_t=Lichtenštajnsko
-lithuania_t=Litva
-lithuanian_t=Litovský (lit)
-luxembourg_t=Luxembursko
-luxemburgish_t=Luxemburský (ltz)
-malta_t=Malta
-maltese_t=Maltský (mlt)
-moldova_t=Moldavsko
-netherlands_t=Holandsko
-norway_t=Nórsko
-norwegian_t=Nórsky (nor)
-other_t=Iný
-poland_t=Poľsko
-polish_t=Poľský (pol)
-portugal_t=Portugalsko
-portuguese_t=Portugalský (por)
+locale.albania=Albánsko
+locale.armenia=Arménsko
+locale.austria=Rakúsko
+locale.azerbaijan=Azerbajdžan
+locale.belgium=Belgicko
+locale.bulgaria=Bulharsko
+locale.croatia=Chorvátsko
+locale.croatian=Chorvátsky (hrv)
+locale.cyprus=Cyprus
+locale.czech=Česká republika
+locale.czechlanguage=Český (cze/cse)
+locale.danish=Dánsky (dan)
+locale.denmark=Dánsko
+locale.dutch=Holandský (dut)
+locale.english=Anglický (eng)
+locale.estonia=Estónsko
+locale.estonian=Estónsky (est)
+locale.finland=Fínsko
+locale.finnish=Fínsky (fin)
+locale.france=Francúzsko
+locale.french=Francúzsky (fre)
+locale.georgia=Gruzínsko
+locale.german=Nemecký (deu)
+locale.germany=Nemecko
+locale.greece=Grécko
+locale.greek=Grécky (ell/gre)
+locale.hungarian=Maďarský (hun)
+locale.hungary=Maďarsko
+locale.iceland=Island
+locale.icelandic=Islandský (ice)
+locale.ireland=Írsko
+locale.italy.florence=Taliansko - Florencia
+locale.italy.rome=Taliansko - Rím
+locale.latvia=Lotyšsko
+locale.latvian=Lotyšský (lav)
+locale.liechtenstein=Lichtenštajnsko
+locale.lithuania=Litva
+locale.lithuanian=Litovský (lit)
+locale.luxembourg=Luxembursko
+locale.luxemburgish=Luxemburský (ltz)
+locale.malta=Malta
+locale.maltese=Maltský (mlt)
+locale.moldova=Moldavsko
+locale.netherlands=Holandsko
+locale.norway=Nórsko
+locale.norwegian=Nórsky (nor)
+locale.poland=Poľsko
+locale.polish=Poľský (pol)
+locale.portugal=Portugalsko
+locale.portuguese=Portugalský (por)
+locale.romania=Rumunsko
+locale.romanian=Rumunský (rom)
+locale.russia.moscow=Rusko - Moskva
+locale.russia.st.petersburg=Rusko - Petrohrad
+locale.russian=Ruský (rus)
+locale.serbia=Srbsko
+locale.serbian=Srbský (scc)
+locale.slovak=Slovenský (slo)
+locale.slovakia=Slovensko
+locale.slovenian=Slovinský (slv)
+locale.spain=Španielsko
+locale.spanish=Španielsky (esp)
+locale.sweden=Švédsko
+locale.swedish=Švédsky (sve/swe)
+locale.switzerland=Švajčiarsko
+locale.turkey=Turecko
+locale.uk=Spojené kráľovstvo
+locale.ukraine=Ukrajina
 registrationSucceed_t=Vaša registrácia bola úspešná
-romania_t=Rumunsko
-romanian_t=Rumunský (rom)
-russiaMoscow_t=Rusko - Moskva
-russiaStPetersburg_t=Rusko - Petrohrad
-russian_t=Ruský (rus)
-serbia_t=Srbsko
-serbian_t=Srbský (scc)
-slovak_t=Slovenský (slo)
-slovakia_t=Slovensko
-slovenia_t=Slovinsko
-slovenian_t=Slovinský (slv)
-spain_t=Španielsko
-spanish_t=Španielsky (esp)
-sweden_t=Švédsko
-swedish_t=Švédsky (sve/swe)
-switzerland_t=Švajčiarsko
-turkey_t=Turecko
-uk_t=Spojené kráľovstvo
-ukraine_t=Ukrajina
