--- a/portal/src/main/resources/i18n/messages_sl.properties
+++ b/portal/src/main/resources/i18n/messages_sl.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Shranjevanje iskanja ni uspelo
 _header.actions=Možnosti
 _header.relatedcontent=Sorodne vsebine
+_language_select.italian=italijanščina (ita)
+_metadata.dc.contributor=Prispevali
+_metadata.dc.coverage=Pokritost
+_metadata.dc.creator=Avtor
+_metadata.dc.date=Datum
+_metadata.dc.description=Opis
+_metadata.dc.language=Jezik
+_metadata.dc.rights=Pravice
+_metadata.dc.subject=Vsebina
+_metadata.dc.title=Naslov
+_metadata.dc.type=Vrsta gradiva
+_metadata.dcterms.alternative=Alternativni naslov
+_metadata.dcterms.conforms.to=Ustreza
+_metadata.dcterms.has.format=V formatu
+_metadata.dcterms.has.part=Vsebuje del
+_metadata.dcterms.is.format.of=Je format
+_metadata.dcterms.is.referenced.by=Referenca v
+_metadata.dcterms.is.replaced.by=Nadomeščeno z
+_metadata.dcterms.ispart.of=je del
+_metadata.dcterms.provenance=Vir
+_metadata.dcterms.references=Reference
+_metadata.dcterms.replaces=Nadomešča
+_metadata.dcterms.requires=Zahteva
+_metadata.dcterms.spatial=Geografska pokritost
+_metadata.dcterms.temporal=Časovna pokritost
 _mine.date.saved=Datum
 _mine.delete=Izbriši
+_mine.last.name=Priimek
 _mine.saved.items=Shranjeni predmeti
 _mine.saved.searches=Shranjena iskanja
 _mine.saved.tags=Shranjeni zaznamki
@@ -148,7 +174,9 @@ _unused.add=Dodaj
 _unused.aggregator.explain=*Zbirni center združuje gradivo, ki so ga prispevali partnerji, ga prikaže na njihovi domači strani, hkrati pa ga posreduje tudi na Europeano.
 _unused.altprint=Natisnite stran
 _unused.aplacetoshareideas=vir navdiha in novih idej. Iščite po kulturnih zbirkah Evrope, povežite se z drugimi uporabniki in delite svoja odkritja.
+_unused.bosnia.and.herzegovina=Bosna in Hercegovina
 _unused.browse.through.time=Brskajte po času
+_unused.other=drugo
 _unused.privacy=Zasebnost
 _unused.remember.me=Zapomni si me na tem računalniku
 _unused.remove=Odstrani
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Posredujte svoje ideje
 _unused.show.all=Prikaži vse
 _unused.sign.in=Prijava
 _unused.site.map=Zemljevid strani
+_unused.slovenia=Slovenija
 _unused.sound=Zvok
 _unused.tag.added=Zaznamek dodan
 _unused.tag.addition.failed=Dodajanje zaznamka ni uspelo
@@ -170,107 +199,78 @@ _unused.view.as.xml=Poglej kot XML
 _unused.view.with.labels=Pogled z oznakami
 _unused.view.without.labels=Pogled brez oznak
 _unused.you.have.search.for=Iskali ste
-albania_t=Albanija
-armenia_t=Armenija
-austria_t=Avstrija
-azerbaijan_t=Azejbardžan
-belgium_t=Belgija
-bosniaAndHerzegovina_t=Bosna in Hercegovina
-bulgaria_t=Bolgarija
-croatia_t=Hrvaška
-croatian_t=hrvaščina (hrv)
-cyprus_t=Ciper
-czech_t=Češka republika
-czechlanguage_t=češčina (cze/cse)
-danish_t=danščina (dan)
-dc_contributor_t=Prispevali
-dc_coverage_t=Pokritost
-dc_creator_t=Avtor
-dc_date_t=Datum
-dc_description_t=Opis
 dc_format_t=Format
 dc_identifier_t=Identifikator
-dc_language_t=Jezik
 dc_publisher_t=Izdajatelj
 dc_relation_t=Relacija
-dc_rights_t=Pravice
 dc_source_t=Vir
-dc_subject_t=Vsebina
-dc_title_t=Naslov
-dc_type_t=Vrsta gradiva
-dcterms_alternative_t=Alternativni naslov
-dcterms_conformsTo_t=Ustreza
-dcterms_hasFormat_t=V formatu
-dcterms_hasPart_t=Vsebuje del
-dcterms_isFormatOf_t=Je format
-dcterms_isPartOf_t=je del
-dcterms_isReferencedBy_t=Referenca v
-dcterms_isReplacedBy_t=Nadomeščeno z
-dcterms_provenance_t=Vir
-dcterms_references_t=Reference
-dcterms_replaces_t=Nadomešča
-dcterms_requires_t=Zahteva
-dcterms_spatial_t=Geografska pokritost
-dcterms_temporal_t=Časovna pokritost
-denmark_t=Danska
-dutch_t=nizozemščina (dut)
-english_t=angleščina (eng)
-estonia_t=Estonija
-estonian_t=estonščina (est)
-finland_t=Finska
-finnish_t=finščina (fin)
-france_t=Francija
-french_t=francoščina (fre)
-georgia_t=Gruzija
-german_t=nemščina (deu)
-germany_t=Nemčija
-greece_t=Grčija
-greek_t=grščina
-hungarian_t=madžarščina (hun)
-hungary_t=Madžarska
-iceland_t=Islandija
-icelandic_t=islandščina (ice)
-ireland_t=Irska
-italian_t=italijanščina (ita)
-italyFlorence_t=Italija-Firence
-italyRome_t=Italija-Rim
 languageDropDownList_t=Jezik
-lastName_t=Priimek
-latvia_t=Latvija
-latvian_t=latvijščina (lav)
-liechtenstein_t=Liechtenstein
-lithuania_t=Litva
-lithuanian_t=litovščina (lit)
-luxembourg_t=Luksemburg
-luxemburgish_t=luksemburščina (ltz)
-malta_t=Malta
-maltese_t=malteščina (mlt)
-moldova_t=Moldavija
-netherlands_t=Nizozemska
-norway_t=Norveška
-norwegian_t=norveščina (nor)
-other_t=drugo
-poland_t=Poljska
-polish_t=poljščina (pol)
-portugal_t=Portugalska
-portuguese_t=portugalščina (por)
+locale.albania=Albanija
+locale.armenia=Armenija
+locale.austria=Avstrija
+locale.azerbaijan=Azejbardžan
+locale.belgium=Belgija
+locale.bulgaria=Bolgarija
+locale.croatia=Hrvaška
+locale.croatian=hrvaščina (hrv)
+locale.cyprus=Ciper
+locale.czech=Češka republika
+locale.czechlanguage=češčina (cze/cse)
+locale.danish=danščina (dan)
+locale.denmark=Danska
+locale.dutch=nizozemščina (dut)
+locale.english=angleščina (eng)
+locale.estonia=Estonija
+locale.estonian=estonščina (est)
+locale.finland=Finska
+locale.finnish=finščina (fin)
+locale.france=Francija
+locale.french=francoščina (fre)
+locale.georgia=Gruzija
+locale.german=nemščina (deu)
+locale.germany=Nemčija
+locale.greece=Grčija
+locale.greek=grščina
+locale.hungarian=madžarščina (hun)
+locale.hungary=Madžarska
+locale.iceland=Islandija
+locale.icelandic=islandščina (ice)
+locale.ireland=Irska
+locale.italy.florence=Italija-Firence
+locale.italy.rome=Italija-Rim
+locale.latvia=Latvija
+locale.latvian=latvijščina (lav)
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Litva
+locale.lithuanian=litovščina (lit)
+locale.luxembourg=Luksemburg
+locale.luxemburgish=luksemburščina (ltz)
+locale.malta=Malta
+locale.maltese=malteščina (mlt)
+locale.moldova=Moldavija
+locale.netherlands=Nizozemska
+locale.norway=Norveška
+locale.norwegian=norveščina (nor)
+locale.poland=Poljska
+locale.polish=poljščina (pol)
+locale.portugal=Portugalska
+locale.portuguese=portugalščina (por)
+locale.romania=Romunija
+locale.romanian=romunščina (rom)
+locale.russia.moscow=Rusija - Moskva
+locale.russia.st.petersburg=Rusija - Sankt Peterburg
+locale.russian=ruščina (rus)
+locale.serbia=Srbija
+locale.serbian=srbščina (scc)
+locale.slovak=slovaščina (slo)
+locale.slovakia=Slovaška
+locale.slovenian=slovenščina (slv)
+locale.spain=Španija
+locale.spanish=španščina (esp)
+locale.sweden=Švedska
+locale.swedish=švedščina (sve/swe)
+locale.switzerland=Švica
+locale.turkey=Turčija
+locale.uk=Velika Britanija
+locale.ukraine=Ukrajina
 registrationSucceed_t=Uspešno ste se registrirali
-romania_t=Romunija
-romanian_t=romunščina (rom)
-russiaMoscow_t=Rusija - Moskva
-russiaStPetersburg_t=Rusija - Sankt Peterburg
-russian_t=ruščina (rus)
-serbia_t=Srbija
-serbian_t=srbščina (scc)
-slovak_t=slovaščina (slo)
-slovakia_t=Slovaška
-slovenia_t=Slovenija
-slovenian_t=slovenščina (slv)
-spain_t=Španija
-spanish_t=španščina (esp)
-sweden_t=Švedska
-swedish_t=švedščina (sve/swe)
-switzerland_t=Švica
-turkey_t=Turčija
-uk_t=Velika Britanija
-ukraine_t=Ukrajina
