--- a/portal/src/main/resources/i18n/messages_sr.properties
+++ b/portal/src/main/resources/i18n/messages_sr.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
+_language_select.italian=Italijanski (ita)
+_metadata.dc.contributor=Saradnik
+_metadata.dc.coverage=Opseg
+_metadata.dc.creator=Autor
+_metadata.dc.date=Datum
+_metadata.dc.description=Opis
+_metadata.dc.language=Jezik
+_metadata.dc.rights=Prava
+_metadata.dc.subject=Predmet
+_metadata.dc.title=Naslov
+_metadata.dc.type=Vrsta izvora
+_metadata.dcterms.alternative=Alternativni naslov
+_metadata.dcterms.conforms.to=Odgovara
+_metadata.dcterms.has.format=U formatu
+_metadata.dcterms.has.part=Sadrži deo
+_metadata.dcterms.is.format.of=je format
+_metadata.dcterms.is.referenced.by=upućeno na
+_metadata.dcterms.is.replaced.by=zamenjeno je sa
+_metadata.dcterms.ispart.of=Deo
+_metadata.dcterms.provenance=Provenance
+_metadata.dcterms.references=Uputnice
+_metadata.dcterms.replaces=Zamenjuje
+_metadata.dcterms.requires=Zahteva
+_metadata.dcterms.spatial=Prostorni opseg
+_metadata.dcterms.temporal=Vremenski opseg
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.last.name=Last name
 _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
@@ -148,7 +174,9 @@ _unused.add=Add
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
+_unused.bosnia.and.herzegovina=Bosnia and Herzegovina
 _unused.browse.through.time=Browse through time
+_unused.other=Ostali
 _unused.privacy=Privacy
 _unused.remember.me=Remember me on this computer
 _unused.remove=Remove
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Share your ideas
 _unused.show.all=Show all
 _unused.sign.in=Sign in
 _unused.site.map=Sitemap
+_unused.slovenia=Slovenija
 _unused.sound=Sound
 _unused.tag.added=Tag added
 _unused.tag.addition.failed=Tag addition failed
@@ -170,107 +199,78 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Austrija
-azerbaijan_t=Azerbaijan
-belgium_t=Belgija
-bosniaAndHerzegovina_t=Bosnia and Herzegovina
-bulgaria_t=Bugarska
-croatia_t=Hrvatska
-croatian_t=Hrvatski (hrv)
-cyprus_t=Kipar
-czech_t=Republika Češka
-czechlanguage_t=češki (cze/cse)
-danish_t=Danski (dan)
-dc_contributor_t=Saradnik
-dc_coverage_t=Opseg
-dc_creator_t=Autor
-dc_date_t=Datum
-dc_description_t=Opis
 dc_format_t=Format
 dc_identifier_t=Identifikator
-dc_language_t=Jezik
 dc_publisher_t=Izdavač
 dc_relation_t=Relacija
-dc_rights_t=Prava
 dc_source_t=Izvor
-dc_subject_t=Predmet
-dc_title_t=Naslov
-dc_type_t=Vrsta izvora
-dcterms_alternative_t=Alternativni naslov
-dcterms_conformsTo_t=Odgovara
-dcterms_hasFormat_t=U formatu
-dcterms_hasPart_t=Sadrži deo
-dcterms_isFormatOf_t=je format
-dcterms_isPartOf_t=Deo
-dcterms_isReferencedBy_t=upućeno na
-dcterms_isReplacedBy_t=zamenjeno je sa
-dcterms_provenance_t=Provenance
-dcterms_references_t=Uputnice
-dcterms_replaces_t=Zamenjuje
-dcterms_requires_t=Zahteva
-dcterms_spatial_t=Prostorni opseg
-dcterms_temporal_t=Vremenski opseg
-denmark_t=Danska
-dutch_t=Holandski (dut)
-english_t=Engleski (eng)
-estonia_t=Estonija
-estonian_t=Estonski (est)
-finland_t=Finska
-finnish_t=Finski (fin)
-france_t=Francuska
-french_t=Francuski (fre)
-georgia_t=Georgia
-german_t=Nemački (ger)
-germany_t=Nemačka
-greece_t=Grčka
-greek_t=grčki (ell/gre)
-hungarian_t=mađarski (hun)
-hungary_t=Mađarska
-iceland_t=Island
-icelandic_t=Islandski (ice)
-ireland_t=Irska
-italian_t=Italijanski (ita)
-italyFlorence_t=Italija - Firenca
-italyRome_t=Italija - Rim
 languageDropDownList_t=Jezik
-lastName_t=Last name
-latvia_t=Letonija
-latvian_t=Letonski (lav)
-liechtenstein_t=Lihtenštajn
-lithuania_t=Litvanija
-lithuanian_t=litvanski (lit)
-luxembourg_t=Luksemburg
-luxemburgish_t=Luksemburški (ltz)
-malta_t=Malta
-maltese_t=Malteški (mlt)
-moldova_t=Moldova
-netherlands_t=Holandija
-norway_t=Norveška
-norwegian_t=Norveški (nor)
-other_t=Ostali
-poland_t=Poljska
-polish_t=Poljski (pol)
-portugal_t=Portugal
-portuguese_t=Portugalski (por)
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Austrija
+locale.azerbaijan=Azerbaijan
+locale.belgium=Belgija
+locale.bulgaria=Bugarska
+locale.croatia=Hrvatska
+locale.croatian=Hrvatski (hrv)
+locale.cyprus=Kipar
+locale.czech=Republika Češka
+locale.czechlanguage=češki (cze/cse)
+locale.danish=Danski (dan)
+locale.denmark=Danska
+locale.dutch=Holandski (dut)
+locale.english=Engleski (eng)
+locale.estonia=Estonija
+locale.estonian=Estonski (est)
+locale.finland=Finska
+locale.finnish=Finski (fin)
+locale.france=Francuska
+locale.french=Francuski (fre)
+locale.georgia=Georgia
+locale.german=Nemački (ger)
+locale.germany=Nemačka
+locale.greece=Grčka
+locale.greek=grčki (ell/gre)
+locale.hungarian=mađarski (hun)
+locale.hungary=Mađarska
+locale.iceland=Island
+locale.icelandic=Islandski (ice)
+locale.ireland=Irska
+locale.italy.florence=Italija - Firenca
+locale.italy.rome=Italija - Rim
+locale.latvia=Letonija
+locale.latvian=Letonski (lav)
+locale.liechtenstein=Lihtenštajn
+locale.lithuania=Litvanija
+locale.lithuanian=litvanski (lit)
+locale.luxembourg=Luksemburg
+locale.luxemburgish=Luksemburški (ltz)
+locale.malta=Malta
+locale.maltese=Malteški (mlt)
+locale.moldova=Moldova
+locale.netherlands=Holandija
+locale.norway=Norveška
+locale.norwegian=Norveški (nor)
+locale.poland=Poljska
+locale.polish=Poljski (pol)
+locale.portugal=Portugal
+locale.portuguese=Portugalski (por)
+locale.romania=Rumunija
+locale.romanian=rumunski
+locale.russia.moscow=Rusija - Moskva
+locale.russia.st.petersburg=Russia - Saint Petersburg
+locale.russian=ruski
+locale.serbia=Srbija
+locale.serbian=Srpski (ser)
+locale.slovak=slovački (slo)
+locale.slovakia=Slovačka
+locale.slovenian=Slovenački (slv)
+locale.spain=Španija
+locale.spanish=Španski (esp)
+locale.sweden=Švedska
+locale.swedish=Švedski (sve/swe)
+locale.switzerland=Švajcarska
+locale.turkey=Turkey
+locale.uk=Velika Britanija
+locale.ukraine=Ukraine
 registrationSucceed_t=Uspešno ste se registrovali.
-romania_t=Rumunija
-romanian_t=rumunski
-russiaMoscow_t=Rusija - Moskva
-russiaStPetersburg_t=Russia - Saint Petersburg
-russian_t=ruski
-serbia_t=Srbija
-serbian_t=Srpski (ser)
-slovak_t=slovački (slo)
-slovakia_t=Slovačka
-slovenia_t=Slovenija
-slovenian_t=Slovenački (slv)
-spain_t=Španija
-spanish_t=Španski (esp)
-sweden_t=Švedska
-swedish_t=Švedski (sve/swe)
-switzerland_t=Švajcarska
-turkey_t=Turkey
-uk_t=Velika Britanija
-ukraine_t=Ukraine
