--- a/portal/src/main/resources/i18n/messages_tr.properties
+++ b/portal/src/main/resources/i18n/messages_tr.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
+_language_select.italian=İtalyanca
+_metadata.dc.contributor=Katılımcı
+_metadata.dc.coverage=kapsama
+_metadata.dc.creator=Yazar
+_metadata.dc.date=Tarih
+_metadata.dc.description=Tanım
+_metadata.dc.language=Dil
+_metadata.dc.rights=Haklar
+_metadata.dc.subject=Konu
+_metadata.dc.title=Başlık
+_metadata.dc.type=Tür
+_metadata.dcterms.alternative=Alternatif başlık
+_metadata.dcterms.conforms.to=.. uygun
+_metadata.dcterms.has.format=formatı var
+_metadata.dcterms.has.part=.. da yeri var
+_metadata.dcterms.is.format.of=.. nın formatı
+_metadata.dcterms.is.referenced.by=.. a dayandırılmaktadır
+_metadata.dcterms.is.replaced.by=.. değiştirildi
+_metadata.dcterms.ispart.of=.. parçası
+_metadata.dcterms.provenance=Provenance
+_metadata.dcterms.references=Referanslar
+_metadata.dcterms.replaces=Değiştirilenler
+_metadata.dcterms.requires=Talepler
+_metadata.dcterms.spatial=mekansal kapsama
+_metadata.dcterms.temporal=temporal kapsama
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.last.name=Last name
 _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
@@ -148,7 +174,9 @@ _unused.add=Add
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
+_unused.bosnia.and.herzegovina=Bosna Hersek
 _unused.browse.through.time=Browse through time
+_unused.other=Diğer
 _unused.privacy=Privacy
 _unused.remember.me=Remember me on this computer
 _unused.remove=Remove
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Share your ideas
 _unused.show.all=Show all
 _unused.sign.in=Sign in
 _unused.site.map=Sitemap
+_unused.slovenia=Slovenya
 _unused.sound=Sound
 _unused.tag.added=Tag added
 _unused.tag.addition.failed=Tag addition failed
@@ -170,107 +199,78 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-albania_t=Arnavutluk
-armenia_t=Ermenistan
-austria_t=Avusturya
-azerbaijan_t=Azerbeycan
-belgium_t=Belçika
-bosniaAndHerzegovina_t=Bosna Hersek
-bulgaria_t=Bulgaristan
-croatia_t=Hırvatistan
-croatian_t=Hırvatça
-cyprus_t=Güney Kıbrıs Rum Kesimi
-czech_t=Çek Cumhuriyeti
-czechlanguage_t=Çekçe
-danish_t=Danca
-dc_contributor_t=Katılımcı
-dc_coverage_t=kapsama
-dc_creator_t=Yazar
-dc_date_t=Tarih
-dc_description_t=Tanım
 dc_format_t=Format
 dc_identifier_t=Tanımlayıcı
-dc_language_t=Dil
 dc_publisher_t=Yayıncı
 dc_relation_t=İlişki
-dc_rights_t=Haklar
 dc_source_t=Kaynak
-dc_subject_t=Konu
-dc_title_t=Başlık
-dc_type_t=Tür
-dcterms_alternative_t=Alternatif başlık
-dcterms_conformsTo_t=.. uygun
-dcterms_hasFormat_t=formatı var
-dcterms_hasPart_t=.. da yeri var
-dcterms_isFormatOf_t=.. nın formatı
-dcterms_isPartOf_t=.. parçası
-dcterms_isReferencedBy_t=.. a dayandırılmaktadır
-dcterms_isReplacedBy_t=.. değiştirildi
-dcterms_provenance_t=Provenance
-dcterms_references_t=Referanslar
-dcterms_replaces_t=Değiştirilenler
-dcterms_requires_t=Talepler
-dcterms_spatial_t=mekansal kapsama
-dcterms_temporal_t=temporal kapsama
-denmark_t=Danimarka
-dutch_t=Hollandaca
-english_t=İngilizce
-estonia_t=Estonya
-estonian_t=Estonyaca
-finland_t=Finlandiya
-finnish_t=Fince
-france_t=Fransa
-french_t=Fransızca
-georgia_t=Gürcistan
-german_t=Almanca
-germany_t=Almanya
-greece_t=Yunanistan
-greek_t=Yunanca
-hungarian_t=Macarca
-hungary_t=Macaristan
-iceland_t=İzlanda
-icelandic_t=İzlandaca
-ireland_t=İrlanda
-italian_t=İtalyanca
-italyFlorence_t=İtalya-Floransa
-italyRome_t=İtalya-Roma
 languageDropDownList_t=Dil
-lastName_t=Last name
-latvia_t=Latviya
-latvian_t=Lotonyaca
-liechtenstein_t=Liechtenstein
-lithuania_t=Litvanya
-lithuanian_t=Litvanyaca
-luxembourg_t=Lüksemburg
-luxemburgish_t=Lüksemburgca
-malta_t=Malta
-maltese_t=Maltaca
-moldova_t=Moldıva
-netherlands_t=Hollanda
-norway_t=Norveç
-norwegian_t=Nrveçce
-other_t=Diğer
-poland_t=Polonya
-polish_t=Lehçe
-portugal_t=Portekiz
-portuguese_t=Portekizce
+locale.albania=Arnavutluk
+locale.armenia=Ermenistan
+locale.austria=Avusturya
+locale.azerbaijan=Azerbeycan
+locale.belgium=Belçika
+locale.bulgaria=Bulgaristan
+locale.croatia=Hırvatistan
+locale.croatian=Hırvatça
+locale.cyprus=Güney Kıbrıs Rum Kesimi
+locale.czech=Çek Cumhuriyeti
+locale.czechlanguage=Çekçe
+locale.danish=Danca
+locale.denmark=Danimarka
+locale.dutch=Hollandaca
+locale.english=İngilizce
+locale.estonia=Estonya
+locale.estonian=Estonyaca
+locale.finland=Finlandiya
+locale.finnish=Fince
+locale.france=Fransa
+locale.french=Fransızca
+locale.georgia=Gürcistan
+locale.german=Almanca
+locale.germany=Almanya
+locale.greece=Yunanistan
+locale.greek=Yunanca
+locale.hungarian=Macarca
+locale.hungary=Macaristan
+locale.iceland=İzlanda
+locale.icelandic=İzlandaca
+locale.ireland=İrlanda
+locale.italy.florence=İtalya-Floransa
+locale.italy.rome=İtalya-Roma
+locale.latvia=Latviya
+locale.latvian=Lotonyaca
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Litvanya
+locale.lithuanian=Litvanyaca
+locale.luxembourg=Lüksemburg
+locale.luxemburgish=Lüksemburgca
+locale.malta=Malta
+locale.maltese=Maltaca
+locale.moldova=Moldıva
+locale.netherlands=Hollanda
+locale.norway=Norveç
+locale.norwegian=Nrveçce
+locale.poland=Polonya
+locale.polish=Lehçe
+locale.portugal=Portekiz
+locale.portuguese=Portekizce
+locale.romania=Romanya
+locale.romanian=Romanca
+locale.russia.moscow=Rusya-Moskova
+locale.russia.st.petersburg=Rusya-Saint Petersburg
+locale.russian=Rusça
+locale.serbia=Sirbistan
+locale.serbian=Sırpça
+locale.slovak=Slovakça
+locale.slovakia=Slovakya
+locale.slovenian=Slovenyaca
+locale.spain=İspanya
+locale.spanish=İspanyolca
+locale.sweden=İsveç
+locale.swedish=İsveçce
+locale.switzerland=İsviçre
+locale.turkey=Türkiye
+locale.uk=Birleşk Krallık
+locale.ukraine=Ukrayna
 registrationSucceed_t=Başarıyla kayıt oldunuz
-romania_t=Romanya
-romanian_t=Romanca
-russiaMoscow_t=Rusya-Moskova
-russiaStPetersburg_t=Rusya-Saint Petersburg
-russian_t=Rusça
-serbia_t=Sirbistan
-serbian_t=Sırpça
-slovak_t=Slovakça
-slovakia_t=Slovakya
-slovenia_t=Slovenya
-slovenian_t=Slovenyaca
-spain_t=İspanya
-spanish_t=İspanyolca
-sweden_t=İsveç
-swedish_t=İsveçce
-switzerland_t=İsviçre
-turkey_t=Türkiye
-uk_t=Birleşk Krallık
-ukraine_t=Ukrayna
