--- a/portal/src/main/resources/i18n/messages_uk.properties
+++ b/portal/src/main/resources/i18n/messages_uk.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Saving search failed
 _header.actions=Actions
 _header.relatedcontent=Related content
+_language_select.italian=Італійська (ita)
+_metadata.dc.contributor=Спонсор
+_metadata.dc.coverage=Границі
+_metadata.dc.creator=Автор
+_metadata.dc.date=Дата
+_metadata.dc.description=Опис
+_metadata.dc.language=Мова
+_metadata.dc.rights=Права
+_metadata.dc.subject=Предмет
+_metadata.dc.title=Назва
+_metadata.dc.type=Тип
+_metadata.dcterms.alternative=Друга назва
+_metadata.dcterms.conforms.to=Відповідає
+_metadata.dcterms.has.format=Має формат
+_metadata.dcterms.has.part=Містить
+_metadata.dcterms.is.format.of=Є форматом
+_metadata.dcterms.is.referenced.by=Посилання з
+_metadata.dcterms.is.replaced.by=Замінено
+_metadata.dcterms.ispart.of=Є частиною
+_metadata.dcterms.provenance=Provenance
+_metadata.dcterms.references=Посилання
+_metadata.dcterms.replaces=Замінює
+_metadata.dcterms.requires=Потребує
+_metadata.dcterms.spatial=Просторові межі
+_metadata.dcterms.temporal=Часові межі
 _mine.date.saved=Date saved
 _mine.delete=Delete
+_mine.last.name=Last name
 _mine.saved.items=Saved items
 _mine.saved.searches=Saved searches
 _mine.saved.tags=Saved tags
@@ -148,7 +174,9 @@ _unused.add=Add
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=Print this page
 _unused.aplacetoshareideas=a place for inspiration and ideas. Search through the cultural collections of Europe, connect to other user pathways and share your discoveries.
+_unused.bosnia.and.herzegovina=Bosnia and Herzegovina
 _unused.browse.through.time=Browse through time
+_unused.other=Інше
 _unused.privacy=Privacy
 _unused.remember.me=Remember me on this computer
 _unused.remove=Remove
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Share your ideas
 _unused.show.all=Show all
 _unused.sign.in=Sign in
 _unused.site.map=Sitemap
+_unused.slovenia=Словенія
 _unused.sound=Sound
 _unused.tag.added=Tag added
 _unused.tag.addition.failed=Tag addition failed
@@ -170,107 +199,78 @@ _unused.view.as.xml=View as XML
 _unused.view.with.labels=View with labels
 _unused.view.without.labels=View without labels
 _unused.you.have.search.for=You have searched for
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Австрія
-azerbaijan_t=Azerbaijan
-belgium_t=Бельгія
-bosniaAndHerzegovina_t=Bosnia and Herzegovina
-bulgaria_t=Болгарія
-croatia_t=Хорватія
-croatian_t=Хорватська(hrv)
-cyprus_t=Кіпр
-czech_t=Чеська Республіка
-czechlanguage_t=Чеська (cze/cse)
-danish_t=Датська (dan)
-dc_contributor_t=Спонсор
-dc_coverage_t=Границі
-dc_creator_t=Автор
-dc_date_t=Дата
-dc_description_t=Опис
 dc_format_t=Формат
 dc_identifier_t=Ідентифікатор
-dc_language_t=Мова
 dc_publisher_t=Видавець
 dc_relation_t=Відношення
-dc_rights_t=Права
 dc_source_t=Джерело
-dc_subject_t=Предмет
-dc_title_t=Назва
-dc_type_t=Тип
-dcterms_alternative_t=Друга назва
-dcterms_conformsTo_t=Відповідає
-dcterms_hasFormat_t=Має формат
-dcterms_hasPart_t=Містить
-dcterms_isFormatOf_t=Є форматом
-dcterms_isPartOf_t=Є частиною
-dcterms_isReferencedBy_t=Посилання з
-dcterms_isReplacedBy_t=Замінено
-dcterms_provenance_t=Provenance
-dcterms_references_t=Посилання
-dcterms_replaces_t=Замінює
-dcterms_requires_t=Потребує
-dcterms_spatial_t=Просторові межі
-dcterms_temporal_t=Часові межі
-denmark_t=Данія
-dutch_t=Голландська (dut)
-english_t=Англійська(eng)
-estonia_t=Естонія
-estonian_t=Естонська (est)
-finland_t=Фінляндія
-finnish_t=Фінська (fin)
-france_t=Франція
-french_t=Французька (fre)
-georgia_t=Georgia
-german_t=Німецька (deu)
-germany_t=Германія
-greece_t=Греція
-greek_t=Грецька (ell/gre)
-hungarian_t=Угорська (hun)
-hungary_t=Угорщина
-iceland_t=Ісландія
-icelandic_t=Ісландська (ice)
-ireland_t=Ірландія
-italian_t=Італійська (ita)
-italyFlorence_t=Італія-Флоренція
-italyRome_t=Італія-Рим
 languageDropDownList_t=Мова
-lastName_t=Last name
-latvia_t=Латвія
-latvian_t=Латвійська (lav)
-liechtenstein_t=Ліхтенштейн
-lithuania_t=Литва
-lithuanian_t=Литовська (lit)
-luxembourg_t=Люксембург
-luxemburgish_t=Люксембурзька (ltz)
-malta_t=Мальта
-maltese_t=Мальтійська (mlt)
-moldova_t=Moldova
-netherlands_t=Нідерланди
-norway_t=Норвегія
-norwegian_t=Норвезька (nor)
-other_t=Інше
-poland_t=Польща
-polish_t=Польська (pol)
-portugal_t=Португалія
-portuguese_t=Португальська (por)
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Австрія
+locale.azerbaijan=Azerbaijan
+locale.belgium=Бельгія
+locale.bulgaria=Болгарія
+locale.croatia=Хорватія
+locale.croatian=Хорватська(hrv)
+locale.cyprus=Кіпр
+locale.czech=Чеська Республіка
+locale.czechlanguage=Чеська (cze/cse)
+locale.danish=Датська (dan)
+locale.denmark=Данія
+locale.dutch=Голландська (dut)
+locale.english=Англійська(eng)
+locale.estonia=Естонія
+locale.estonian=Естонська (est)
+locale.finland=Фінляндія
+locale.finnish=Фінська (fin)
+locale.france=Франція
+locale.french=Французька (fre)
+locale.georgia=Georgia
+locale.german=Німецька (deu)
+locale.germany=Германія
+locale.greece=Греція
+locale.greek=Грецька (ell/gre)
+locale.hungarian=Угорська (hun)
+locale.hungary=Угорщина
+locale.iceland=Ісландія
+locale.icelandic=Ісландська (ice)
+locale.ireland=Ірландія
+locale.italy.florence=Італія-Флоренція
+locale.italy.rome=Італія-Рим
+locale.latvia=Латвія
+locale.latvian=Латвійська (lav)
+locale.liechtenstein=Ліхтенштейн
+locale.lithuania=Литва
+locale.lithuanian=Литовська (lit)
+locale.luxembourg=Люксембург
+locale.luxemburgish=Люксембурзька (ltz)
+locale.malta=Мальта
+locale.maltese=Мальтійська (mlt)
+locale.moldova=Moldova
+locale.netherlands=Нідерланди
+locale.norway=Норвегія
+locale.norwegian=Норвезька (nor)
+locale.poland=Польща
+locale.polish=Польська (pol)
+locale.portugal=Португалія
+locale.portuguese=Португальська (por)
+locale.romania=Румунія
+locale.romanian=Румунська (rom)
+locale.russia.moscow=Росія - Москва
+locale.russia.st.petersburg=Russia - Saint Petersburg
+locale.russian=Російська(rus)
+locale.serbia=Сербія
+locale.serbian=Сербська (scc)
+locale.slovak=Словацька (slo)
+locale.slovakia=Словакія
+locale.slovenian=Словенська (slv)
+locale.spain=Іспанія
+locale.spanish=Іспанська (esp)
+locale.sweden=Швеція
+locale.swedish=Шведська (sve/swe)
+locale.switzerland=Швейцарія
+locale.turkey=Turkey
+locale.uk=Великобританія
+locale.ukraine=Ukraine
 registrationSucceed_t=Ви успішно зареєстровані
-romania_t=Румунія
-romanian_t=Румунська (rom)
-russiaMoscow_t=Росія - Москва
-russiaStPetersburg_t=Russia - Saint Petersburg
-russian_t=Російська(rus)
-serbia_t=Сербія
-serbian_t=Сербська (scc)
-slovak_t=Словацька (slo)
-slovakia_t=Словакія
-slovenia_t=Словенія
-slovenian_t=Словенська (slv)
-spain_t=Іспанія
-spanish_t=Іспанська (esp)
-sweden_t=Швеція
-swedish_t=Шведська (sve/swe)
-switzerland_t=Швейцарія
-turkey_t=Turkey
-uk_t=Великобританія
-ukraine_t=Ukraine
