--- a/portal/src/main/resources/i18n/messages_xx.properties
+++ b/portal/src/main/resources/i18n/messages_xx.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=XXXXXX
 _header.actions=XXXXXX
 _header.relatedcontent=XXXXXX
+_language_select.italian=XXXXXX
+_metadata.dc.contributor=XXXXXX
+_metadata.dc.coverage=XXXXXX
+_metadata.dc.creator=XXXXXX
+_metadata.dc.date=XXXXXX
+_metadata.dc.description=XXXXXX
+_metadata.dc.language=XXXXXX
+_metadata.dc.rights=XXXXXX
+_metadata.dc.subject=XXXXXX
+_metadata.dc.title=XXXXXX
+_metadata.dc.type=XXXXXX
+_metadata.dcterms.alternative=XXXXXX
+_metadata.dcterms.conforms.to=XXXXXX
+_metadata.dcterms.has.format=XXXXXX
+_metadata.dcterms.has.part=XXXXXX
+_metadata.dcterms.is.format.of=XXXXXX
+_metadata.dcterms.is.referenced.by=XXXXXX
+_metadata.dcterms.is.replaced.by=XXXXXX
+_metadata.dcterms.ispart.of=XXXXXX
+_metadata.dcterms.provenance=XXXXXX
+_metadata.dcterms.references=XXXXXX
+_metadata.dcterms.replaces=XXXXXX
+_metadata.dcterms.requires=XXXXXX
+_metadata.dcterms.spatial=XXXXXX
+_metadata.dcterms.temporal=XXXXXX
 _mine.date.saved=XXXXXX
 _mine.delete=XXXXXX
+_mine.last.name=Last name
 _mine.saved.items=XXXXXX
 _mine.saved.searches=XXXXXX
 _mine.saved.tags=XXXXXX
@@ -148,7 +174,9 @@ _unused.add=XXXXXX
 _unused.aggregator.explain=*An aggregator collects material from a range of other contributors, displays it on their own website and also channels it into Europeana.
 _unused.altprint=XXXXXX
 _unused.aplacetoshareideas=XXXXXX
+_unused.bosnia.and.herzegovina=XXXXXX
 _unused.browse.through.time=XXXXXX
+_unused.other=XXXXXX
 _unused.privacy=XXXXXX
 _unused.remember.me=XXXXXX
 _unused.remove=XXXXXX
@@ -157,6 +185,7 @@ _unused.share.your.ideas=XXXXXX
 _unused.show.all=XXXXXX
 _unused.sign.in=XXXXXX
 _unused.site.map=XXXXXX
+_unused.slovenia=XXXXXX
 _unused.sound=XXXXXX
 _unused.tag.added=XXXXXX
 _unused.tag.addition.failed=XXXXXX
@@ -170,107 +199,78 @@ _unused.view.as.xml=XXXXXX
 _unused.view.with.labels=XXXXXX
 _unused.view.without.labels=XXXXXX
 _unused.you.have.search.for=XXXXXX
-albania_t=XXXXXX
-armenia_t=XXXXXX
-austria_t=XXXXXX
-azerbaijan_t=XXXXXX
-belgium_t=XXXXXX
-bosniaAndHerzegovina_t=XXXXXX
-bulgaria_t=XXXXXX
-croatia_t=XXXXXX
-croatian_t=XXXXXX
-cyprus_t=XXXXXX
-czech_t=XXXXXX
-czechlanguage_t=XXXXXX
-danish_t=XXXXXX
-dc_contributor_t=XXXXXX
-dc_coverage_t=XXXXXX
-dc_creator_t=XXXXXX
-dc_date_t=XXXXXX
-dc_description_t=XXXXXX
 dc_format_t=XXXXXX
 dc_identifier_t=XXXXXX
-dc_language_t=XXXXXX
 dc_publisher_t=XXXXXX
 dc_relation_t=XXXXXX
-dc_rights_t=XXXXXX
 dc_source_t=XXXXXX
-dc_subject_t=XXXXXX
-dc_title_t=XXXXXX
-dc_type_t=XXXXXX
-dcterms_alternative_t=XXXXXX
-dcterms_conformsTo_t=XXXXXX
-dcterms_hasFormat_t=XXXXXX
-dcterms_hasPart_t=XXXXXX
-dcterms_isFormatOf_t=XXXXXX
-dcterms_isPartOf_t=XXXXXX
-dcterms_isReferencedBy_t=XXXXXX
-dcterms_isReplacedBy_t=XXXXXX
-dcterms_provenance_t=XXXXXX
-dcterms_references_t=XXXXXX
-dcterms_replaces_t=XXXXXX
-dcterms_requires_t=XXXXXX
-dcterms_spatial_t=XXXXXX
-dcterms_temporal_t=XXXXXX
-denmark_t=XXXXXX
-dutch_t=XXXXXX
-english_t=XXXXXX
-estonia_t=XXXXXX
-estonian_t=XXXXXX
-finland_t=XXXXXX
-finnish_t=XXXXXX
-france_t=XXXXXX
-french_t=XXXXXX
-georgia_t=XXXXXX
-german_t=XXXXXX
-germany_t=XXXXXX
-greece_t=XXXXXX
-greek_t=XXXXXX
-hungarian_t=XXXXXX
-hungary_t=XXXXXX
-iceland_t=XXXXXX
-icelandic_t=XXXXXX
-ireland_t=XXXXXX
-italian_t=XXXXXX
-italyFlorence_t=XXXXXX
-italyRome_t=XXXXXX
 languageDropDownList_t=XXXXXX
-lastName_t=Last name
-latvia_t=XXXXXX
-latvian_t=XXXXXX
-liechtenstein_t=XXXXXX
-lithuania_t=XXXXXX
-lithuanian_t=XXXXXX
-luxembourg_t=XXXXXX
-luxemburgish_t=XXXXXX
-malta_t=XXXXXX
-maltese_t=XXXXXX
-moldova_t=XXXXXX
-netherlands_t=XXXXXX
-norway_t=XXXXXX
-norwegian_t=XXXXXX
-other_t=XXXXXX
-poland_t=XXXXXX
-polish_t=XXXXXX
-portugal_t=XXXXXX
-portuguese_t=XXXXXX
+locale.albania=XXXXXX
+locale.armenia=XXXXXX
+locale.austria=XXXXXX
+locale.azerbaijan=XXXXXX
+locale.belgium=XXXXXX
+locale.bulgaria=XXXXXX
+locale.croatia=XXXXXX
+locale.croatian=XXXXXX
+locale.cyprus=XXXXXX
+locale.czech=XXXXXX
+locale.czechlanguage=XXXXXX
+locale.danish=XXXXXX
+locale.denmark=XXXXXX
+locale.dutch=XXXXXX
+locale.english=XXXXXX
+locale.estonia=XXXXXX
+locale.estonian=XXXXXX
+locale.finland=XXXXXX
+locale.finnish=XXXXXX
+locale.france=XXXXXX
+locale.french=XXXXXX
+locale.georgia=XXXXXX
+locale.german=XXXXXX
+locale.germany=XXXXXX
+locale.greece=XXXXXX
+locale.greek=XXXXXX
+locale.hungarian=XXXXXX
+locale.hungary=XXXXXX
+locale.iceland=XXXXXX
+locale.icelandic=XXXXXX
+locale.ireland=XXXXXX
+locale.italy.florence=XXXXXX
+locale.italy.rome=XXXXXX
+locale.latvia=XXXXXX
+locale.latvian=XXXXXX
+locale.liechtenstein=XXXXXX
+locale.lithuania=XXXXXX
+locale.lithuanian=XXXXXX
+locale.luxembourg=XXXXXX
+locale.luxemburgish=XXXXXX
+locale.malta=XXXXXX
+locale.maltese=XXXXXX
+locale.moldova=XXXXXX
+locale.netherlands=XXXXXX
+locale.norway=XXXXXX
+locale.norwegian=XXXXXX
+locale.poland=XXXXXX
+locale.polish=XXXXXX
+locale.portugal=XXXXXX
+locale.portuguese=XXXXXX
+locale.romania=XXXXXX
+locale.romanian=XXXXXX
+locale.russia.moscow=XXXXXX
+locale.russia.st.petersburg=XXXXXX
+locale.russian=XXXXXX
+locale.serbia=XXXXXX
+locale.serbian=XXXXXX
+locale.slovak=XXXXXX
+locale.slovakia=XXXXXX
+locale.slovenian=XXXXXX
+locale.spain=XXXXXX
+locale.spanish=XXXXXX
+locale.sweden=XXXXXX
+locale.swedish=XXXXXX
+locale.switzerland=XXXXXX
+locale.turkey=XXXXXX
+locale.uk=XXXXXX
+locale.ukraine=XXXXXX
 registrationSucceed_t=XXXXXX
-romania_t=XXXXXX
-romanian_t=XXXXXX
-russiaMoscow_t=XXXXXX
-russiaStPetersburg_t=XXXXXX
-russian_t=XXXXXX
-serbia_t=XXXXXX
-serbian_t=XXXXXX
-slovak_t=XXXXXX
-slovakia_t=XXXXXX
-slovenia_t=XXXXXX
-slovenian_t=XXXXXX
-spain_t=XXXXXX
-spanish_t=XXXXXX
-sweden_t=XXXXXX
-swedish_t=XXXXXX
-switzerland_t=XXXXXX
-turkey_t=XXXXXX
-uk_t=XXXXXX
-ukraine_t=XXXXXX
