--- a/portal/src/main/resources/i18n/messages_et.properties
+++ b/portal/src/main/resources/i18n/messages_et.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Päringu salvestamine ebaõnnestus
 _header.actions=Tegevused
 _header.relatedcontent=Sarnased objektid
+_language_select.italian=itaalia (ita)
+_metadata.dc.contributor=Kaasautor
+_metadata.dc.coverage=Hõlme
+_metadata.dc.creator=Autor
+_metadata.dc.date=Daatum
+_metadata.dc.description=Kirjeldus
+_metadata.dc.language=Keel
+_metadata.dc.rights=Õigused
+_metadata.dc.subject=Teema
+_metadata.dc.title=Pealkiri
+_metadata.dc.type=Tüüp
+_metadata.dcterms.alternative=Teine pealkiri
+_metadata.dcterms.conforms.to=On kooskõlas
+_metadata.dcterms.has.format=Omab vormingut:
+_metadata.dcterms.has.part=Omab osa:
+_metadata.dcterms.is.format.of=On vorming:
+_metadata.dcterms.is.referenced.by=On viidatud
+_metadata.dcterms.is.replaced.by=On asendatud
+_metadata.dcterms.ispart.of=On osa:
+_metadata.dcterms.provenance=Provenients
+_metadata.dcterms.references=Viitab
+_metadata.dcterms.replaces=Asendab
+_metadata.dcterms.requires=Vajalik ka
+_metadata.dcterms.spatial=Ruumiline hõlme
+_metadata.dcterms.temporal=Ajaline hõlme
 _mine.date.saved=Kuupäev salvestatud
 _mine.delete=Kustuta
+_mine.last.name=Perekonnanimi
 _mine.saved.items=Salvestatud objektid
 _mine.saved.searches=Salvestatud päringud
 _mine.saved.tags=Salvestatud märksõnad
@@ -148,7 +174,9 @@ _unused.add=Lisa
 _unused.aggregator.explain=*Vahendaja kogub materjali andmete valdajatelt, avaldab selle oma veebilehel ja suunab ühtlasi Europeanasse
 _unused.altprint=Lehekülje trükkimine
 _unused.aplacetoshareideas=koht ideede ja inspiratsiooni saamiseks. Otsige Europeana kogudest, järgige teiste kasutajate käidud radu ja jagage oma avastusi.
+_unused.bosnia.and.herzegovina=Bosnia ja Hertsegoviina
 _unused.browse.through.time=Sirvimine läbi aja
+_unused.other=muu
 _unused.privacy=Privaatsus
 _unused.remember.me=Mäleta mind selles arvutis
 _unused.remove=Eemalda
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Jagage oma mõtteid
 _unused.show.all=Näita kõiki
 _unused.sign.in=Sisselogimine
 _unused.site.map=Veebilehe kaart
+_unused.slovenia=Sloveenia
 _unused.sound=Heli
 _unused.tag.added=Märksõna lisatud
 _unused.tag.addition.failed=Märksõna lisamine ebaõnnestus
@@ -170,107 +199,78 @@ _unused.view.as.xml=Vaata XML-vormingus
 _unused.view.with.labels=Vaata koos siltidega
 _unused.view.without.labels=Vaata ilma siltideta
 _unused.you.have.search.for=Otsiti
-albania_t=Albaania
-armenia_t=Armeenia
-austria_t=Austria
-azerbaijan_t=Aserbaidžaan
-belgium_t=Belgia
-bosniaAndHerzegovina_t=Bosnia ja Hertsegoviina
-bulgaria_t=Bulgaaria
-croatia_t=Horvaatia
-croatian_t=horvaadi (hrv)
-cyprus_t=Küpros
-czech_t=Tšehhi
-czechlanguage_t=tšehhi (cze/cse)
-danish_t=taani (dan)
-dc_contributor_t=Kaasautor
-dc_coverage_t=Hõlme
-dc_creator_t=Autor
-dc_date_t=Daatum
-dc_description_t=Kirjeldus
 dc_format_t=Vorm
 dc_identifier_t=Identifikaator
-dc_language_t=Keel
 dc_publisher_t=Väljaandja
 dc_relation_t=Seos
-dc_rights_t=Õigused
 dc_source_t=Allikas
-dc_subject_t=Teema
-dc_title_t=Pealkiri
-dc_type_t=Tüüp
-dcterms_alternative_t=Teine pealkiri
-dcterms_conformsTo_t=On kooskõlas
-dcterms_hasFormat_t=Omab vormingut:
-dcterms_hasPart_t=Omab osa:
-dcterms_isFormatOf_t=On vorming:
-dcterms_isPartOf_t=On osa:
-dcterms_isReferencedBy_t=On viidatud
-dcterms_isReplacedBy_t=On asendatud
-dcterms_provenance_t=Provenients
-dcterms_references_t=Viitab
-dcterms_replaces_t=Asendab
-dcterms_requires_t=Vajalik ka
-dcterms_spatial_t=Ruumiline hõlme
-dcterms_temporal_t=Ajaline hõlme
-denmark_t=Taani
-dutch_t=hollandi (dut)
-english_t=inglise (eng)
-estonia_t=Eesti
-estonian_t=eesti (est)
-finland_t=Soome
-finnish_t=soome (fin)
-france_t=Prantsusmaa
-french_t=prantsuse (fre)
-georgia_t=Gruusia
-german_t=saksa (deu)
-germany_t=Saksamaa
-greece_t=Kreeka
-greek_t=kreeka (ell/gre)
-hungarian_t=ungari (hun)
-hungary_t=Ungari
-iceland_t=Island
-icelandic_t=islandi (ice)
-ireland_t=Iirimaa
-italian_t=itaalia (ita)
-italyFlorence_t=Itaalia-Firenze
-italyRome_t=Itaalia-Rooma
 languageDropDownList_t=Keel
-lastName_t=Perekonnanimi
-latvia_t=Läti
-latvian_t=läti (lav)
-liechtenstein_t=Liechtenstein
-lithuania_t=Leedu
-lithuanian_t=leedu (lit)
-luxembourg_t=Luksemburg
-luxemburgish_t=letseburgi (ltz)
-malta_t=Malta
-maltese_t=malta (mlt)
-moldova_t=Moldova
-netherlands_t=Holland
-norway_t=Norra
-norwegian_t=norra (nor)
-other_t=muu
-poland_t=Poola
-polish_t=poola (pol)
-portugal_t=Portugal
-portuguese_t=portugali (por)
+locale.albania=Albaania
+locale.armenia=Armeenia
+locale.austria=Austria
+locale.azerbaijan=Aserbaidžaan
+locale.belgium=Belgia
+locale.bulgaria=Bulgaaria
+locale.croatia=Horvaatia
+locale.croatian=horvaadi (hrv)
+locale.cyprus=Küpros
+locale.czech=Tšehhi
+locale.czechlanguage=tšehhi (cze/cse)
+locale.danish=taani (dan)
+locale.denmark=Taani
+locale.dutch=hollandi (dut)
+locale.english=inglise (eng)
+locale.estonia=Eesti
+locale.estonian=eesti (est)
+locale.finland=Soome
+locale.finnish=soome (fin)
+locale.france=Prantsusmaa
+locale.french=prantsuse (fre)
+locale.georgia=Gruusia
+locale.german=saksa (deu)
+locale.germany=Saksamaa
+locale.greece=Kreeka
+locale.greek=kreeka (ell/gre)
+locale.hungarian=ungari (hun)
+locale.hungary=Ungari
+locale.iceland=Island
+locale.icelandic=islandi (ice)
+locale.ireland=Iirimaa
+locale.italy.florence=Itaalia-Firenze
+locale.italy.rome=Itaalia-Rooma
+locale.latvia=Läti
+locale.latvian=läti (lav)
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Leedu
+locale.lithuanian=leedu (lit)
+locale.luxembourg=Luksemburg
+locale.luxemburgish=letseburgi (ltz)
+locale.malta=Malta
+locale.maltese=malta (mlt)
+locale.moldova=Moldova
+locale.netherlands=Holland
+locale.norway=Norra
+locale.norwegian=norra (nor)
+locale.poland=Poola
+locale.polish=poola (pol)
+locale.portugal=Portugal
+locale.portuguese=portugali (por)
+locale.romania=Rumeenia
+locale.romanian=rumeenia (rom)
+locale.russia.moscow=Venemaa - Moskva
+locale.russia.st.petersburg=Venemaa - Peterburi
+locale.russian=vene (rus)
+locale.serbia=Serbia
+locale.serbian=serbia (scc)
+locale.slovak=slovaki (slo)
+locale.slovakia=Slovakkia
+locale.slovenian=sloveeni (slv)
+locale.spain=Hispaania
+locale.spanish=hispaania (esp)
+locale.sweden=Rootsi
+locale.swedish=rootsi (sve/swe)
+locale.switzerland=Šveits
+locale.turkey=Türgi
+locale.uk=Suurbritannia
+locale.ukraine=Ukraina
 registrationSucceed_t=Registreerumine õnnestus
-romania_t=Rumeenia
-romanian_t=rumeenia (rom)
-russiaMoscow_t=Venemaa - Moskva
-russiaStPetersburg_t=Venemaa - Peterburi
-russian_t=vene (rus)
-serbia_t=Serbia
-serbian_t=serbia (scc)
-slovak_t=slovaki (slo)
-slovakia_t=Slovakkia
-slovenia_t=Sloveenia
-slovenian_t=sloveeni (slv)
-spain_t=Hispaania
-spanish_t=hispaania (esp)
-sweden_t=Rootsi
-swedish_t=rootsi (sve/swe)
-switzerland_t=Šveits
-turkey_t=Türgi
-uk_t=Suurbritannia
-ukraine_t=Ukraina
