--- a/portal/src/main/resources/i18n/messages_no.properties
+++ b/portal/src/main/resources/i18n/messages_no.properties
@@ -117,8 +117,39 @@ _facet.by.year=null
 _failure.search.saved=Lagring av søk feilet
 _header.actions=via hendelser
 _header.relatedcontent=Relatert innhold
+_language_select.italian=Italiensk
+_metadata.dc.contributor=Bidragsyter
+_metadata.dc.coverage=Dekning
+_metadata.dc.creator=Forfatter
+_metadata.dc.date=Dato
+_metadata.dc.description=Beskrivelse
+_metadata.dc.language=Språk
+_metadata.dc.rights=Rettigheter
+_metadata.dc.subject=Emne
+_metadata.dc.title=Tittel
+_metadata.dc.type=Ressurstype
+_metadata.dcterms.alternative=Alternativ tittel
+_metadata.dcterms.conforms.to=Er i samsvar med
+_metadata.dcterms.created2=Dato
+_metadata.dcterms.has.format=Har format
+_metadata.dcterms.has.part=Har del
+_metadata.dcterms.is.format.of=Er format av
+_metadata.dcterms.is.referenced.by=Er referert av
+_metadata.dcterms.is.replaced.by=Er erstattet av
+_metadata.dcterms.ispart.of=Del av
+_metadata.dcterms.provenance=proveniens
+_metadata.dcterms.references=Refererer til
+_metadata.dcterms.replaces=Erstatter
+_metadata.dcterms.requires=Forutsetter
+_metadata.dcterms.spatial=Sted
+_metadata.dcterms.temporal=Tidsrom
+_metadata.europeana.country=Land
+_metadata.europeana.data.provider=Tilbyder
+_metadata.europeana.provider=Tilbyder
+_metadata.europeana.type=Type
 _mine.date.saved=Dato lagret
 _mine.delete=Slett
+_mine.last.name=Etternavn
 _mine.saved.items=Lagrede objekter
 _mine.saved.searches=Lagrede søk
 _mine.saved.tags=Lagrede tags
@@ -148,7 +179,9 @@ _unused.add=Legg til
 _unused.aggregator.explain=En portal samler materiale fra en rekke andre bidragsytere, viser det på egne nettsteder og kanaliserer det inn i Norvegiana.
 _unused.altprint=Skriv ut denne siden
 _unused.aplacetoshareideas=et sted for inspirasjon og ideer. Søk i de kulturelle samlingene i Europa, finn nye brukerveier og del dine funn
+_unused.bosnia.and.herzegovina=Bosnia Herzegovina
 _unused.browse.through.time=Browse via tidslinje
+_unused.other=Andre
 _unused.privacy=Privatvern
 _unused.remember.me=Husk meg på denne maskina
 _unused.remove=Fjern
@@ -157,6 +190,7 @@ _unused.share.your.ideas=Del dine ideer
 _unused.show.all=Vis alle
 _unused.sign.in=Logg inn
 _unused.site.map=Nettkart
+_unused.slovenia=Slovenia
 _unused.sound=Lyd
 _unused.tag.added=Tag lagt til
 _unused.tag.addition.failed=Tag kunne ikke legges til
@@ -173,113 +207,79 @@ _unused.you.have.search.for=Du har søkt på
 abm_contentProvider_t=Institusjon
 abm_county_t=Fylke
 abm_municipality_t=Kommune
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Østerrike
-azerbaijan_t=Azerbadgan
-belgium_t=Belgia
-bosniaAndHerzegovina_t=Bosnia Herzegovina
-bulgaria_t=Bulgaria
-croatia_t=Kroatia
-croatian_t=Kroatisk
-cyprus_t=Kypros
-czech_t=Tjekkia
-czechlanguage_t=Tjekkisk
-danish_t=Dansk
-dc_contributor_t=Bidragsyter
-dc_coverage_t=Dekning
-dc_creator_t=Forfatter
-dc_date_t=Dato
-dc_description_t=Beskrivelse
 dc_format_t=Format
 dc_identifier_t=Identifikator
-dc_language_t=Språk
 dc_publisher_t=Utgiver
 dc_relation_t=Relasjon
-dc_rights_t=Rettigheter
 dc_source_t=Kilde
-dc_subject_t=Emne
-dc_title_t=Tittel
-dc_type_t=Ressurstype
-dcterms_alternative_t=Alternativ tittel
-dcterms_conformsTo_t=Er i samsvar med
-dcterms_created_t=Dato
-dcterms_hasFormat_t=Har format
-dcterms_hasPart_t=Har del
-dcterms_isFormatOf_t=Er format av
-dcterms_isPartOf_t=Del av
-dcterms_isReferencedBy_t=Er referert av
-dcterms_isReplacedBy_t=Er erstattet av
-dcterms_provenance_t=proveniens
-dcterms_references_t=Refererer til
-dcterms_replaces_t=Erstatter
-dcterms_requires_t=Forutsetter
-dcterms_spatial_t=Sted
-dcterms_temporal_t=Tidsrom
-denmark_t=Danmark
-dutch_t=Nederlandsk
-english_t=Engelsk
-estonia_t=Estland
-estonian_t=Estisk
-europeana_country_t=Land
-europeana_dataProvider_t=Tilbyder
-europeana_provider_t=Tilbyder
-europeana_type_t=Type
-finland_t=Finland
-finnish_t=Finsk
 form.sumbit=Send
-france_t=Frankrike
-french_t=Fransk
-georgia_t=Georgia
-german_t=Tysk
-germany_t=Tyskland
-greece_t=Hellas
-greek_t=Gresk
-hungarian_t=Ungarsk
-hungary_t=Ungarn
-iceland_t=Island
-icelandic_t=Islandsk
-ireland_t=Irland
-italian_t=Italiensk
-italyFlorence_t=Italia - Firenze
-italyRome_t=Italia - Roma
 languageDropDownList_t=Språk
-lastName_t=Etternavn
-latvia_t=Latvia
-latvian_t=Lettisk
-liechtenstein_t=Liechtenstein
-lithuania_t=Litauen
-lithuanian_t=Litauisk
-luxembourg_t=Luxembourg
-luxemburgish_t=Luxemburgsk
-malta_t=Malta
-maltese_t=Maltesisk
-moldova_t=Moldova
-netherlands_t=Nederland
-norway_t=Norge
-norwegian_t=Norsk
-other_t=Andre
-poland_t=Polen
-polish_t=Polsk
-portugal_t=Portugal
-portuguese_t=Portugisisk
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Østerrike
+locale.azerbaijan=Azerbadgan
+locale.belgium=Belgia
+locale.bulgaria=Bulgaria
+locale.croatia=Kroatia
+locale.croatian=Kroatisk
+locale.cyprus=Kypros
+locale.czech=Tjekkia
+locale.czechlanguage=Tjekkisk
+locale.danish=Dansk
+locale.denmark=Danmark
+locale.dutch=Nederlandsk
+locale.english=Engelsk
+locale.estonia=Estland
+locale.estonian=Estisk
+locale.finland=Finland
+locale.finnish=Finsk
+locale.france=Frankrike
+locale.french=Fransk
+locale.georgia=Georgia
+locale.german=Tysk
+locale.germany=Tyskland
+locale.greece=Hellas
+locale.greek=Gresk
+locale.hungarian=Ungarsk
+locale.hungary=Ungarn
+locale.iceland=Island
+locale.icelandic=Islandsk
+locale.ireland=Irland
+locale.italy.florence=Italia - Firenze
+locale.italy.rome=Italia - Roma
+locale.latvia=Latvia
+locale.latvian=Lettisk
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Litauen
+locale.lithuanian=Litauisk
+locale.luxembourg=Luxembourg
+locale.luxemburgish=Luxemburgsk
+locale.malta=Malta
+locale.maltese=Maltesisk
+locale.moldova=Moldova
+locale.netherlands=Nederland
+locale.norway=Norge
+locale.norwegian=Norsk
+locale.poland=Polen
+locale.polish=Polsk
+locale.portugal=Portugal
+locale.portuguese=Portugisisk
+locale.romania=Romania
+locale.romanian=Rumensk
+locale.russia.moscow=Russland - Moskva
+locale.russia.st.petersburg=Russland - St. Petersburg
+locale.russian=Russisk
+locale.serbia=Serbia
+locale.serbian=Serbisk
+locale.slovak=Slovakisk
+locale.slovakia=Slovakia
+locale.slovenian=Slovensk
+locale.spain=Spania
+locale.spanish=Spansk
+locale.sweden=Sverige
+locale.swedish=Svensk
+locale.switzerland=Sveits
+locale.turkey=Tyrkia
+locale.uk=Storbritannia
+locale.ukraine=Ukraina
 registrationSucceed_t=Du er nå registrert
-romania_t=Romania
-romanian_t=Rumensk
-russiaMoscow_t=Russland - Moskva
-russiaStPetersburg_t=Russland - St. Petersburg
-russian_t=Russisk
-serbia_t=Serbia
-serbian_t=Serbisk
-slovak_t=Slovakisk
-slovakia_t=Slovakia
-slovenia_t=Slovenia
-slovenian_t=Slovensk
-spain_t=Spania
-spanish_t=Spansk
-sweden_t=Sverige
-swedish_t=Svensk
-switzerland_t=Sveits
-turkey_t=Tyrkia
-uk_t=Storbritannia
-ukraine_t=Ukraina
