--- a/portal/src/main/resources/i18n/messages_pl.properties
+++ b/portal/src/main/resources/i18n/messages_pl.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Zachowanie wyszukiwania nie powiodło się
 _header.actions=Działania
 _header.relatedcontent=Powiązana zawartość
+_language_select.italian=Włoski (ita)
+_metadata.dc.contributor=Współautor
+_metadata.dc.coverage=Zakres
+_metadata.dc.creator=Autor
+_metadata.dc.date=Data
+_metadata.dc.description=Opis
+_metadata.dc.language=Język
+_metadata.dc.rights=Prawa
+_metadata.dc.subject=Temat
+_metadata.dc.title=Tytuł
+_metadata.dc.type=Typ
+_metadata.dcterms.alternative=Tytuł odmienny
+_metadata.dcterms.conforms.to=Stosuje się do
+_metadata.dcterms.has.format=Ma format
+_metadata.dcterms.has.part=Jest częścią
+_metadata.dcterms.is.format.of=Jest formatem
+_metadata.dcterms.is.referenced.by=Jest odsyłaczem od
+_metadata.dcterms.is.replaced.by=Jest zastępowane przez
+_metadata.dcterms.ispart.of=Stanowi część
+_metadata.dcterms.provenance=Proweniencja
+_metadata.dcterms.references=Odsyła do
+_metadata.dcterms.replaces=Zastępuje
+_metadata.dcterms.requires=Wymaga
+_metadata.dcterms.spatial=Zasięg terytorialny
+_metadata.dcterms.temporal=Zakres czasowy
 _mine.date.saved=Data zachowana
 _mine.delete=Usuń
+_mine.last.name=Nazwisko
 _mine.saved.items=Zachowane dokumenty
 _mine.saved.searches=Zachowane wyszukiwania
 _mine.saved.tags=Zachowane tagi
@@ -148,7 +174,9 @@ _unused.add=Dodaj
 _unused.aggregator.explain=Agregator to instytucja, która gromadzi zasoby cyfrowe innych dostawców, udostępnia je w swoim portalu i przekazuje do Europeany.
 _unused.altprint=Drukuj stronę
 _unused.aplacetoshareideas=miejsce inspiracji i pomysłów. Przeszukuj kolekcje europejskiego dziedzictwa kulturowego, współpracuj z innymi użytkownikami i dziel się swoimi odkryciami.
+_unused.bosnia.and.herzegovina=Bośnia i Hercegowina
 _unused.browse.through.time=Przeglądaj oś czasu
+_unused.other=Inne
 _unused.privacy=Prywatność
 _unused.remember.me=Zapamiętaj mnie na tym komputerze
 _unused.remove=Usuń
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Podziel się pomysłami
 _unused.show.all=Pokaż wszystko
 _unused.sign.in=Zarejestruj się
 _unused.site.map=Mapa serwisu
+_unused.slovenia=Słowenia
 _unused.sound=Nagranie dźwiękowe
 _unused.tag.added=Tag dodany
 _unused.tag.addition.failed=Dodanie tagu nie powiodło się
@@ -170,107 +199,78 @@ _unused.view.as.xml=Widok XML
 _unused.view.with.labels=Widok z etykietami
 _unused.view.without.labels=Widok bez etykiet
 _unused.you.have.search.for=Szukasz
-albania_t=Albania
-armenia_t=Armenia
-austria_t=Austria
-azerbaijan_t=Azerbejdżan
-belgium_t=Belgia
-bosniaAndHerzegovina_t=Bośnia i Hercegowina
-bulgaria_t=Bułgaria
-croatia_t=Chorwacja
-croatian_t=Chorwacki (hrv)
-cyprus_t=Cypr
-czech_t=Republika Czeska
-czechlanguage_t=czeski (cze/cse)
-danish_t=Duński (dan)
-dc_contributor_t=Współautor
-dc_coverage_t=Zakres
-dc_creator_t=Autor
-dc_date_t=Data
-dc_description_t=Opis
 dc_format_t=Format
 dc_identifier_t=Identyfikator
-dc_language_t=Język
 dc_publisher_t=Wydawca
 dc_relation_t=Relacja
-dc_rights_t=Prawa
 dc_source_t=Źródło
-dc_subject_t=Temat
-dc_title_t=Tytuł
-dc_type_t=Typ
-dcterms_alternative_t=Tytuł odmienny
-dcterms_conformsTo_t=Stosuje się do
-dcterms_hasFormat_t=Ma format
-dcterms_hasPart_t=Jest częścią
-dcterms_isFormatOf_t=Jest formatem
-dcterms_isPartOf_t=Stanowi część
-dcterms_isReferencedBy_t=Jest odsyłaczem od
-dcterms_isReplacedBy_t=Jest zastępowane przez
-dcterms_provenance_t=Proweniencja
-dcterms_references_t=Odsyła do
-dcterms_replaces_t=Zastępuje
-dcterms_requires_t=Wymaga
-dcterms_spatial_t=Zasięg terytorialny
-dcterms_temporal_t=Zakres czasowy
-denmark_t=Dania
-dutch_t=Holenderski (dut)
-english_t=Angielski (eng)
-estonia_t=Estonia
-estonian_t=Estoński (est)
-finland_t=Finlandia
-finnish_t=Fiński (fin)
-france_t=Francja
-french_t=Francuski (fre)
-georgia_t=Gruzja
-german_t=Niemiecki (deu)
-germany_t=Niemcy
-greece_t=Grecja
-greek_t=Grecki (ell/gre)
-hungarian_t=węgierski (hun)
-hungary_t=Węgry
-iceland_t=Islandia
-icelandic_t=Islandzki (ice)
-ireland_t=Irlandia
-italian_t=Włoski (ita)
-italyFlorence_t=Włochy - Florencja
-italyRome_t=Włochy - Rzym
 languageDropDownList_t=Język
-lastName_t=Nazwisko
-latvia_t=Łotwa
-latvian_t=Łotewski (lav)
-liechtenstein_t=Lichtenstein
-lithuania_t=Litwa
-lithuanian_t=Litewski (lit)
-luxembourg_t=Luksemburg
-luxemburgish_t=luksemburski
-malta_t=Malta
-maltese_t=maltański
-moldova_t=Mołdawia
-netherlands_t=Holandia
-norway_t=Norwegia
-norwegian_t=norweski
-other_t=Inne
-poland_t=Polska
-polish_t=polski
-portugal_t=Portugalia
-portuguese_t=Portugalski (por)
+locale.albania=Albania
+locale.armenia=Armenia
+locale.austria=Austria
+locale.azerbaijan=Azerbejdżan
+locale.belgium=Belgia
+locale.bulgaria=Bułgaria
+locale.croatia=Chorwacja
+locale.croatian=Chorwacki (hrv)
+locale.cyprus=Cypr
+locale.czech=Republika Czeska
+locale.czechlanguage=czeski (cze/cse)
+locale.danish=Duński (dan)
+locale.denmark=Dania
+locale.dutch=Holenderski (dut)
+locale.english=Angielski (eng)
+locale.estonia=Estonia
+locale.estonian=Estoński (est)
+locale.finland=Finlandia
+locale.finnish=Fiński (fin)
+locale.france=Francja
+locale.french=Francuski (fre)
+locale.georgia=Gruzja
+locale.german=Niemiecki (deu)
+locale.germany=Niemcy
+locale.greece=Grecja
+locale.greek=Grecki (ell/gre)
+locale.hungarian=węgierski (hun)
+locale.hungary=Węgry
+locale.iceland=Islandia
+locale.icelandic=Islandzki (ice)
+locale.ireland=Irlandia
+locale.italy.florence=Włochy - Florencja
+locale.italy.rome=Włochy - Rzym
+locale.latvia=Łotwa
+locale.latvian=Łotewski (lav)
+locale.liechtenstein=Lichtenstein
+locale.lithuania=Litwa
+locale.lithuanian=Litewski (lit)
+locale.luxembourg=Luksemburg
+locale.luxemburgish=luksemburski
+locale.malta=Malta
+locale.maltese=maltański
+locale.moldova=Mołdawia
+locale.netherlands=Holandia
+locale.norway=Norwegia
+locale.norwegian=norweski
+locale.poland=Polska
+locale.polish=polski
+locale.portugal=Portugalia
+locale.portuguese=Portugalski (por)
+locale.romania=Rumunia
+locale.romanian=rumuński
+locale.russia.moscow=Rosja - Moskwa
+locale.russia.st.petersburg=Rosja - Sankt Petersburg
+locale.russian=rosyjski
+locale.serbia=Serbia
+locale.serbian=Serbski (scc)
+locale.slovak=słowacki (slo)
+locale.slovakia=Słowacja
+locale.slovenian=Słoweński (slv)
+locale.spain=Hiszpania
+locale.spanish=Hiszpański (esp)
+locale.sweden=Szwecja
+locale.swedish=Szwedzki (sve/swe)
+locale.switzerland=Szwajcaria
+locale.turkey=Turcja
+locale.uk=Wielka Brytania
+locale.ukraine=Ukraina
 registrationSucceed_t=Rejestracja zakończona powodzeniem
-romania_t=Rumunia
-romanian_t=rumuński
-russiaMoscow_t=Rosja - Moskwa
-russiaStPetersburg_t=Rosja - Sankt Petersburg
-russian_t=rosyjski
-serbia_t=Serbia
-serbian_t=Serbski (scc)
-slovak_t=słowacki (slo)
-slovakia_t=Słowacja
-slovenia_t=Słowenia
-slovenian_t=Słoweński (slv)
-spain_t=Hiszpania
-spanish_t=Hiszpański (esp)
-sweden_t=Szwecja
-swedish_t=Szwedzki (sve/swe)
-switzerland_t=Szwajcaria
-turkey_t=Turcja
-uk_t=Wielka Brytania
-ukraine_t=Ukraina
