--- a/portal/src/main/resources/i18n/messages_sv.properties
+++ b/portal/src/main/resources/i18n/messages_sv.properties
@@ -117,8 +117,34 @@ _facet.by.year=null
 _failure.search.saved=Det gick inte att spara sökningen
 _header.actions=Åtgärder
 _header.relatedcontent=Liknande material
+_language_select.italian=Italienska (ita)
+_metadata.dc.contributor=Medarbetare
+_metadata.dc.coverage=Täckning
+_metadata.dc.creator=Författare
+_metadata.dc.date=Datum
+_metadata.dc.description=Beskrivning
+_metadata.dc.language=Språk
+_metadata.dc.rights=Rättigheter
+_metadata.dc.subject=Ämne
+_metadata.dc.title=Titel
+_metadata.dc.type=Resurstyp
+_metadata.dcterms.alternative=Alternativ titel
+_metadata.dcterms.conforms.to=motsvarar
+_metadata.dcterms.has.format=Har format
+_metadata.dcterms.has.part=Har delen
+_metadata.dcterms.is.format.of=Är format av
+_metadata.dcterms.is.referenced.by=Refereras av
+_metadata.dcterms.is.replaced.by=Ersatt av
+_metadata.dcterms.ispart.of=Del av
+_metadata.dcterms.provenance=Ursprung
+_metadata.dcterms.references=Referenser
+_metadata.dcterms.replaces=Ersätter
+_metadata.dcterms.requires=Kräver
+_metadata.dcterms.spatial=Plats
+_metadata.dcterms.temporal=Tid
 _mine.date.saved=Informationen har sparats
 _mine.delete=Ta bort
+_mine.last.name=Efternamn
 _mine.saved.items=Sparade objekt
 _mine.saved.searches=Sparade sökningar
 _mine.saved.tags=Sparade märkningar
@@ -148,7 +174,9 @@ _unused.add=Lägg till
 _unused.aggregator.explain=*En aggregator samlar in material från en mängd olika bidragsgivare, visar det på sin egen webbplats och kanaliserar det dessutom till Europeana.
 _unused.altprint=Skriv ut den här sidan
 _unused.aplacetoshareideas=en plats för inspiration och idéer. Sök bland Europas kulturella samlingar, upptäck andras favoriter och dela med dig av dina upptäckter.
+_unused.bosnia.and.herzegovina=Bosnien och Hercegovina
 _unused.browse.through.time=Bläddra bland alla tider
+_unused.other=Annat
 _unused.privacy=Sekretess
 _unused.remember.me=Kom ihåg mig på den här datorn
 _unused.remove=Ta bort
@@ -157,6 +185,7 @@ _unused.share.your.ideas=Dela med dig av dina idéer
 _unused.show.all=Visa alla
 _unused.sign.in=Logga in
 _unused.site.map=Webbplatsöversikt
+_unused.slovenia=Slovenien
 _unused.sound=Ljud
 _unused.tag.added=Märkningen har lagts till
 _unused.tag.addition.failed=Det gick inte att lägga till märkningen
@@ -170,107 +199,78 @@ _unused.view.as.xml=Visa som XML
 _unused.view.with.labels=Visa med etiketter
 _unused.view.without.labels=Visa utan etiketter
 _unused.you.have.search.for=Du sökte efter
-albania_t=Albanien
-armenia_t=Armenien
-austria_t=Österrike
-azerbaijan_t=Azerbajdzjan
-belgium_t=Belgien
-bosniaAndHerzegovina_t=Bosnien och Hercegovina
-bulgaria_t=Bulgarien
-croatia_t=Kroatien
-croatian_t=Kroatiska (hrv)
-cyprus_t=Cypern
-czech_t=Tjeckien
-czechlanguage_t=Tjeckiska (cze/cse)
-danish_t=Danska (dan)
-dc_contributor_t=Medarbetare
-dc_coverage_t=Täckning
-dc_creator_t=Författare
-dc_date_t=Datum
-dc_description_t=Beskrivning
 dc_format_t=Format
 dc_identifier_t=Identifikator
-dc_language_t=Språk
 dc_publisher_t=Utgivare
 dc_relation_t=Relation
-dc_rights_t=Rättigheter
 dc_source_t=Källa
-dc_subject_t=Ämne
-dc_title_t=Titel
-dc_type_t=Resurstyp
-dcterms_alternative_t=Alternativ titel
-dcterms_conformsTo_t=motsvarar
-dcterms_hasFormat_t=Har format
-dcterms_hasPart_t=Har delen
-dcterms_isFormatOf_t=Är format av
-dcterms_isPartOf_t=Del av
-dcterms_isReferencedBy_t=Refereras av
-dcterms_isReplacedBy_t=Ersatt av
-dcterms_provenance_t=Ursprung
-dcterms_references_t=Referenser
-dcterms_replaces_t=Ersätter
-dcterms_requires_t=Kräver
-dcterms_spatial_t=Plats
-dcterms_temporal_t=Tid
-denmark_t=Danmark
-dutch_t=Nederländska (dut)
-english_t=Engelska (eng)
-estonia_t=Estland
-estonian_t=Estniska (est)
-finland_t=Finland
-finnish_t=Finska (fin)
-france_t=Frankrike
-french_t=Franska (fre)
-georgia_t=Georgien
-german_t=Tyska (ger)
-germany_t=Tyskland
-greece_t=Grekland
-greek_t=Grekiska (ell/gre)
-hungarian_t=Ungerska (hun)
-hungary_t=Ungern
-iceland_t=Island
-icelandic_t=Isländska (ice)
-ireland_t=Irland
-italian_t=Italienska (ita)
-italyFlorence_t=Italien-Florens
-italyRome_t=Italien-Rom
 languageDropDownList_t=Språk
-lastName_t=Efternamn
-latvia_t=Lettland
-latvian_t=Lettiska (lav)
-liechtenstein_t=Liechtenstein
-lithuania_t=Litauen
-lithuanian_t=Litauiska (lit)
-luxembourg_t=Luxemburg
-luxemburgish_t=Luxemburgiska (ltz)
-malta_t=Malta
-maltese_t=Maltesiska (mlt)
-moldova_t=Moldavien
-netherlands_t=Nederländerna
-norway_t=Norge
-norwegian_t=Norska (nor)
-other_t=Annat
-poland_t=Polen
-polish_t=Polska (pol)
-portugal_t=Portugal
-portuguese_t=Portugisiska (por)
+locale.albania=Albanien
+locale.armenia=Armenien
+locale.austria=Österrike
+locale.azerbaijan=Azerbajdzjan
+locale.belgium=Belgien
+locale.bulgaria=Bulgarien
+locale.croatia=Kroatien
+locale.croatian=Kroatiska (hrv)
+locale.cyprus=Cypern
+locale.czech=Tjeckien
+locale.czechlanguage=Tjeckiska (cze/cse)
+locale.danish=Danska (dan)
+locale.denmark=Danmark
+locale.dutch=Nederländska (dut)
+locale.english=Engelska (eng)
+locale.estonia=Estland
+locale.estonian=Estniska (est)
+locale.finland=Finland
+locale.finnish=Finska (fin)
+locale.france=Frankrike
+locale.french=Franska (fre)
+locale.georgia=Georgien
+locale.german=Tyska (ger)
+locale.germany=Tyskland
+locale.greece=Grekland
+locale.greek=Grekiska (ell/gre)
+locale.hungarian=Ungerska (hun)
+locale.hungary=Ungern
+locale.iceland=Island
+locale.icelandic=Isländska (ice)
+locale.ireland=Irland
+locale.italy.florence=Italien-Florens
+locale.italy.rome=Italien-Rom
+locale.latvia=Lettland
+locale.latvian=Lettiska (lav)
+locale.liechtenstein=Liechtenstein
+locale.lithuania=Litauen
+locale.lithuanian=Litauiska (lit)
+locale.luxembourg=Luxemburg
+locale.luxemburgish=Luxemburgiska (ltz)
+locale.malta=Malta
+locale.maltese=Maltesiska (mlt)
+locale.moldova=Moldavien
+locale.netherlands=Nederländerna
+locale.norway=Norge
+locale.norwegian=Norska (nor)
+locale.poland=Polen
+locale.polish=Polska (pol)
+locale.portugal=Portugal
+locale.portuguese=Portugisiska (por)
+locale.romania=Rumänien
+locale.romanian=Rumänska (rom)
+locale.russia.moscow=Ryssland - Moskva
+locale.russia.st.petersburg=Ryssland - Sankt Petersburg
+locale.russian=Ryska (rus)
+locale.serbia=Serbien
+locale.serbian=Serbiska (scc)
+locale.slovak=Slovakiska (slo)
+locale.slovakia=Slovakien
+locale.slovenian=Slovenska (slv)
+locale.spain=Spanien
+locale.spanish=Spanska (esp)
+locale.sweden=Sverige
+locale.swedish=Svenska (sve/swe)
+locale.switzerland=Schweiz
+locale.turkey=Turkiet
+locale.uk=Storbritannien
+locale.ukraine=Ukraina
 registrationSucceed_t=Du har nu registrerat dig
-romania_t=Rumänien
-romanian_t=Rumänska (rom)
-russiaMoscow_t=Ryssland - Moskva
-russiaStPetersburg_t=Ryssland - Sankt Petersburg
-russian_t=Ryska (rus)
-serbia_t=Serbien
-serbian_t=Serbiska (scc)
-slovak_t=Slovakiska (slo)
-slovakia_t=Slovakien
-slovenia_t=Slovenien
-slovenian_t=Slovenska (slv)
-spain_t=Spanien
-spanish_t=Spanska (esp)
-sweden_t=Sverige
-swedish_t=Svenska (sve/swe)
-switzerland_t=Schweiz
-turkey_t=Turkiet
-uk_t=Storbritannien
-ukraine_t=Ukraina
